i18n: Update translations data from Transifex.

--- a/static/locale/es/translations.json
+++ b/static/locale/es/translations.json
@@ -17,7 +17,6 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "<p>El canal <b>__stream_name__</b> no existe.</p><p>Gestiona tus suscripciones <a href='#streams/all'>en tu página de canales</a>.</p>",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "<strong>__name__</strong> no tiene suscripción en este canal. No se le notificará si le mencionas.",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "<strong>__name__</strong> no tiene suscripción en este canal. No se le notificará salvo que le suscribas.",
-  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "Un canal necesita tener un nombre",
   "A stream with this name already exists": "Ya existe un canal con este nombre",
   "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
@@ -35,6 +34,7 @@
   "Add a new profile field": "Añadir un nuevo campo de perfil",
   "Add a new user group": "Añadir un nuevo grupo de usuarios",
   "Add alert word": "Añadir alerta",
+  "Add choice": "",
   "Add emoji": "Añadir emoticono",
   "Add emoji reaction": "Añadir reacción de emoticono",
   "Add emoji reaction (:)": "Añadir una reacción de emoticono (:)",
@@ -43,11 +43,11 @@
   "Add member...": "Añadir miembro...",
   "Add members of your organization to mentionable user groups.": "Añadir miembros de tu organización a grupos de usuarios mencionables.",
   "Add new default stream": "Añadir un nuevo canal por defecto",
-  "Add option": "Añadir opción",
   "Add profile field": "Añadir un campo de perfil",
   "Add question": "Añadir pregunta",
   "Add stream": "Añadir canal",
   "Add task": "Añadir tarea",
+  "Add video call": "Añadir videollamada",
   "Added successfully!": "¡Añadido exitosamente!",
   "Administrator": "Administrador",
   "Administrators can always delete any message.": "Los administradores siempre pueden borrar cualquier mensaje.",
@@ -61,8 +61,8 @@
   "Alert words allow you to be notified as if you were @-mentioned when certain words or phrases are used in Zulip.": "Las alertas te permiten ser notificado como si te @-mencionasen cuando ciertas palabras o frases son usadas en Zulip.",
   "All admins, and members with accounts at least 3 days old.": "Todos los administradores, y cualquier miembro con una cuenta de hace al menos 3 días.",
   "All admins, and members with accounts at least N days old.": "Todos los administradores, y cualquier miembro con una cuenta de hace al menos N días.",
-  "All messages": "Todos los mensajes",
   "All streams": "Todos los canales",
+  "Allow message content in missed message emails": "",
   "Allow message deleting": "Permitir borrado de mensajes",
   "Allow message editing": "Permitir la edición de mensajes",
   "Allow subdomains": "Permitir subdominios",
@@ -80,6 +80,7 @@
   "Are invitations required for joining the organization?": "¿Hacen falta invitaciones para unirse a la organización?",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "¿Estás seguro de que quieres crear el canal '__stream_name__' y suscribir __count__ usuarios a él?",
   "Are you sure you want to delete <b>__group_name__</b>?": "¿Seguro que deseas eliminar <b>__group_name__</b>?",
+  "Are you sure you want to delete all messages in <b>__topic_name__</b>?": "",
   "Are you sure you want to do this?": "¿Estás seguro de que quieres hacer esto?",
   "Are you sure you want to mention all <strong>__count__</strong> people in this stream?": "¿Estás seguro de que quieres mencionar a las <strong>__count__</strong> personas de este canal?",
   "Are you sure you want to resend the invitation to <strong><span class=\"email\"></span></strong>?": "¿Confirmas que quieres reenviar la invitación a <strong><span class=\"email\"></span></strong>?",
@@ -95,10 +96,12 @@
   "Bot email": "Correo del bot",
   "Bot list": "Lista de bots",
   "Bot type": "Tipo de bot",
+  "Bots": "Bots",
   "By deactivating <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, they will be logged out immediately.": "Al desactivar <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, será desconectado inmediatamente.",
   "By deactivating your account, you will be logged out immediately.": "Al desactivar tu cuenta, serás desconectado inmediatamente.",
   "Cancel": "Cancelar",
   "Change": "Cambiar",
+  "Change bot info and owner": "",
   "Change email": "Cambiar correo electrónico",
   "Change full name": "Cambiar nombre completo",
   "Change later messages to this topic": "Cambiar mensajes posteriores de este tema",
@@ -113,15 +116,14 @@
   "Check all": "Marcar todo",
   "Choose avatar": "Elija un avatar",
   "Choose custom color": "Seleccionar un color personalizado",
+  "Clear": "",
   "Clear avatar": "Eliminar avatar",
-  "Clear away status": "",
   "Clear emoji image": "Eliminar imagen del emoticono",
   "Click anywhere on a message to reply.": "Haz click sobre cualquier parte de un mensaje para responderlo.",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "Haz click fuera de la caja de texto para guardar. Notificaremos automáticamente a cualquiera que haya sido añadido o eliminado.",
   "Close": "Cerrar",
   "Collapse": "Contraer",
   "Compose a message to stream <b>__stream.name__</b>": "Redactar un mensaje para el canal <b>__stream.name__</b>",
-  "Configure default settings for new users joining this organization.": "Configurar las opciones por defecto para los nuevos usuarios de esta organización",
   "Configure regular expression patterns that will be automatically linkified when used in Zulip message bodies or topics.  For example to automatically linkify commit IDs and issue numbers (e.g. #123) to the corresponding items in a GitHub project, you could use the following:": "Configura patrones de expresiones regulares que formarán automáticamente un enlace cuando se usen en el cuerpo de mensajes en Zulip o en los temas. Por ejemplo, para convertir los ID de commit y los números de issue (e.j. #123) en enlaces a los correspondientes elementos en un proyecto de GitHub, podrías usar lo siguiente:",
   "Configure the authentication methods for your organization.": "Configura los métodos de autentificación para tu organización.",
   "Configure the default streams new users are subscribed to when joining your organization.": "Configura los canales a los que los nuevos usuarios están suscritos por defecto cuando se unen a tu organización.",
@@ -154,10 +156,12 @@
   "Deactivated users": "Usuarios desactivados",
   "Deactivation encountered an error. Please reload and try again.": "Ocurrió un error en la desactivación. Por favor, recarga la página e inténtalo de nuevo.",
   "Default language": "Lenguaje por defecto",
+  "Default settings for new users joining this organization.": "",
   "Default streams": "Canales por defecto",
   "Default user settings": "Ajustes de usuario por defecto",
   "Delete": "Eliminar",
   "Delete alert word": "Eliminar alerta",
+  "Delete all messages in <b>__topic_name__</b>": "",
   "Delete avatar": "Eliminar avatar",
   "Delete bot": "Eliminar bot",
   "Delete draft": "Eliminar borrador",
@@ -165,7 +169,9 @@
   "Delete icon": "Eliminar icono",
   "Delete logo": "",
   "Delete message": "Eliminar mensaje",
+  "Delete messages": "",
   "Delete stream": "Eliminar canal",
+  "Delete topic": "",
   "Delete user group": "Eliminar grupo de usuarios",
   "Deleted successfully!": "¡Eliminado exitosamente!",
   "Deleting this stream will immediately unsubscribe everyone, and the stream's content will not be recoverable.": "Eliminar este canal desuscribirá inmediatamente a todo el mundo, y el contenido del canal no será recuperable.",
@@ -189,7 +195,7 @@
   "EDITED": "EDITADO",
   "Edit": "Editar",
   "Edit bot": "Editar bot",
-  "Edit question": "Editar pregunta",
+  "Edit status message": "",
   "Edit user": "Editar usuario",
   "Edit your profile": "Edita tu perfil",
   "Edited (__last_edit_timestr__)": "Editado (__last_edit_timestr__)",
@@ -240,13 +246,15 @@
   "Forgotten it?": "¿Te has olvidado?",
   "Formatting": "Formato",
   "Full name": "Nombre completo",
+  "Generate invite link": "",
   "Generate new API key": "Generar nueva clave de API",
+  "Generating link...": "",
   "Generic": "Genérica",
   "Get API key": "Conseguir clave de API",
   "Go back": "Volver atrás",
   "Got it!": "¡Lo tengo!",
   "Guest": "Invitado",
-  "Guest users cannot edit custom emoji.": "",
+  "Guests cannot edit custom emoji.": "",
   "High contrast mode": "Modo de alto contraste",
   "Hint": "Pista",
   "Hint (up to 80 characters)": "Pista (hasta 80 caracteres)",
@@ -260,11 +268,16 @@
   "Interface": "Interfaz",
   "Invalid slash command. Check if you are missing a space after the command.": "/comando inválido. Comprueba si te falta un espacio después del comando.",
   "Invalid stream id": "Id de canal inválido",
+  "Invitation link: <a href=\"__link__\">__link__</a>": "",
   "Invitations": "Invitaciones",
+  "Invite": "Invitar",
   "Invite more users": "Invitar a más usuarios",
+  "Invited as": "",
   "Invited as administrator": "Invitado como administrador",
   "Invited at": "Invitado a las",
   "Invited by": "Invitado por",
+  "Invites": "",
+  "Inviting...": "Invitando...",
   "It's been a while! Since you were last here, you received <b>__unread_count__</b> new messages.": "¡Cuánto tiempo! Desde la última vez que estuviste aquí, has recibido <b>__unread_count__</b> mensajes nuevos.",
   "Joined": "Se unió",
   "Joining the organization": "Unirse a la organización",
@@ -294,7 +307,6 @@
   "Mentioned in": "Mencionado en",
   "Message actions": "Acciones del mensaje",
   "Message editing": "Edición de mensajes",
-  "Message feed": "Listado de mensajes",
   "Message formatting": "Formato de mensajes",
   "Message sent when you were not subscribed": "Mensaje enviado cuando no estabas suscrito",
   "Messages retention period in days (blank means messages are retained forever)": "Período de retención de mensajes en días (vacío significa que los mensajes se mantienen para siempre)",
@@ -315,6 +327,7 @@
   "Muted topics": "Temas silenciados",
   "N": "N",
   "Name": "Nombre",
+  "Name or email": "",
   "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "Filtrar solo el canal &quot;__display_recipient__&quot;",
   "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
@@ -369,9 +382,11 @@
   "Only organization administrators can edit these settings.": "Solo los administradores de la organización pueden editar estos ajustes.",
   "Only organization administrators can post.": "Solo los administradores de la organización pueden publicar aquí.",
   "Only organization admins are allowed to post to this stream.": "Solo los administradores de la organización pueden publicar en este canal.",
+  "Only stream subscribers can add users to a private stream.": "",
   "Optional": "Opcional",
   "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "Organización",
+  "Organization administrator": "Administrador de la organización",
   "Organization administrators can change this in the organization settings.": "Los administradores de la organización pueden cambiar esto en los ajustes de la organización.",
   "Organization avatar": "Avatar de la organización",
   "Organization description": "Descripción de la organización",
@@ -382,6 +397,7 @@
   "Organization settings": "Ajustes de organización",
   "Other notification settings": "Otros ajustes de notificación",
   "Other permissions": "Otros permisos",
+  "Other settings": "",
   "Outgoing webhook message format": "Formato del mensaje del webhook de salida",
   "Owner": "Propietario",
   "Password": "Contraseña",
@@ -400,11 +416,11 @@
   "Please specify at least one valid recipient": "Por favor, especifica al menos un recipiente válido",
   "Prevent users from changing their email address": "Evita que los usuarios cambien su dirección de correo",
   "Prevent users from changing their name": "Evita que los usuarios cambien su nombre",
+  "Preview": "Previsualización",
   "Preview profile": "Previsualizar perfil",
   "Private messages and @-mentions": "Mensajes privados y @-menciones",
   "Profile": "Perfil",
   "Profile field settings": "Ajustes de los campos del perfil",
-  "Question": "Pregunta",
   "Quote and reply": "Citar y responder",
   "Reactivate": "Reactivar",
   "Reactivate bot": "Reactivar bot",
@@ -453,7 +469,9 @@
   "Sent! Your message was sent to a stream you have muted.": "",
   "Sent! Your message was sent to a topic you have muted.": "",
   "Sent! Your recent message is outside the current search.": "",
-  "Set status to away": "",
+  "Set a status message": "",
+  "Set yourself to active": "",
+  "Set yourself to away": "",
   "Settings": "Ajustes",
   "Setup": "Configurar",
   "Setup two factor authentication": "Configurar la autenticación de dos pasos",
@@ -496,8 +514,6 @@
   "The recipients __recipients__ are not valid": "Los recipientes __recipients__ no son válidos",
   "The stream description has been updated!": "¡La descripción del canal ha sido actualizada!",
   "The stream has been renamed!": "¡Este canal ha sido renombrado!",
-  "The stream to which new stream notifications go to.": "El canal al que van las notificaciones de canales nuevos.",
-  "The stream which new user signup notifications go to.": "El canal al que deben ir las notificaciones sobre el registro de nuevos usuarios.",
   "Their password will be cleared from our systems, and any bots they maintain will be disabled.": "Su contraseña será eliminada de nuestros sistemas, y cualquier bot que mantengan será desactivado.",
   "There are no messages to reply to.": "No hay mensajes a los que contestar.",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "Estos ajustes están explicados detalladamente en el <a target=\"_blank\" href=\"/help/stream-permissions\">centro de ayuda</a>.",
@@ -510,6 +526,7 @@
   "Time settings": "Ajustes de hora",
   "Time zone": "Zona horaria",
   "Time's up!": "¡Se acabó el tiempo!",
+  "Tip: You can also send \"/poll Some question\"": "",
   "Today": "Hoy",
   "Toggle subscription": "Activar/Desactivar suscripción",
   "Tomorrow": "Mañana",
@@ -538,13 +555,11 @@
   "Update successful: Subdomains allowed for __domain__": "Actualización exitosa: subdominios permitidos para __domain__",
   "Update successful: Subdomains no longer allowed for __domain__": "Actualización exitosa: subdominios ya no permitidos para __domain__",
   "Updated settings!": "¡Ajustes actualizados!",
-  "Updated successfully!": "¡Actualizado exitosamente!",
   "Upload avatar": "Cargar avatar",
   "Upload icon": "Subir icono",
   "Upload image or GIF": "Subir imagen o GIF",
   "Upload logo": "",
   "Upload new avatar": "Subir nuevo avatar",
-  "Upload new icon": "Subir nuevo icono",
   "Upload new logo": "",
   "Uploaded files": "Archivos subidos",
   "Uploading icon.": "Subiendo icono.",
@@ -562,6 +577,7 @@
   "User(s) invited successfully.": "Usuario(s) invitados exitosamente.",
   "Username": "Nombre de usuario",
   "Username (a-z, 0-9, and dashes only)": "Nombre de usuario (a-z, 0-9, y - solamente)",
+  "Users": "Usuarios",
   "Users can edit the topic of any message": "Los usuarios pueden editar el tema de cualquier mensaje",
   "Video chat provider": "Proveedor de chat de vídeo",
   "View edit history": "Ver el historial de ediciones",
@@ -576,11 +592,14 @@
   "View your profile": "Ver tu perfil de usuario",
   "Visual desktop notifications": "Notificaciones de escritorio visuales",
   "Warning: <strong>__stream_name__</strong> is a private stream.": "Aviso: <strong>__stream_name__</strong> es un canal privado.",
+  "We are about to have a poll.  Please wait for the question.": "",
+  "We recommend against deleting topics unless needed for security reasons or managing abuse. Deleted messages can be confusing for users who may later visit the topic via notifications.": "",
   "Who can add bots": "Quiénes puede añadir bots",
   "Who can add custom emoji": "Quiénes pueden añadir emoticonos personalizados",
   "Who can create streams": "Quiénes pueden crear canales",
   "Who can see users email addresses": "",
   "Working\u2026": "Trabajando...",
+  "Write": "Escribir",
   "Yes": "Sí",
   "Yes, delete this stream": "Sí, eliminar este canal",
   "Yes, send": "Sí, enviar",
@@ -609,6 +628,9 @@
   "Your account": "Tu cuenta",
   "Your bots": "Tus bots",
   "Your reminder note is empty!": "¡La nota de tu recordatorio está vacía!",
+  "Zoom API key (required)": "",
+  "Zoom API secret (required)": "",
+  "Zoom user ID (required)": "",
   "[Condense this message]": "[Acortar este mensaje]",
   "[Configure]": "[Configurar]",
   "[Disable]": "[Desactivar]",
