--- a/static/locale/hu/translations.json
+++ b/static/locale/hu/translations.json
@@ -17,7 +17,6 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "",
-  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "Az üzenetfolyamnak nevet kell adni",
   "A stream with this name already exists": "Ezzel a névvel már létezik üzenetfolyam",
   "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
@@ -35,6 +34,7 @@
   "Add a new profile field": "Új profil mező hozzáadása",
   "Add a new user group": "Új felhasználói csoport hozzáadása",
   "Add alert word": "Figyelmeztető szó hozzáadása",
+  "Add choice": "",
   "Add emoji": "Hangulatjel hozzáadása",
   "Add emoji reaction": "Hangulatjeles reakció hozzáadása",
   "Add emoji reaction (:)": "Hangulatjeles reakció hozzáadása (:)",
@@ -43,11 +43,11 @@
   "Add member...": "Tag hozzáadása...",
   "Add members of your organization to mentionable user groups.": "",
   "Add new default stream": "Alapértelmezett üzenetfolyam hozzáadása",
-  "Add option": "Opció hozzáadása",
   "Add profile field": "Profil mező hozzáadása",
   "Add question": "Kérdés hozzáadása",
   "Add stream": "Üzenetfolyam hozzáadása",
   "Add task": "Feladat hozzáadása",
+  "Add video call": "Videohívás hozzáadása",
   "Added successfully!": "Sikeresen hozzáadva!",
   "Administrator": "",
   "Administrators can always delete any message.": "Az adminisztrátorok mindig törölhetnek minden üzenetet.",
@@ -61,8 +61,8 @@
   "Alert words allow you to be notified as if you were @-mentioned when certain words or phrases are used in Zulip.": "",
   "All admins, and members with accounts at least 3 days old.": "",
   "All admins, and members with accounts at least N days old.": "",
-  "All messages": "Minden üzenet",
   "All streams": "Minden üzenetfolyam",
+  "Allow message content in missed message emails": "",
   "Allow message deleting": "Üzenet törlésének engedélyezése",
   "Allow message editing": "Üzenet szerkesztésének engedélyezése",
   "Allow subdomains": "Aldomainek engedélyezése",
@@ -80,6 +80,7 @@
   "Are invitations required for joining the organization?": "Szükség van meghívóra a szervezethez való csatlakozáshoz?",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "Biztosan létrehozod a(z) '__stream_name__' üzenetfolyamot és felírsz rá __count__ felhasználót?",
   "Are you sure you want to delete <b>__group_name__</b>?": "",
+  "Are you sure you want to delete all messages in <b>__topic_name__</b>?": "",
   "Are you sure you want to do this?": "Biztosan ezt szeretnéd?",
   "Are you sure you want to mention all <strong>__count__</strong> people in this stream?": "Biztosan említeni akarod mind a(z) <strong>__count__</strong> személyt ebben az üzenetfolyamban?",
   "Are you sure you want to resend the invitation to <strong><span class=\"email\"></span></strong>?": "Biztosan újra küldöd a meghívókat a következőknek: <strong><span class=\"email\"></span></strong>?",
@@ -95,10 +96,12 @@
   "Bot email": "Bot e-mail",
   "Bot list": "Bot lista",
   "Bot type": "Bot típusa",
+  "Bots": "Botok",
   "By deactivating <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, they will be logged out immediately.": "",
   "By deactivating your account, you will be logged out immediately.": "",
   "Cancel": "Mégse",
   "Change": "Változtatás",
+  "Change bot info and owner": "",
   "Change email": "E-mail változtatása",
   "Change full name": "Teljes név változtatása",
   "Change later messages to this topic": "Későbbi üzenetek változtatása ebben a témában",
@@ -113,15 +116,14 @@
   "Check all": "Mindet bejelölöm",
   "Choose avatar": "Avatar választása",
   "Choose custom color": "Egyéni szín választása",
+  "Clear": "",
   "Clear avatar": "Avatar törlése",
-  "Clear away status": "",
   "Clear emoji image": "Hangulatjel törlése",
   "Click anywhere on a message to reply.": "A válaszoláshoz kattints bárhová egy üzeneten.",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "Kattints a beviteli mezőn kívülre a mentéshez. Mindenkit automatikusan értesítünk, akit hozzáadtál vagy töröltél.",
   "Close": "Bezár",
   "Collapse": "Összezár",
   "Compose a message to stream <b>__stream.name__</b>": "Üzenet írása a(z) <b>__stream.name__</b> üzenetfolyamra",
-  "Configure default settings for new users joining this organization.": "E szervezethez csatlakozó új felhasználók alapbeállításainak megadása.",
   "Configure regular expression patterns that will be automatically linkified when used in Zulip message bodies or topics.  For example to automatically linkify commit IDs and issue numbers (e.g. #123) to the corresponding items in a GitHub project, you could use the following:": "Szabályos kifejezés minták (regex patterns) beállítása, amelyeket automatikusan linkké alakítunk, ha Zulip üzenetek témájában vagy törzsében használják. Például ahhoz, hogy automatikusan linkként jelenjenek meg a GitHub projektek commit azonosítói vagy issue számai (pl. #123), és a megfelelő projekt-elemekre mutassanak, a következőket használhatod:",
   "Configure the authentication methods for your organization.": "A szervezeted azonosítási módjának beállítása.",
   "Configure the default streams new users are subscribed to when joining your organization.": "Az alapértelmezett üzenetfolyamok beállítása, amelyekre az új felhasználók fel legyenek iratkozva, amikor csatlakoznak a szervezetedhez.",
@@ -154,10 +156,12 @@
   "Deactivated users": "Deaktivált felhasználók",
   "Deactivation encountered an error. Please reload and try again.": "A megszüntetés hibába ütközött. Kérlek, töltsd újra az oldalt és próbáld meg még egyszer.",
   "Default language": "Alapértelmezett nyelv",
+  "Default settings for new users joining this organization.": "",
   "Default streams": "Alapértelmezett folyamok",
   "Default user settings": "Alapértelmezett felhasználói beállítások",
   "Delete": "Törlés",
   "Delete alert word": "Figyelmeztető szó törlése",
+  "Delete all messages in <b>__topic_name__</b>": "",
   "Delete avatar": "Avatar törlése",
   "Delete bot": "Bot törlése",
   "Delete draft": "Piszkozat törlése",
@@ -165,7 +169,9 @@
   "Delete icon": "Ikon törlése",
   "Delete logo": "",
   "Delete message": "Üzenet törlése",
+  "Delete messages": "",
   "Delete stream": "Folyam törlése",
+  "Delete topic": "",
   "Delete user group": "",
   "Deleted successfully!": "Sikeres törlés!",
   "Deleting this stream will immediately unsubscribe everyone, and the stream's content will not be recoverable.": "A folyam törlésével mindenki leiratkozik róla, és a folyam tartalma nem lesz visszaállítható.",
@@ -189,7 +195,7 @@
   "EDITED": "SZERKESZTVE",
   "Edit": "Szerkesztés",
   "Edit bot": "Bot szerkesztése",
-  "Edit question": "Kérdés szerkesztése",
+  "Edit status message": "",
   "Edit user": "Felhasználó szerkesztése",
   "Edit your profile": " A profilod szerkesztése",
   "Edited (__last_edit_timestr__)": "Módosítva (__last_edit_timestr__)",
@@ -240,13 +246,15 @@
   "Forgotten it?": "Elfelejtetted?",
   "Formatting": "Formázás",
   "Full name": "Teljes név",
+  "Generate invite link": "",
   "Generate new API key": "Új API kulcs generálása",
+  "Generating link...": "",
   "Generic": "Általános",
   "Get API key": "API kulcs kérése",
   "Go back": "Vissza",
   "Got it!": "Értem!",
   "Guest": "",
-  "Guest users cannot edit custom emoji.": "",
+  "Guests cannot edit custom emoji.": "",
   "High contrast mode": "Nagy kontrasztú mód",
   "Hint": "Tipp",
   "Hint (up to 80 characters)": "",
@@ -260,11 +268,16 @@
   "Interface": "",
   "Invalid slash command. Check if you are missing a space after the command.": "",
   "Invalid stream id": "Hibás üzenetfolyam-azonosító!",
+  "Invitation link: <a href=\"__link__\">__link__</a>": "",
   "Invitations": "",
+  "Invite": "Meghívás",
   "Invite more users": "",
+  "Invited as": "",
   "Invited as administrator": "",
   "Invited at": "",
   "Invited by": "",
+  "Invites": "",
+  "Inviting...": "Meghívás...",
   "It's been a while! Since you were last here, you received <b>__unread_count__</b> new messages.": "Sok idő eltelt! Mióta utoljára itt jártál, <b>__unread_count__</b> új üzeted érkezett.",
   "Joined": "",
   "Joining the organization": "",
@@ -294,7 +307,6 @@
   "Mentioned in": "",
   "Message actions": "Üzenet tevékenységek",
   "Message editing": "",
-  "Message feed": "",
   "Message formatting": "Üzenet formázása",
   "Message sent when you were not subscribed": "Az üzenet akkor került elküldésre, amikor nem voltál bejelentkezve",
   "Messages retention period in days (blank means messages are retained forever)": "",
@@ -315,6 +327,7 @@
   "Muted topics": "Némított témák",
   "N": "",
   "Name": "Név",
+  "Name or email": "",
   "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "Szűkítés a következő folyamra: &quot;__display_recipient__&quot;",
   "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
@@ -369,9 +382,11 @@
   "Only organization administrators can edit these settings.": "",
   "Only organization administrators can post.": "",
   "Only organization admins are allowed to post to this stream.": "Erre az üzenetfolyamra csak szervezeti adminisztrátorok írhatnak!",
+  "Only stream subscribers can add users to a private stream.": "",
   "Optional": "",
   "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "",
+  "Organization administrator": "",
   "Organization administrators can change this in the organization settings.": "",
   "Organization avatar": "",
   "Organization description": "",
@@ -382,6 +397,7 @@
   "Organization settings": "Szervezeti beállítások",
   "Other notification settings": "",
   "Other permissions": "",
+  "Other settings": "",
   "Outgoing webhook message format": "",
   "Owner": "",
   "Password": "Jelszó",
@@ -400,11 +416,11 @@
   "Please specify at least one valid recipient": "",
   "Prevent users from changing their email address": "",
   "Prevent users from changing their name": "",
+  "Preview": "Előnézet",
   "Preview profile": "",
   "Private messages and @-mentions": "",
   "Profile": "",
   "Profile field settings": "",
-  "Question": "",
   "Quote and reply": "",
   "Reactivate": "Újraaktiválás",
   "Reactivate bot": "",
@@ -453,7 +469,9 @@
   "Sent! Your message was sent to a stream you have muted.": "",
   "Sent! Your message was sent to a topic you have muted.": "",
   "Sent! Your recent message is outside the current search.": "",
-  "Set status to away": "",
+  "Set a status message": "",
+  "Set yourself to active": "",
+  "Set yourself to away": "",
   "Settings": "Beállítások",
   "Setup": "",
   "Setup two factor authentication": "",
@@ -496,8 +514,6 @@
   "The recipients __recipients__ are not valid": "",
   "The stream description has been updated!": "",
   "The stream has been renamed!": "",
-  "The stream to which new stream notifications go to.": "",
-  "The stream which new user signup notifications go to.": "",
   "Their password will be cleared from our systems, and any bots they maintain will be disabled.": "",
   "There are no messages to reply to.": "",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "",
@@ -510,6 +526,7 @@
   "Time settings": "",
   "Time zone": "",
   "Time's up!": "",
+  "Tip: You can also send \"/poll Some question\"": "",
   "Today": "",
   "Toggle subscription": "",
   "Tomorrow": "",
@@ -538,13 +555,11 @@
   "Update successful: Subdomains allowed for __domain__": "",
   "Update successful: Subdomains no longer allowed for __domain__": "",
   "Updated settings!": "",
-  "Updated successfully!": "",
   "Upload avatar": "Avatar feltöltése",
   "Upload icon": "",
   "Upload image or GIF": "",
   "Upload logo": "",
   "Upload new avatar": "",
-  "Upload new icon": "",
   "Upload new logo": "",
   "Uploaded files": "",
   "Uploading icon.": "",
@@ -562,6 +577,7 @@
   "User(s) invited successfully.": "",
   "Username": "Felhasználónév",
   "Username (a-z, 0-9, and dashes only)": "",
+  "Users": "Felhasználók",
   "Users can edit the topic of any message": "",
   "Video chat provider": "",
   "View edit history": "",
@@ -576,11 +592,14 @@
   "View your profile": "",
   "Visual desktop notifications": "",
   "Warning: <strong>__stream_name__</strong> is a private stream.": "",
+  "We are about to have a poll.  Please wait for the question.": "",
+  "We recommend against deleting topics unless needed for security reasons or managing abuse. Deleted messages can be confusing for users who may later visit the topic via notifications.": "",
   "Who can add bots": "",
   "Who can add custom emoji": "",
   "Who can create streams": "",
   "Who can see users email addresses": "",
   "Working\u2026": "",
+  "Write": "Írás",
   "Yes": "",
   "Yes, delete this stream": "Igen, töröljük ezt a folyamot",
   "Yes, send": "",
@@ -609,6 +628,9 @@
   "Your account": "",
   "Your bots": "",
   "Your reminder note is empty!": "",
+  "Zoom API key (required)": "",
+  "Zoom API secret (required)": "",
+  "Zoom user ID (required)": "",
   "[Condense this message]": "",
   "[Configure]": "",
   "[Disable]": "",
