--- a/static/locale/id_ID/translations.json
+++ b/static/locale/id_ID/translations.json
@@ -17,7 +17,6 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "",
-  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "Stream memerlukan sebuah nama",
   "A stream with this name already exists": "Stream dengan nama tersebut telah ada",
   "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
@@ -35,6 +34,7 @@
   "Add a new profile field": "",
   "Add a new user group": "Tambahkan grup pengguna baru",
   "Add alert word": "Tambah kata peringatan",
+  "Add choice": "",
   "Add emoji": "Tambah emoji",
   "Add emoji reaction": "Tambah reaksi emoji",
   "Add emoji reaction (:)": "Tambahkan reaksi emoji (:)",
@@ -43,11 +43,11 @@
   "Add member...": "Tambahkan anggota...",
   "Add members of your organization to mentionable user groups.": "Tambahkan anggota organisasi Anda ke grup pengguna yang dapat disinggung.",
   "Add new default stream": "Tambah stream standar baru",
-  "Add option": "",
   "Add profile field": "",
   "Add question": "",
   "Add stream": "Tambah stream",
   "Add task": "",
+  "Add video call": "Tambah panggilan video",
   "Added successfully!": "Berhasil ditambahkan!",
   "Administrator": "",
   "Administrators can always delete any message.": "Para pengurus akan selalu dapat menghapus pesan apapun.",
@@ -61,8 +61,8 @@
   "Alert words allow you to be notified as if you were @-mentioned when certain words or phrases are used in Zulip.": "Kata-kata pemberitahuan akan memberitahu Anda layaknya Anda disinggung ketika kata atau frasa tertentu digunakan di Zulip.",
   "All admins, and members with accounts at least 3 days old.": "",
   "All admins, and members with accounts at least N days old.": "",
-  "All messages": "Semua pesan",
   "All streams": "Semua stream",
+  "Allow message content in missed message emails": "",
   "Allow message deleting": "",
   "Allow message editing": "",
   "Allow subdomains": "Izinkan subdomain",
@@ -80,6 +80,7 @@
   "Are invitations required for joining the organization?": "",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "Apakah Anda yakin Anda ingin membuat siaran '__stream_name__' dan melanggan __count__ pengguna ke dalam siaran tersebut?",
   "Are you sure you want to delete <b>__group_name__</b>?": "",
+  "Are you sure you want to delete all messages in <b>__topic_name__</b>?": "",
   "Are you sure you want to do this?": "Apakah Anda yakin Anda ingin melakukan ini?",
   "Are you sure you want to mention all <strong>__count__</strong> people in this stream?": "Apakah Anda yakin Anda ingin menyinggung semua <strong>__count__</strong> orang pada siaran ini?",
   "Are you sure you want to resend the invitation to <strong><span class=\"email\"></span></strong>?": "Apakah Anda yakin Anda ingin mengirim ulang undangan ke <strong><span class=\"email\"></span></strong>?",
@@ -95,10 +96,12 @@
   "Bot email": "Email robot",
   "Bot list": "Daftar Bot",
   "Bot type": "Tipe Bot",
+  "Bots": "Bot",
   "By deactivating <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, they will be logged out immediately.": "Dengan mendeaktivasi <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, mereka akan keluar secara langsung.",
   "By deactivating your account, you will be logged out immediately.": "Dengan menonaktifkan akun anda, anda akan keluar dengan segera.",
   "Cancel": "Batal",
   "Change": "Ubah",
+  "Change bot info and owner": "",
   "Change email": "Ubah email",
   "Change full name": "",
   "Change later messages to this topic": "Ubah pesan nantinya untuk topik ini",
@@ -113,15 +116,14 @@
   "Check all": "Centak semua",
   "Choose avatar": "Pilih avatar",
   "Choose custom color": "Pilih warna khusus",
+  "Clear": "",
   "Clear avatar": "Hapus avatar",
-  "Clear away status": "",
   "Clear emoji image": "Bersihkan gambar emoji",
   "Click anywhere on a message to reply.": "",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "",
   "Close": "Tutup",
   "Collapse": "Hilang",
   "Compose a message to stream <b>__stream.name__</b>": "Tulis sebuah pesan ke siaran <b>__stream.name__</b>",
-  "Configure default settings for new users joining this organization.": "",
   "Configure regular expression patterns that will be automatically linkified when used in Zulip message bodies or topics.  For example to automatically linkify commit IDs and issue numbers (e.g. #123) to the corresponding items in a GitHub project, you could use the following:": "Atur pola regular expression yang akan secara otomatis diubah menjadi suatu link saat digunakan di Zulip pada suatu pesan atau topik. Contohnya untuk secara otomatis menerapkan link ID commit dan nomor masalah (contoh #123) , Anda dapat menggunakan hal berikut pada suatu proyek GitHub:",
   "Configure the authentication methods for your organization.": "Atur metode autentikasi untuk organisasi Anda",
   "Configure the default streams new users are subscribed to when joining your organization.": "Atur siaran default yang pengguna baru akan gabung saat bergabung dalam organisasi Anda",
@@ -154,10 +156,12 @@
   "Deactivated users": "Deaktivasi pengguna",
   "Deactivation encountered an error. Please reload and try again.": "Terjadi error saat mendeaktivasi. Silakan reload dan ulangi lagi.",
   "Default language": "Bahasa standar",
+  "Default settings for new users joining this organization.": "",
   "Default streams": "Stream standar",
   "Default user settings": "",
   "Delete": "",
   "Delete alert word": "Hapus kata peringatan",
+  "Delete all messages in <b>__topic_name__</b>": "",
   "Delete avatar": "Hapus avatar",
   "Delete bot": "Hapus bot",
   "Delete draft": "Hapus konsep",
@@ -165,7 +169,9 @@
   "Delete icon": "Hapus ikon",
   "Delete logo": "",
   "Delete message": "Hapus pesan",
+  "Delete messages": "",
   "Delete stream": "Hapus stream",
+  "Delete topic": "",
   "Delete user group": "",
   "Deleted successfully!": "Berhasil dihapus!",
   "Deleting this stream will immediately unsubscribe everyone, and the stream's content will not be recoverable.": "Penghapusan stream ini akan seketika menghentikan langganan semua orang, dan isi stream tidak akan dapat dipulihkan",
@@ -189,7 +195,7 @@
   "EDITED": "DIEDIT",
   "Edit": "Edit",
   "Edit bot": "Edit bot",
-  "Edit question": "",
+  "Edit status message": "",
   "Edit user": "Edit pengguna",
   "Edit your profile": "",
   "Edited (__last_edit_timestr__)": "Diedit (__last_edit_timestr__)",
@@ -240,13 +246,15 @@
   "Forgotten it?": "Lupa?",
   "Formatting": "Format",
   "Full name": "Nama lengkap",
+  "Generate invite link": "",
   "Generate new API key": "Bangkitkan API key baru",
+  "Generating link...": "",
   "Generic": "",
   "Get API key": "Dapatkan API key",
   "Go back": "Kembali",
   "Got it!": "Dimengerti!",
   "Guest": "",
-  "Guest users cannot edit custom emoji.": "",
+  "Guests cannot edit custom emoji.": "",
   "High contrast mode": "Mode kontras tinggi",
   "Hint": "",
   "Hint (up to 80 characters)": "",
@@ -260,11 +268,16 @@
   "Interface": "",
   "Invalid slash command. Check if you are missing a space after the command.": "",
   "Invalid stream id": "Stream id tidak valid",
+  "Invitation link: <a href=\"__link__\">__link__</a>": "",
   "Invitations": "Undangan",
+  "Invite": "Undang",
   "Invite more users": "Undang lebih banyak pengguna",
+  "Invited as": "",
   "Invited as administrator": "",
   "Invited at": "",
   "Invited by": "",
+  "Invites": "",
+  "Inviting...": "Mengundang...",
   "It's been a while! Since you were last here, you received <b>__unread_count__</b> new messages.": "",
   "Joined": "",
   "Joining the organization": "Bergabung ke organisasi",
@@ -294,7 +307,6 @@
   "Mentioned in": "",
   "Message actions": "Aksi untuk pesan",
   "Message editing": "Pengeditan pesan",
-  "Message feed": "",
   "Message formatting": "Format pesan",
   "Message sent when you were not subscribed": "",
   "Messages retention period in days (blank means messages are retained forever)": "",
@@ -315,6 +327,7 @@
   "Muted topics": "Topik yang didiamkan",
   "N": "",
   "Name": "Nama",
+  "Name or email": "",
   "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "",
   "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
@@ -369,9 +382,11 @@
   "Only organization administrators can edit these settings.": "",
   "Only organization administrators can post.": "",
   "Only organization admins are allowed to post to this stream.": "",
+  "Only stream subscribers can add users to a private stream.": "",
   "Optional": "opsional",
   "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "Organisasi",
+  "Organization administrator": "",
   "Organization administrators can change this in the organization settings.": "",
   "Organization avatar": "Avatar organisasi",
   "Organization description": "",
@@ -382,6 +397,7 @@
   "Organization settings": "Pengaturan organisasi",
   "Other notification settings": "",
   "Other permissions": "",
+  "Other settings": "",
   "Outgoing webhook message format": "",
   "Owner": "Pemilik",
   "Password": "Kata sandi",
@@ -400,11 +416,11 @@
   "Please specify at least one valid recipient": "",
   "Prevent users from changing their email address": "",
   "Prevent users from changing their name": "",
+  "Preview": "Pratinjau",
   "Preview profile": "",
   "Private messages and @-mentions": "",
   "Profile": "",
   "Profile field settings": "",
-  "Question": "",
   "Quote and reply": "",
   "Reactivate": "",
   "Reactivate bot": "",
@@ -453,7 +469,9 @@
   "Sent! Your message was sent to a stream you have muted.": "",
   "Sent! Your message was sent to a topic you have muted.": "",
   "Sent! Your recent message is outside the current search.": "",
-  "Set status to away": "",
+  "Set a status message": "",
+  "Set yourself to active": "",
+  "Set yourself to away": "",
   "Settings": "Pengaturan",
   "Setup": "",
   "Setup two factor authentication": "",
@@ -496,8 +514,6 @@
   "The recipients __recipients__ are not valid": "",
   "The stream description has been updated!": "",
   "The stream has been renamed!": "",
-  "The stream to which new stream notifications go to.": "",
-  "The stream which new user signup notifications go to.": "",
   "Their password will be cleared from our systems, and any bots they maintain will be disabled.": "",
   "There are no messages to reply to.": "",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "",
@@ -510,6 +526,7 @@
   "Time settings": "",
   "Time zone": "",
   "Time's up!": "",
+  "Tip: You can also send \"/poll Some question\"": "",
   "Today": "Hari ini",
   "Toggle subscription": "",
   "Tomorrow": "",
@@ -538,13 +555,11 @@
   "Update successful: Subdomains allowed for __domain__": "",
   "Update successful: Subdomains no longer allowed for __domain__": "",
   "Updated settings!": "",
-  "Updated successfully!": "",
   "Upload avatar": "Unggah avatar",
   "Upload icon": "",
   "Upload image or GIF": "",
   "Upload logo": "",
   "Upload new avatar": "",
-  "Upload new icon": "",
   "Upload new logo": "",
   "Uploaded files": "File yang telah diupload",
   "Uploading icon.": "",
@@ -562,6 +577,7 @@
   "User(s) invited successfully.": "",
   "Username": "Username",
   "Username (a-z, 0-9, and dashes only)": "",
+  "Users": "Pengguna",
   "Users can edit the topic of any message": "",
   "Video chat provider": "",
   "View edit history": "",
@@ -576,11 +592,14 @@
   "View your profile": "",
   "Visual desktop notifications": "",
   "Warning: <strong>__stream_name__</strong> is a private stream.": "",
+  "We are about to have a poll.  Please wait for the question.": "",
+  "We recommend against deleting topics unless needed for security reasons or managing abuse. Deleted messages can be confusing for users who may later visit the topic via notifications.": "",
   "Who can add bots": "",
   "Who can add custom emoji": "",
   "Who can create streams": "",
   "Who can see users email addresses": "",
   "Working\u2026": "",
+  "Write": "Tulis",
   "Yes": "",
   "Yes, delete this stream": "",
   "Yes, send": "",
@@ -609,6 +628,9 @@
   "Your account": "Akun anda",
   "Your bots": "Bot anda",
   "Your reminder note is empty!": "",
+  "Zoom API key (required)": "",
+  "Zoom API secret (required)": "",
+  "Zoom user ID (required)": "",
   "[Condense this message]": "",
   "[Configure]": "",
   "[Disable]": "",
