--- a/static/locale/ja/translations.json
+++ b/static/locale/ja/translations.json
@@ -17,7 +17,6 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "<strong>__name__</strong>はこのストリームを購読してなくてメンションで通知されません。",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "",
-  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "ストリームには名前が必要です",
   "A stream with this name already exists": "このストリーム名はすでに存在します",
   "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
@@ -35,6 +34,7 @@
   "Add a new profile field": "",
   "Add a new user group": "新しいユーザーグループを追加する",
   "Add alert word": "アラートワードを追加",
+  "Add choice": "",
   "Add emoji": "絵文字を追加",
   "Add emoji reaction": "絵文字でリアクション",
   "Add emoji reaction (:)": "絵文字でリアクション (:)",
@@ -43,11 +43,11 @@
   "Add member...": "新しいメンバーを追加…",
   "Add members of your organization to mentionable user groups.": "",
   "Add new default stream": "新しいデフォルトのストリームを追加",
-  "Add option": "",
   "Add profile field": "プロフィールフィールドを追加",
   "Add question": "質問を追加",
   "Add stream": "ストリームを追加",
   "Add task": "タスクを追加",
+  "Add video call": "",
   "Added successfully!": "追加に成功しました！",
   "Administrator": "管理者",
   "Administrators can always delete any message.": "管理者はいつでもすべてのメッセージを削除できます。",
@@ -61,8 +61,8 @@
   "Alert words allow you to be notified as if you were @-mentioned when certain words or phrases are used in Zulip.": "アラートワードとは、Zulipで特定の単語やフレーズが出てきたときに@付きでメンションされたのと同じように通知が届きます。",
   "All admins, and members with accounts at least 3 days old.": "",
   "All admins, and members with accounts at least N days old.": "",
-  "All messages": "すべてのメッセージ",
   "All streams": "すべてのストリーム",
+  "Allow message content in missed message emails": "",
   "Allow message deleting": "メッセージ削除を許可",
   "Allow message editing": "メッセージ編集を許可",
   "Allow subdomains": "サブドメインを許可",
@@ -80,6 +80,7 @@
   "Are invitations required for joining the organization?": "この組織に参加しに招待が必要ですか？",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "本当に '__stream_name__' ストリームを作成して、そのストリームを __count__ ユーザーに購読しますか？",
   "Are you sure you want to delete <b>__group_name__</b>?": "本当に<b>__group_name__</b>を削除しますか？",
+  "Are you sure you want to delete all messages in <b>__topic_name__</b>?": "",
   "Are you sure you want to do this?": "なにをしようとしているか",
   "Are you sure you want to mention all <strong>__count__</strong> people in this stream?": "本当にこのストリームにいるすべてのユーザー <strong>__count__</strong> 人にメンションしますか？",
   "Are you sure you want to resend the invitation to <strong><span class=\"email\"></span></strong>?": "本当に<strong><span class=\"email\"></span></strong>の招待を再送信しますか？",
@@ -95,10 +96,12 @@
   "Bot email": "ボットのメール",
   "Bot list": "ボットリスト",
   "Bot type": "ボット種別",
+  "Bots": "ボット",
   "By deactivating <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, they will be logged out immediately.": "<strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;を無効にすると、無効にしたユーザーはすぐにログアウトさせられます。",
   "By deactivating your account, you will be logged out immediately.": "アカウントを無効にすると、すぐにログアウトされます。",
   "Cancel": "キャンセル",
   "Change": "変更",
+  "Change bot info and owner": "",
   "Change email": "メールアドレスを変更",
   "Change full name": "姓名を編集",
   "Change later messages to this topic": "以降のメッセージをこのトピックに変更",
@@ -113,15 +116,14 @@
   "Check all": "すべて選択",
   "Choose avatar": "アバターを選択",
   "Choose custom color": "色を選択",
+  "Clear": "",
   "Clear avatar": "アバターを消去",
-  "Clear away status": "",
   "Clear emoji image": "絵文字画像を消去",
   "Click anywhere on a message to reply.": "",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "",
   "Close": "閉じる",
   "Collapse": "折り畳む",
   "Compose a message to stream <b>__stream.name__</b>": "<b>__stream.name__</b>ストリームへのメッセージを作成",
-  "Configure default settings for new users joining this organization.": "",
   "Configure regular expression patterns that will be automatically linkified when used in Zulip message bodies or topics.  For example to automatically linkify commit IDs and issue numbers (e.g. #123) to the corresponding items in a GitHub project, you could use the following:": "Zulipでメッセージやトピックが使われたときに自動的にリンクする正規表現パターンを設定します。例えば、GitHubプロジェクトに対応するコミットIDと課題番号 (例 #123) をリンクするには、次のようにします。",
   "Configure the authentication methods for your organization.": "組織の認証方法を設定します。",
   "Configure the default streams new users are subscribed to when joining your organization.": "組織に参加したときに新しいユーザーがデフォルトで購読するストリームを設定します。",
@@ -154,10 +156,12 @@
   "Deactivated users": "無効なユーザー",
   "Deactivation encountered an error. Please reload and try again.": "",
   "Default language": "デフォルトの言語",
+  "Default settings for new users joining this organization.": "",
   "Default streams": "デフォルトのストリーム",
   "Default user settings": "デフォルトのユーザー設定",
   "Delete": "削除",
   "Delete alert word": "アラートワードを削除",
+  "Delete all messages in <b>__topic_name__</b>": "",
   "Delete avatar": "アバターを削除",
   "Delete bot": "ボットを削除",
   "Delete draft": "下書きを削除",
@@ -165,7 +169,9 @@
   "Delete icon": "アイコンを削除",
   "Delete logo": "",
   "Delete message": "メッセージを削除",
+  "Delete messages": "",
   "Delete stream": "ストリームを削除",
+  "Delete topic": "",
   "Delete user group": "ユーザーグループを削除する",
   "Deleted successfully!": "削除に成功しました！",
   "Deleting this stream will immediately unsubscribe everyone, and the stream's content will not be recoverable.": "ストリームを削除するとすぐに全員の購読を解除します。ストリームの内容は復活できません。",
@@ -189,7 +195,7 @@
   "EDITED": "変更アリ",
   "Edit": "編集",
   "Edit bot": "ボットを編集",
-  "Edit question": "質問を編集",
+  "Edit status message": "",
   "Edit user": "ユーザーを編集",
   "Edit your profile": "自分のプロフィールを編集",
   "Edited (__last_edit_timestr__)": "編集済み (__last_edit_timestr__)",
@@ -240,13 +246,15 @@
   "Forgotten it?": "忘れましたか？",
   "Formatting": "フォーマット",
   "Full name": "姓名",
+  "Generate invite link": "",
   "Generate new API key": "新しいAPIキーを生成",
+  "Generating link...": "",
   "Generic": "",
   "Get API key": "APIキーを取得",
   "Go back": "戻る",
   "Got it!": "できた！",
   "Guest": "",
-  "Guest users cannot edit custom emoji.": "",
+  "Guests cannot edit custom emoji.": "",
   "High contrast mode": "ハイコントラストモード",
   "Hint": "ヒント",
   "Hint (up to 80 characters)": "ヒント（80文字以下）",
@@ -260,11 +268,16 @@
   "Interface": "",
   "Invalid slash command. Check if you are missing a space after the command.": "",
   "Invalid stream id": "不正なストリームID",
+  "Invitation link: <a href=\"__link__\">__link__</a>": "",
   "Invitations": "招待",
+  "Invite": "招待",
   "Invite more users": "ユーザーを招待",
+  "Invited as": "",
   "Invited as administrator": "",
   "Invited at": "",
   "Invited by": "",
+  "Invites": "",
+  "Inviting...": "招待中...",
   "It's been a while! Since you were last here, you received <b>__unread_count__</b> new messages.": "おひさしぶりです！最後にアクセスしてから新しいメッセージが<b>__unread_count__</b>件あります。",
   "Joined": "",
   "Joining the organization": "組織に参加する",
@@ -294,7 +307,6 @@
   "Mentioned in": "メンション",
   "Message actions": "メッセージの操作",
   "Message editing": "メッセージ編集",
-  "Message feed": "メッセージフィード",
   "Message formatting": "メッセージのフォーマット",
   "Message sent when you were not subscribed": "購読前に送られたメッセージ",
   "Messages retention period in days (blank means messages are retained forever)": "メッセージの保持期間日数 (設定しないときは削除しません)",
@@ -315,6 +327,7 @@
   "Muted topics": "ミュート中のトピック",
   "N": "",
   "Name": "名前",
+  "Name or email": "",
   "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "&quot;__display_recipient__&quot;ストリームだけ表示",
   "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
@@ -369,9 +382,11 @@
   "Only organization administrators can edit these settings.": "組織の管理者だけがこの設定を変更できます。",
   "Only organization administrators can post.": "",
   "Only organization admins are allowed to post to this stream.": "",
+  "Only stream subscribers can add users to a private stream.": "",
   "Optional": "任意",
   "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "組織",
+  "Organization administrator": "組織の管理者",
   "Organization administrators can change this in the organization settings.": "",
   "Organization avatar": "組織のアバター",
   "Organization description": "",
@@ -382,6 +397,7 @@
   "Organization settings": "組織の設定",
   "Other notification settings": "他の通知設定",
   "Other permissions": "他の権限",
+  "Other settings": "",
   "Outgoing webhook message format": "Outgoing webhook メッセージフォーマット",
   "Owner": "オーナー",
   "Password": "パスワード",
@@ -400,11 +416,11 @@
   "Please specify at least one valid recipient": "",
   "Prevent users from changing their email address": "ユーザーにメールアドレスの変更をさせない",
   "Prevent users from changing their name": "ユーザーに名前の変更をさせない",
+  "Preview": "プレビュー",
   "Preview profile": "プロフィールをプレビュー",
   "Private messages and @-mentions": "プライベートメッセージと@での言及",
   "Profile": "プロフィール",
   "Profile field settings": "",
-  "Question": "質問",
   "Quote and reply": "引用して返信",
   "Reactivate": "再有効化",
   "Reactivate bot": "ボットを再有効化",
@@ -453,7 +469,9 @@
   "Sent! Your message was sent to a stream you have muted.": "",
   "Sent! Your message was sent to a topic you have muted.": "",
   "Sent! Your recent message is outside the current search.": "",
-  "Set status to away": "",
+  "Set a status message": "",
+  "Set yourself to active": "",
+  "Set yourself to away": "",
   "Settings": "設定",
   "Setup": "",
   "Setup two factor authentication": "２要素認証を設定",
@@ -496,8 +514,6 @@
   "The recipients __recipients__ are not valid": "受信者 __recipients__ が不正です",
   "The stream description has been updated!": "ストリームの説明を更新しました！",
   "The stream has been renamed!": "ストリームの名前を変更しました！",
-  "The stream to which new stream notifications go to.": "新しいストリーム通知が届くストリーム",
-  "The stream which new user signup notifications go to.": "",
   "Their password will be cleared from our systems, and any bots they maintain will be disabled.": "無効にしたユーザーのパスワードは消去され、無効にしたユーザーがメンテナンスしていたボットは無効になります。",
   "There are no messages to reply to.": "",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "この設定は<a target=\"_blank\" href=\"/help/stream-permissions\">ヘルプセンター</a>に詳しく説明されます。",
@@ -510,6 +526,7 @@
   "Time settings": "時刻の設定",
   "Time zone": "タイムゾーン",
   "Time's up!": "時間切れです！",
+  "Tip: You can also send \"/poll Some question\"": "",
   "Today": "今日",
   "Toggle subscription": "購読を切り替え",
   "Tomorrow": "明日",
@@ -538,13 +555,11 @@
   "Update successful: Subdomains allowed for __domain__": "更新成功: __domain__ のサブドメインが許可されました",
   "Update successful: Subdomains no longer allowed for __domain__": "更新成功: __domain__ のサブドメインが許可されなくなりました",
   "Updated settings!": "設定を更新しました！",
-  "Updated successfully!": "更新に成功しました！",
   "Upload avatar": "アバターをアップロード",
   "Upload icon": "アイコンをアップロード",
   "Upload image or GIF": "画像やGIFをアップロード",
   "Upload logo": "",
   "Upload new avatar": "新たにアバターをアップロード",
-  "Upload new icon": "新しいアイコンをアップロード",
   "Upload new logo": "",
   "Uploaded files": "アップロードしたファイル",
   "Uploading icon.": "アイコンをアップロードしています。",
@@ -562,6 +577,7 @@
   "User(s) invited successfully.": "ユーザーを招待しました。",
   "Username": "ユーザー名",
   "Username (a-z, 0-9, and dashes only)": "",
+  "Users": "ユーザー",
   "Users can edit the topic of any message": "ユーザーはすべてのメッセージのトピックを編集できる",
   "Video chat provider": "",
   "View edit history": "編集履歴を表示",
@@ -576,11 +592,14 @@
   "View your profile": "自分のプロフィールを表示",
   "Visual desktop notifications": "ポップアップ通知",
   "Warning: <strong>__stream_name__</strong> is a private stream.": "",
+  "We are about to have a poll.  Please wait for the question.": "",
+  "We recommend against deleting topics unless needed for security reasons or managing abuse. Deleted messages can be confusing for users who may later visit the topic via notifications.": "",
   "Who can add bots": "ボット追加許可",
   "Who can add custom emoji": "カスタム絵文字追加許可",
   "Who can create streams": "ストリーム作成許可",
   "Who can see users email addresses": "",
   "Working\u2026": "処理中...",
+  "Write": "書く",
   "Yes": "はい",
   "Yes, delete this stream": "はい、このストリームを削除します",
   "Yes, send": "はい、送信します",
@@ -609,6 +628,9 @@
   "Your account": "アカウント",
   "Your bots": "ボット",
   "Your reminder note is empty!": "",
+  "Zoom API key (required)": "",
+  "Zoom API secret (required)": "",
+  "Zoom user ID (required)": "",
   "[Condense this message]": "[このメッセージを簡略表示]",
   "[Configure]": "[設定]",
   "[Disable]": "[無効]",
