--- a/static/locale/ko/translations.json
+++ b/static/locale/ko/translations.json
@@ -17,7 +17,6 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "<p>스트림 <b>__stream_name__</b>이 존재하지 않습니다.</p><p><a href='#streams/all'>귀하의 스트림 페이지에서</a> 구독을 관리하십시오.</p>",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "<strong>__name__</strong>은 이 스트림을 구독하지 않았습니다. 언급하더라도 알림을 받지 못할 것입니다.",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "<strong>__name__</strong>은 이 스트림을 구독하지 않았습니다. 귀하가 가입하지 않으면 그들은 알림 받지 못할 것입니다.",
-  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "스트림은 이름을 가져야 합니다",
   "A stream with this name already exists": "이 이름을 가진 스트림은 이미 존재합니다",
   "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
@@ -35,6 +34,7 @@
   "Add a new profile field": "새로운 프로필 영역 추가",
   "Add a new user group": "새로운 사용자 그룹 추가",
   "Add alert word": "경고문 추가",
+  "Add choice": "",
   "Add emoji": "이모티콘 추가",
   "Add emoji reaction": "이모티콘 반응 추가",
   "Add emoji reaction (:)": "이모티콘 반응 추가 (:)",
@@ -43,11 +43,11 @@
   "Add member...": "회원 추가...",
   "Add members of your organization to mentionable user groups.": "관심있는 사용자 그룹에 조직의 회원을 추가하십시오.",
   "Add new default stream": "새로운 기본 스트림 추가",
-  "Add option": "옵션 추가",
   "Add profile field": "프로필 영역 추가",
   "Add question": "질문 추가",
   "Add stream": "스트림 추가",
   "Add task": "작업 추가",
+  "Add video call": "비디오 통화 추가",
   "Added successfully!": "성공적으로 추가되었습니다!",
   "Administrator": "관리자",
   "Administrators can always delete any message.": "관리자는 언제든지 모든 메시지를 삭제할 수 있습니다.",
@@ -61,8 +61,8 @@
   "Alert words allow you to be notified as if you were @-mentioned when certain words or phrases are used in Zulip.": "경고문은 Zulip 내에서 특정한 단어 혹은 어구가 사용될 때 귀하가 언급되는 것처럼 알림을 받을 수 있도록 합니다.",
   "All admins, and members with accounts at least 3 days old.": "적어도 3 일 이상된 계정을 가진 모든 관리자 및 회원.",
   "All admins, and members with accounts at least N days old.": "적어도 N 일 이상된 계정을 가진 모든 관리자 및 회원.",
-  "All messages": "전체 메시지",
   "All streams": "모든 스트림",
+  "Allow message content in missed message emails": "",
   "Allow message deleting": "메시지 삭제 허용",
   "Allow message editing": "메시지 편집 허용",
   "Allow subdomains": "하위 도메인 허용",
@@ -80,6 +80,7 @@
   "Are invitations required for joining the organization?": "조직에 가입하기 위해 초대가 필요합니까?",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "스트림 '__stream_name__'을 만들고 __count__ 사용자를 구독하시겠습니까?",
   "Are you sure you want to delete <b>__group_name__</b>?": "</b>__group_name__</b> 그룹을 삭제하시겠습니까?",
+  "Are you sure you want to delete all messages in <b>__topic_name__</b>?": "",
   "Are you sure you want to do this?": "이 작업을 수행 하시겠습니까?",
   "Are you sure you want to mention all <strong>__count__</strong> people in this stream?": "이 스트림에있는 모든 <strong>__count__</strong> 명의 사용자를 언급 하시겠습니까?",
   "Are you sure you want to resend the invitation to <strong><span class=\"email\"></span></strong>?": "초대장을 <strong><span class=\"email\"></span></strong> 에게 다시 보내시겠습니까?",
@@ -95,10 +96,12 @@
   "Bot email": "봇 이메일",
   "Bot list": "봇 목록",
   "Bot type": "봇 타입",
+  "Bots": "봇",
   "By deactivating <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, they will be logged out immediately.": "<strong><span class=\"user_name\"></span></strong>&lt;<span class=\"email\"></span>&gt;, 을 비활성화함으로써, 즉시 로그아웃됩니다.",
   "By deactivating your account, you will be logged out immediately.": "계정을 비활성화하면 즉시 로그아웃됩니다.",
   "Cancel": "취소",
   "Change": "변경",
+  "Change bot info and owner": "",
   "Change email": "이메일 변경",
   "Change full name": "이름 변경",
   "Change later messages to this topic": "이후 메시지들을 이 주제로 변경",
@@ -113,15 +116,14 @@
   "Check all": "모두 선택",
   "Choose avatar": "아바타 선택",
   "Choose custom color": "사용자 정의 색상 선택",
+  "Clear": "",
   "Clear avatar": "아바타 지우기",
-  "Clear away status": "",
   "Clear emoji image": "이모티콘 이미지 지우기",
   "Click anywhere on a message to reply.": "메시지에 답장하려면 아무 곳이나 클릭하십시오.",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "입력란 밖을 클릭하여 저장합니다. 추가되거나 제거된 사람에게는 자동으로 알려줍니다.",
   "Close": "닫기",
   "Collapse": "접기",
   "Compose a message to stream <b>__stream.name__</b>": "<b>__stream.name__</b> 스트림에 메시지 작성",
-  "Configure default settings for new users joining this organization.": "조직에 가입하는 새로운 사용자를 위한 기본 설정을 구성합니다.",
   "Configure regular expression patterns that will be automatically linkified when used in Zulip message bodies or topics.  For example to automatically linkify commit IDs and issue numbers (e.g. #123) to the corresponding items in a GitHub project, you could use the following:": "Zulip 메시지 본문 또는 주제에서 사용될 때 자동으로 링크 될 정규식 패턴을 구성하십시오. 예를 들어 커밋 ID와 발급 번호 (예 : # 123)를 GitHub 프로젝트의 해당 항목에 자동으로 연결하려면 다음을 사용할 수 있습니다.",
   "Configure the authentication methods for your organization.": "조직의 인증 방법을 구성합니다.",
   "Configure the default streams new users are subscribed to when joining your organization.": "조직에 가입할 때 새로운 사용자가 구독하는 기본 스트림을 구성합니다.",
@@ -154,10 +156,12 @@
   "Deactivated users": "비활성화된 사용자들",
   "Deactivation encountered an error. Please reload and try again.": "비활성화 중 오류가 발생했습니다. 새로고침하고 다시 시도하십시오.",
   "Default language": "기본 언어",
+  "Default settings for new users joining this organization.": "",
   "Default streams": "기본 스트림",
   "Default user settings": "기본 사용자 설정",
   "Delete": "삭제",
   "Delete alert word": "경고문 삭제",
+  "Delete all messages in <b>__topic_name__</b>": "",
   "Delete avatar": "아바타 삭제",
   "Delete bot": "봇 삭제",
   "Delete draft": "임시 보관한 내용 삭제",
@@ -165,7 +169,9 @@
   "Delete icon": "아이콘 삭제",
   "Delete logo": "",
   "Delete message": "메시지 삭제",
+  "Delete messages": "",
   "Delete stream": "스트림 삭제",
+  "Delete topic": "",
   "Delete user group": "사용자 그룹 삭제",
   "Deleted successfully!": "성공적으로 삭제되었습니다!",
   "Deleting this stream will immediately unsubscribe everyone, and the stream's content will not be recoverable.": "이 스트림을 삭제하면 모든 사용자가 즉시 구독 취소되며 스트림의 콘텐츠는 복구할 수 없습니다.",
@@ -189,7 +195,7 @@
   "EDITED": "편집됨",
   "Edit": "편집",
   "Edit bot": "봇 편집",
-  "Edit question": "질문 편집",
+  "Edit status message": "",
   "Edit user": "사용자 편집",
   "Edit your profile": "프로필 편집",
   "Edited (__last_edit_timestr__)": "편집됨 (__last_edit_timestr__)",
@@ -240,13 +246,15 @@
   "Forgotten it?": "잊어버리셨습니까?",
   "Formatting": "형식 작성",
   "Full name": "이름 전체",
+  "Generate invite link": "",
   "Generate new API key": "새로운 API 키 생성",
+  "Generating link...": "",
   "Generic": "일반적인",
   "Get API key": "API 키 가져오기",
   "Go back": "뒤로가기",
   "Got it!": "알겠습니다!",
   "Guest": "손님",
-  "Guest users cannot edit custom emoji.": "손님 사용자는 사용자 정의 이모티콘을 편집할 수 없습니다.",
+  "Guests cannot edit custom emoji.": "",
   "High contrast mode": "고대비 모드",
   "Hint": "힌트",
   "Hint (up to 80 characters)": "힌트 ( 80문자 까지로 제한)",
@@ -260,11 +268,16 @@
   "Interface": "인터페이스",
   "Invalid slash command. Check if you are missing a space after the command.": "슬래시 명령이 유효하지 않습니다. 명령 뒤에 공백이 있는지 확인하십시오.",
   "Invalid stream id": "유효하지 않은 스트림 아이디",
+  "Invitation link: <a href=\"__link__\">__link__</a>": "",
   "Invitations": "초대장",
+  "Invite": "초대",
   "Invite more users": "더 많은 사용자 초대하기",
+  "Invited as": "",
   "Invited as administrator": "관리자로 초대됨",
   "Invited at": "초청 시간 ",
   "Invited by": "초청자",
+  "Invites": "",
+  "Inviting...": "초대 중...",
   "It's been a while! Since you were last here, you received <b>__unread_count__</b> new messages.": "오랜만이네요! 그 동안 <b>__unread_count__</b>개의 새 메시지를 받았습니다.",
   "Joined": "가입됨",
   "Joining the organization": "조직 가입",
@@ -294,7 +307,6 @@
   "Mentioned in": "언급 됨",
   "Message actions": "메시지 동작",
   "Message editing": "메시지 편집",
-  "Message feed": "메시지 피드",
   "Message formatting": "메시지 형식",
   "Message sent when you were not subscribed": "구독하지 않았을 때 보낸 메시지",
   "Messages retention period in days (blank means messages are retained forever)": "메시지 보유 기간 :일 (공백은 메시지가 영원히 보존됨을 의미 함)",
@@ -315,6 +327,7 @@
   "Muted topics": "뮤트된 주제들",
   "N": "N",
   "Name": "이름",
+  "Name or email": "",
   "Narrow to __- message_recipient__": "__-message_recipient__만 보기",
   "Narrow to stream &quot;__display_recipient__&quot;": "스트림 &quot;__display_recipient__&quot; 만 보기",
   "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "스트림 &quot;__display_recipient__&quot;, 주제 &quot;__topic__&quot;만 보기",
@@ -369,9 +382,11 @@
   "Only organization administrators can edit these settings.": "조직 관리자만이 설정을 편집 할 수 있습니다.",
   "Only organization administrators can post.": "오직 조직 관리자만이 게시할 수 있습니다.",
   "Only organization admins are allowed to post to this stream.": "이 스트림에는 조직 관리자만 게시할 수 있습니다.",
+  "Only stream subscribers can add users to a private stream.": "",
   "Optional": "선택할 수 있는",
   "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "조직",
+  "Organization administrator": "",
   "Organization administrators can change this in the organization settings.": "조직의 관리자는 이것을 조직 설정에서 변경할 수 있습니다.",
   "Organization avatar": "조직 아바타",
   "Organization description": "조직 설명",
@@ -382,6 +397,7 @@
   "Organization settings": "조직 설정",
   "Other notification settings": "다른 알림 환경",
   "Other permissions": "기타 권한",
+  "Other settings": "",
   "Outgoing webhook message format": "나가는 웹후크 메시지 형식",
   "Owner": "소유자",
   "Password": "비밀번호",
@@ -400,11 +416,11 @@
   "Please specify at least one valid recipient": "적어도 한명의 유효한 받는 사람을 명시해 주시기 바랍니다. ",
   "Prevent users from changing their email address": "사용자가 이메일 주소를 변경하지 못하도록 방지",
   "Prevent users from changing their name": "사용자가 이름을 변경하지 못하도록 막습니다.",
+  "Preview": "미리보기",
   "Preview profile": "이전 프로필",
   "Private messages and @-mentions": "비공개 메시지 및 @-mentions",
   "Profile": "프로필",
   "Profile field settings": "프로필 영역 설정",
-  "Question": "질문",
   "Quote and reply": "인용문과 답장",
   "Reactivate": "재활성화",
   "Reactivate bot": "봇 재활성화",
@@ -453,7 +469,9 @@
   "Sent! Your message was sent to a stream you have muted.": "보냈습니다! 귀하의 메시지는 귀하가 뮤트한 스트림으로 보내졌습니다.",
   "Sent! Your message was sent to a topic you have muted.": "보냈습니다! 귀하의 메시지는 귀하가 뮤트한 주제로 보내졌습니다.",
   "Sent! Your recent message is outside the current search.": "보냈습니다! 귀하의 최근 메시지는 현재 검색 영역에 벗어납니다. ",
-  "Set status to away": "",
+  "Set a status message": "",
+  "Set yourself to active": "",
+  "Set yourself to away": "",
   "Settings": "설정",
   "Setup": "설정",
   "Setup two factor authentication": "두 가지 매체를 사용한 인증 설정",
@@ -496,8 +514,6 @@
   "The recipients __recipients__ are not valid": "받는 사람 __recipients__이 유효하지 않습니다.",
   "The stream description has been updated!": "스트림 설명이 업데이트되었습니다!",
   "The stream has been renamed!": "스트림명이 바뀌었습니다!",
-  "The stream to which new stream notifications go to.": "새로운 스트림 알림이 이동하는 스트림.",
-  "The stream which new user signup notifications go to.": "새로운 사용자 가입 알림이 이동하는 스트림.",
   "Their password will be cleared from our systems, and any bots they maintain will be disabled.": "그들의 비밀번호가 시스템에서 지워지고, 그들이 유지하는 모든 봇은 사용할 수 없게됩니다.",
   "There are no messages to reply to.": "답장할 메시지가 없습니다.",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "이 설정은 <a target=\"_blank\" href=\"/help/stream-permissions\">도움 센터</a>에 자세히 설명되어 있습니다.",
@@ -510,6 +526,7 @@
   "Time settings": "시간 설정",
   "Time zone": "시간대",
   "Time's up!": "시간이 다 되었습니다!",
+  "Tip: You can also send \"/poll Some question\"": "",
   "Today": "오늘",
   "Toggle subscription": "구독 토글하기",
   "Tomorrow": "내일",
@@ -538,13 +555,11 @@
   "Update successful: Subdomains allowed for __domain__": "업데이트 성공: __domain__에 허용된 하위 도메인",
   "Update successful: Subdomains no longer allowed for __domain__": "업데이트 성공: 하위 도메인이 더 이상 __domain__에 허용되지 않음",
   "Updated settings!": "업데이트된 설정!",
-  "Updated successfully!": "성공적으로 업데이트되었습니다!",
   "Upload avatar": "아바타 업로드",
   "Upload icon": "아이콘 업로드",
   "Upload image or GIF": "이미지 또는 GIF 업로드",
   "Upload logo": "",
   "Upload new avatar": "새로운 아바타 업로드",
-  "Upload new icon": "새로운 아이콘 업로드",
   "Upload new logo": "",
   "Uploaded files": "업로드된 파일",
   "Uploading icon.": "아이콘 업로드하기.",
@@ -562,6 +577,7 @@
   "User(s) invited successfully.": "사용자(들)가 성공적으로 초대되었습니다.",
   "Username": "사용자명",
   "Username (a-z, 0-9, and dashes only)": "사용자명 (a-z, 0-9, 대시만 가능)",
+  "Users": "사용자",
   "Users can edit the topic of any message": "사용자는 어떠한 메시지의 주제를 수정할 수 있습니다.",
   "Video chat provider": "영상 채팅 공급자",
   "View edit history": "편집 기록보기",
@@ -576,11 +592,14 @@
   "View your profile": "귀하의 프로필 보기",
   "Visual desktop notifications": "데스크탑 시각적 알림",
   "Warning: <strong>__stream_name__</strong> is a private stream.": "경고 : <strong>__stream_name__</strong>은 비공개 스트림입니다.",
+  "We are about to have a poll.  Please wait for the question.": "",
+  "We recommend against deleting topics unless needed for security reasons or managing abuse. Deleted messages can be confusing for users who may later visit the topic via notifications.": "",
   "Who can add bots": "봇을 추가할 수 있는 사람",
   "Who can add custom emoji": "사용자 지정 이모티콘을 추가할 수 있는 사람",
   "Who can create streams": "스트림을 생성할 수 있는 사람",
   "Who can see users email addresses": "사용자의 이메일을 볼 수 있는 사람",
   "Working\u2026": "동작 중..",
+  "Write": "쓰기",
   "Yes": "네",
   "Yes, delete this stream": "네, 이 스트림을 삭제합니다",
   "Yes, send": "네, 보냅니다",
@@ -609,6 +628,9 @@
   "Your account": "귀하의 계정",
   "Your bots": "귀하의 봇",
   "Your reminder note is empty!": "알림 메모가 비어 있습니다!",
+  "Zoom API key (required)": "",
+  "Zoom API secret (required)": "",
+  "Zoom user ID (required)": "",
   "[Condense this message]": "[이 메시지 압축]",
   "[Configure]": "[구성]",
   "[Disable]": "[불가능]",
