--- a/static/locale/ru/translations.json
+++ b/static/locale/ru/translations.json
@@ -17,7 +17,6 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "<p>Канал <b>__stream_name__</b> не существует\\.</p><p>Управляй своими подписками на <a href='#streams/all'>своей странице Каналы</a>\\.</p> ",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "<strong>__name__</strong> не подписан(-ы) на этот канал. Они не будут уведомлены, если Вы упомянете их.",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "<strong>__name__</strong> не подписан(ы) на этот канал. Они не будут получать уведомления, пока вы их не подпишете.",
-  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "Укажите название канала",
   "A stream with this name already exists": "Канал с таким именем уже существует",
   "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
@@ -35,6 +34,7 @@
   "Add a new profile field": "Добавить новое поле профиля",
   "Add a new user group": "Добавить новую группу пользователей",
   "Add alert word": "Добавить сигнальное слово",
+  "Add choice": "",
   "Add emoji": "Добавить эмодзи",
   "Add emoji reaction": "Добавить эмодзи реакцию",
   "Add emoji reaction (:)": "Добавить эмодзи реакцию (:)",
@@ -43,11 +43,11 @@
   "Add member...": "Добавить участника...",
   "Add members of your organization to mentionable user groups.": "Добавить пользователей вашей организации в группу которую можно указать.",
   "Add new default stream": "Добавить новый канал по умолчанию",
-  "Add option": "Добавить опцию",
   "Add profile field": "Добавить поле профиля",
   "Add question": "Добавить вопрос",
   "Add stream": "Добавить канал",
   "Add task": "Добавить задачу",
+  "Add video call": "Добавить видеовызов",
   "Added successfully!": "Добавлено успешно!",
   "Administrator": "",
   "Administrators can always delete any message.": "Администраторы могут всегда удалить любое сообщение.",
@@ -61,8 +61,8 @@
   "Alert words allow you to be notified as if you were @-mentioned when certain words or phrases are used in Zulip.": "Сигнальные слова позволяют вам получать уведомления, когда кто-то использует эти слова или фразы в Zulip",
   "All admins, and members with accounts at least 3 days old.": "",
   "All admins, and members with accounts at least N days old.": "",
-  "All messages": "Все сообщения",
   "All streams": "Все каналы",
+  "Allow message content in missed message emails": "",
   "Allow message deleting": "Разрешить удаление сообщений",
   "Allow message editing": "Разрешить редактирование сообщений",
   "Allow subdomains": "Разрешать поддомены",
@@ -80,6 +80,7 @@
   "Are invitations required for joining the organization?": "Необходимо ли приглашение чтобы присоединиться к организации?",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "Вы уверены, что хотите создать канал '__stream_name__' и подписать на него __count__ пользователей?",
   "Are you sure you want to delete <b>__group_name__</b>?": "",
+  "Are you sure you want to delete all messages in <b>__topic_name__</b>?": "",
   "Are you sure you want to do this?": "Вы уверены, что хотите сделать это?",
   "Are you sure you want to mention all <strong>__count__</strong> people in this stream?": "Вы уверены, что хотите упомянуть всех <strong>__count__</strong> участников канала?",
   "Are you sure you want to resend the invitation to <strong><span class=\"email\"></span></strong>?": "Вы действительно хотите отправить повторное приглашение <strong><span class=\\\\\"email\\\\\"></span></strong>?",
@@ -95,10 +96,12 @@
   "Bot email": "Email бота",
   "Bot list": "Список ботов",
   "Bot type": "Тип бота",
+  "Bots": "Боты",
   "By deactivating <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, they will be logged out immediately.": "Если вы отключите учетную запись <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, они автоматически выйдут из системы.",
   "By deactivating your account, you will be logged out immediately.": "Отключив свою учетную запись, вы автоматически выйдете из системы.",
   "Cancel": "Отмена",
   "Change": "Изменить",
+  "Change bot info and owner": "",
   "Change email": "Изменить email",
   "Change full name": "Изменить полное имя",
   "Change later messages to this topic": "Изменить последующие сообщения в этой теме",
@@ -113,15 +116,14 @@
   "Check all": "Выбрать все",
   "Choose avatar": "Выберите аватар",
   "Choose custom color": "Выберите произвольный цвет",
+  "Clear": "",
   "Clear avatar": "Очистить аватар",
-  "Clear away status": "",
   "Clear emoji image": "Очистить изображение эмодзи",
   "Click anywhere on a message to reply.": "Кликните в любое место сообщения чтобы ответить.",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "Для сохранения нажмите вне поля ввода. Мы автоматически уведомим всех, кто был добавлен или удален.",
   "Close": "Закрыть",
   "Collapse": "Свернуть",
   "Compose a message to stream <b>__stream.name__</b>": "Написать сообщение в канал <b>__stream.name__</b>",
-  "Configure default settings for new users joining this organization.": "Настроить параметры по умолчанию для новых пользователей присоединившихся к этой организации.",
   "Configure regular expression patterns that will be automatically linkified when used in Zulip message bodies or topics.  For example to automatically linkify commit IDs and issue numbers (e.g. #123) to the corresponding items in a GitHub project, you could use the following:": "Настройте шаблоны регулярных выражений, которые будут автоматически вставлять ссылки при использовании в телах или темах сообщений Zulip. Например, чтобы автоматически привязывать идентификаторы коммитов и номера проблем (например, #123) к соответствующим элементам проекта GitHub, вы можете использовать следующее:",
   "Configure the authentication methods for your organization.": "Настроить метод аутентификации для вашей организации",
   "Configure the default streams new users are subscribed to when joining your organization.": "Настроить каналы по умолчанию на которые будут подписаны новые пользователи вашей организации.",
@@ -154,10 +156,12 @@
   "Deactivated users": "Отключенные пользователи",
   "Deactivation encountered an error. Please reload and try again.": "Ошибка деактивации. Перезагрузите и попробуйте еще раз.",
   "Default language": "Язык по умолчанию",
+  "Default settings for new users joining this organization.": "",
   "Default streams": "Каналы по умолчанию",
   "Default user settings": "Настройки пользователя по умолчанию",
   "Delete": "Удалить",
   "Delete alert word": "Удалить сигнальное слово",
+  "Delete all messages in <b>__topic_name__</b>": "",
   "Delete avatar": "Удалить аватар",
   "Delete bot": "Удалить бота",
   "Delete draft": "Удалить черновик",
@@ -165,7 +169,9 @@
   "Delete icon": "Удалить иконку",
   "Delete logo": "",
   "Delete message": "Удалить сообщение",
+  "Delete messages": "",
   "Delete stream": "Удалить канал",
+  "Delete topic": "",
   "Delete user group": "",
   "Deleted successfully!": "Удалено успешно!",
   "Deleting this stream will immediately unsubscribe everyone, and the stream's content will not be recoverable.": "Удаление этого канала моментально отпишет от него всех участников, а сообщения в канале будут безвозвратно удалены.",
@@ -189,7 +195,7 @@
   "EDITED": "ИЗМЕНЕНО",
   "Edit": "Изменить",
   "Edit bot": "Изменить бота",
-  "Edit question": "Править вопрос",
+  "Edit status message": "",
   "Edit user": "Изменить пользователя",
   "Edit your profile": "Редактировать свой профиль",
   "Edited (__last_edit_timestr__)": "Изменено (__last_edit_timestr__)",
@@ -240,13 +246,15 @@
   "Forgotten it?": "Забыли?",
   "Formatting": "Форматирование текста",
   "Full name": "Полное имя",
+  "Generate invite link": "",
   "Generate new API key": "Сгенерировать новый API-ключ",
+  "Generating link...": "",
   "Generic": "Общий",
   "Get API key": "Получить API-ключ",
   "Go back": "Вернуться",
   "Got it!": "Понял!",
   "Guest": "",
-  "Guest users cannot edit custom emoji.": "",
+  "Guests cannot edit custom emoji.": "",
   "High contrast mode": "Высоко-контрастный режим",
   "Hint": "Совет",
   "Hint (up to 80 characters)": "Подсказка (до 80 символов)",
@@ -260,11 +268,16 @@
   "Interface": "Интерфейс",
   "Invalid slash command. Check if you are missing a space after the command.": "Неверная команда косой черты. Проверьте, возможно вы пропустили пробел после команды.",
   "Invalid stream id": "Неверный код канала",
+  "Invitation link: <a href=\"__link__\">__link__</a>": "",
   "Invitations": "Приглашения",
+  "Invite": "Пригласить",
   "Invite more users": "Пригласить еще пользователей",
+  "Invited as": "",
   "Invited as administrator": "Приглашен как администратор",
   "Invited at": "Приглашен в",
   "Invited by": "Пригласил",
+  "Invites": "",
+  "Inviting...": "Приглашаю...",
   "It's been a while! Since you were last here, you received <b>__unread_count__</b> new messages.": "С возвращением! Пока вас не было, для вас накопилось <b>__unread_count__</b> новых сообщений.",
   "Joined": "",
   "Joining the organization": "Присоединение к организации",
@@ -294,7 +307,6 @@
   "Mentioned in": "Упомянут в",
   "Message actions": "Действия с сообщением",
   "Message editing": "Редактирование сообщений",
-  "Message feed": "Поток сообщений",
   "Message formatting": "Форматирование сообщений",
   "Message sent when you were not subscribed": "Сообщение было отправлено, когда вы были не подписаны на канал",
   "Messages retention period in days (blank means messages are retained forever)": "Период хранения сообщений в днях (пустое значение означает сохранять навсегда)",
@@ -315,6 +327,7 @@
   "Muted topics": "Заглушенные темы",
   "N": "N",
   "Name": "Имя",
+  "Name or email": "",
   "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "Показать только канал &quot;__display_recipient__&quot;",
   "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
@@ -369,9 +382,11 @@
   "Only organization administrators can edit these settings.": "Только администраторы организации могут изменять эти настройки.",
   "Only organization administrators can post.": "Только администраторы организации могут писать",
   "Only organization admins are allowed to post to this stream.": "Только администратор организации может отправлять сообщения в этот канал.",
+  "Only stream subscribers can add users to a private stream.": "",
   "Optional": "Необязательно",
   "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "Организация",
+  "Organization administrator": "Администратор организации",
   "Organization administrators can change this in the organization settings.": "Администраторы организации могут изменить это в настройках организации.",
   "Organization avatar": "Аватар организации",
   "Organization description": "Описание организации.",
@@ -382,6 +397,7 @@
   "Organization settings": "Настройки организации",
   "Other notification settings": "Другие настройки оповещени",
   "Other permissions": "Другие разрешения",
+  "Other settings": "",
   "Outgoing webhook message format": "Формат сообщения исходящего вебхука",
   "Owner": "Владелец",
   "Password": "Пароль",
@@ -400,11 +416,11 @@
   "Please specify at least one valid recipient": "Укажите хотя бы одного получателя",
   "Prevent users from changing their email address": "Запретить пользователям изменять свой email адрес",
   "Prevent users from changing their name": "Запретить пользователям изменять свое имя",
+  "Preview": "Предпросмотр",
   "Preview profile": "Предпросмотр профиля",
   "Private messages and @-mentions": "Личные сообщения и @-упоминания",
   "Profile": "Профиль",
   "Profile field settings": "Настройки полей профиля",
-  "Question": "Вопрос",
   "Quote and reply": "Ответить с цитированием",
   "Reactivate": "Активировать",
   "Reactivate bot": "Включить бота",
@@ -453,7 +469,9 @@
   "Sent! Your message was sent to a stream you have muted.": "",
   "Sent! Your message was sent to a topic you have muted.": "",
   "Sent! Your recent message is outside the current search.": "",
-  "Set status to away": "",
+  "Set a status message": "",
+  "Set yourself to active": "",
+  "Set yourself to away": "",
   "Settings": "Настройки",
   "Setup": "Настройка",
   "Setup two factor authentication": "Настройка двухфакторной аутентификации",
@@ -496,8 +514,6 @@
   "The recipients __recipients__ are not valid": "Получатели __recipients__ не являются допустимыми",
   "The stream description has been updated!": "Описание канала обновлено!",
   "The stream has been renamed!": "Канал переименован!",
-  "The stream to which new stream notifications go to.": "Канал в который поступают уведомления о новых каналах.",
-  "The stream which new user signup notifications go to.": "Канал, в который поступают уведомления о регистрации новых пользователей.",
   "Their password will be cleared from our systems, and any bots they maintain will be disabled.": "Их пароли будут стерты в нашей системе, а все их боты будут отключены.",
   "There are no messages to reply to.": "Нет сообщений для ответа.",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "Эти настройки подробно освещены в <a target=\"_blank\" href=\"/help/stream-permissions\">центре помощи</a>.",
@@ -510,6 +526,7 @@
   "Time settings": "Настройки времени",
   "Time zone": "Часовой пояс",
   "Time's up!": "Время вышло!",
+  "Tip: You can also send \"/poll Some question\"": "",
   "Today": "Сегодня",
   "Toggle subscription": "Переключить подписку",
   "Tomorrow": "Завтра",
@@ -538,13 +555,11 @@
   "Update successful: Subdomains allowed for __domain__": "Обновлено успешно: поддомены разрешены для __domain__",
   "Update successful: Subdomains no longer allowed for __domain__": "Обновлено успешно: поддомены больше не разрешены для __domain__",
   "Updated settings!": "Настройки обновлены!",
-  "Updated successfully!": "Обновлено успешно!",
   "Upload avatar": "Загрузить аватар",
   "Upload icon": "Загрузить иконку",
   "Upload image or GIF": "Загрузить изображение или GIF",
   "Upload logo": "",
   "Upload new avatar": "Загрузить новый аватар",
-  "Upload new icon": "Загрузить новую иконку",
   "Upload new logo": "",
   "Uploaded files": "Загруженные файлы",
   "Uploading icon.": "Загрузка иконки.",
@@ -562,6 +577,7 @@
   "User(s) invited successfully.": "Пользователи успешно приглашены.",
   "Username": "Имя пользователя",
   "Username (a-z, 0-9, and dashes only)": "",
+  "Users": "Пользователи",
   "Users can edit the topic of any message": "Пользователи могут редактировать тему любого сообщения",
   "Video chat provider": "Провайдер видеочата",
   "View edit history": "Показать историю редактирования",
@@ -576,11 +592,14 @@
   "View your profile": "Отрыть профиль пользователя",
   "Visual desktop notifications": "Визуальные оповещения на рабочем столе",
   "Warning: <strong>__stream_name__</strong> is a private stream.": "Предупреждение: <strong> __ stream_name __ </ strong> - закрытый канал.",
+  "We are about to have a poll.  Please wait for the question.": "",
+  "We recommend against deleting topics unless needed for security reasons or managing abuse. Deleted messages can be confusing for users who may later visit the topic via notifications.": "",
   "Who can add bots": "Кто может добавлять ботов",
   "Who can add custom emoji": "Кто может добавлять эмодзи",
   "Who can create streams": "Кто может создавать каналы",
   "Who can see users email addresses": "",
   "Working\u2026": "Работаем\\u2026",
+  "Write": "Редактирование",
   "Yes": "Да",
   "Yes, delete this stream": "Да, удалить этот канал",
   "Yes, send": "Да, отправить",
@@ -609,6 +628,9 @@
   "Your account": "Ваша учетная запись",
   "Your bots": "Ваши боты",
   "Your reminder note is empty!": "Текст вашего напоминания пуст!",
+  "Zoom API key (required)": "",
+  "Zoom API secret (required)": "",
+  "Zoom user ID (required)": "",
   "[Condense this message]": "[Свернуть это сообщение]",
   "[Configure]": "[Настроить]",
   "[Disable]": "[Отключить]",
