--- a/static/locale/tr/translations.json
+++ b/static/locale/tr/translations.json
@@ -17,7 +17,6 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "<p> <b>__stream_name__</b> adli kanal mevcut değil. </p><p>Aboneliklerinizi yönetmek için  <a href='#streams/all'>kanallar sayfanızı </a>ziyaret edebilirsiniz.</p>",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "<strong>__name__</strong> bu kanala abone değil. Kendisini üye yapmadığınız taktidrde bildirim almayacak.",
-  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "Kanalın bir adı olmalıdır",
   "A stream with this name already exists": "Bu adla bir kanal hali hazırda mevcut.",
   "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
@@ -35,6 +34,7 @@
   "Add a new profile field": "Yeni bir profil alanı ekle",
   "Add a new user group": "Yeni bir kullanıcı grubu ekle",
   "Add alert word": "Uyarı kelimesi ekle",
+  "Add choice": "",
   "Add emoji": "Emoji ekle",
   "Add emoji reaction": "Emoji tepkisi ekle",
   "Add emoji reaction (:)": "Emoji tepkisi ekle (:)",
@@ -43,11 +43,11 @@
   "Add member...": "Üye ekle...",
   "Add members of your organization to mentionable user groups.": "Organizasyon üyelerini isimle anılabilen kullanıcı gruplarına ekle.",
   "Add new default stream": "Yeni varsayılan kanal ekle",
-  "Add option": "",
   "Add profile field": "Profile alanı ekle",
   "Add question": "Soru ekle",
   "Add stream": "Kanal ekle",
   "Add task": "Görev ekle",
+  "Add video call": "Görüntülü çağrı ekle",
   "Added successfully!": "Başarıyla eklendi!",
   "Administrator": "",
   "Administrators can always delete any message.": "Yöneticiler her zaman iletileri silebilir.",
@@ -62,8 +62,8 @@
   "Alert words allow you to be notified as if you were @-mentioned when certain words or phrases are used in Zulip.": "Uyarı kelimeleri belli kelime ve ifadeler kullanıldığında sanki @-anma yapılmış gibi haberdar edilmenizi sağlar.",
   "All admins, and members with accounts at least 3 days old.": "",
   "All admins, and members with accounts at least N days old.": "",
-  "All messages": "Tüm iletiler",
   "All streams": "Tüm kanallar",
+  "Allow message content in missed message emails": "",
   "Allow message deleting": "",
   "Allow message editing": "",
   "Allow subdomains": "Alt alan adlarına izin ver",
@@ -81,6 +81,7 @@
   "Are invitations required for joining the organization?": "",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "'__stream_name__' kalanılını oluşturup __count__ kullanıcıyı bu kanala üye yapmak istediğinizden emin misiniz?",
   "Are you sure you want to delete <b>__group_name__</b>?": "",
+  "Are you sure you want to delete all messages in <b>__topic_name__</b>?": "",
   "Are you sure you want to do this?": "Bunu yapmak istediğinizden emin misiniz?",
   "Are you sure you want to mention all <strong>__count__</strong> people in this stream?": "Bu kanaldaki <strong>__count__</strong> kişiyi ismen anmak istediğinizden emin misiniz?",
   "Are you sure you want to resend the invitation to <strong><span class=\"email\"></span></strong>?": "<strong><span class=\"email\"></span></strong> adresine yeniden davetiye göndermek istediğınizden emini misiniz?",
@@ -96,10 +97,12 @@
   "Bot email": "Bot e-posta",
   "Bot list": "Bot listesi",
   "Bot type": "Bot türü",
+  "Bots": "Botlar",
   "By deactivating <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, they will be logged out immediately.": "<strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, kullanıcısını devre dışı yaptığınız anda sistemden çıkartılacaktır.",
   "By deactivating your account, you will be logged out immediately.": "Hesabınızı devre dışı yaptığınızda hemen sistemden çıkarılacaksınız.",
   "Cancel": "İptal",
   "Change": "Değiştir",
+  "Change bot info and owner": "",
   "Change email": "E-posta değiştir",
   "Change full name": "Tam adı değiştir",
   "Change later messages to this topic": "Bu konuya sonradan gönderilen iletileri değiştir",
@@ -114,15 +117,14 @@
   "Check all": "Tümünü seç",
   "Choose avatar": "Avatar seçiniz",
   "Choose custom color": "Özel renk reç",
+  "Clear": "",
   "Clear avatar": "Avatarı temizle",
-  "Clear away status": "",
   "Clear emoji image": "Emoji resmini temizle",
   "Click anywhere on a message to reply.": "Cevap vermek için ileti üzerinde herhangi bir yere tıklayın.",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "Kayıt etmek için girdi kutusunun dışına tıklayınız. Eklenen veya çıkarılan herkese otomatik olarak bilgi gönderilecektir.",
   "Close": "Kapat",
   "Collapse": "Daralt",
   "Compose a message to stream <b>__stream.name__</b>": " <b>__stream.name__</b> kanalına yeni bir ileti gönderin",
-  "Configure default settings for new users joining this organization.": "Bu organizasyona yeni katılan kullanıcılar için varsayılan seçenekleri ayarlayın",
   "Configure regular expression patterns that will be automatically linkified when used in Zulip message bodies or topics.  For example to automatically linkify commit IDs and issue numbers (e.g. #123) to the corresponding items in a GitHub project, you could use the following:": "Zulip mesaj gövdelerinde veya konularda kullanıldığında otomatik olarak bağlanılacak normal ifade modellerini yapılandırın. Örneğin, taahhüt kimliklerini ve sayıları (ör. # 123) otomatik olarak bir GitHub projesindeki karşılık gelen öğelere bağlamak için şunları kullanabilirsiniz:",
   "Configure the authentication methods for your organization.": "Kuruluşunuz için kimlik doğrulama yöntemlerini yapılandırın.",
   "Configure the default streams new users are subscribed to when joining your organization.": "Kuruluşunuza katılırken yeni kullanıcıların abone olduğu varsayılan kanalları yapılandırın.",
@@ -155,10 +157,12 @@
   "Deactivated users": "Devre dışı kullanıcılar",
   "Deactivation encountered an error. Please reload and try again.": "Devre dışı alma işleminde hata ile karşılaşıldı. Lütfen yeniden yükleyip tekrar deneyiniz.",
   "Default language": "Varsayılan dil",
+  "Default settings for new users joining this organization.": "",
   "Default streams": "Varsayılan kanallar",
   "Default user settings": "Varsayılan kullanıcı ayarları",
   "Delete": "Sil",
   "Delete alert word": "Uyarı kelimesini sil",
+  "Delete all messages in <b>__topic_name__</b>": "",
   "Delete avatar": "Avatar sil",
   "Delete bot": "Bot sil",
   "Delete draft": "Taslak sil",
@@ -166,7 +170,9 @@
   "Delete icon": "Ikon sil",
   "Delete logo": "",
   "Delete message": "İletiyi silin",
+  "Delete messages": "",
   "Delete stream": "Kanal sil",
+  "Delete topic": "",
   "Delete user group": "",
   "Deleted successfully!": "Başarıyla silndi!",
   "Deleting this stream will immediately unsubscribe everyone, and the stream's content will not be recoverable.": "Bu kanalı sildiğinizde herkes üyelikten çıkarılacak, ve kanal içeriği geri getirilemeyecek.",
@@ -190,7 +196,7 @@
   "EDITED": "DÜZENLENMİŞ",
   "Edit": "Düzenle",
   "Edit bot": "Botu düzenle",
-  "Edit question": "",
+  "Edit status message": "",
   "Edit user": "Kullanıcıyı düzenle",
   "Edit your profile": "Profil düzenle",
   "Edited (__last_edit_timestr__)": "Düzenlenmiş (__last_edit_timestr__)",
@@ -241,13 +247,15 @@
   "Forgotten it?": "Unuttunuz mu?",
   "Formatting": "Biçemleme",
   "Full name": "Tam isim",
+  "Generate invite link": "",
   "Generate new API key": "Yeni API key oluştur",
+  "Generating link...": "",
   "Generic": "Genel",
   "Get API key": "API key al",
   "Go back": "Geri git",
   "Got it!": "Tamam !",
   "Guest": "",
-  "Guest users cannot edit custom emoji.": "",
+  "Guests cannot edit custom emoji.": "",
   "High contrast mode": "Yüksek kontrast modu",
   "Hint": "",
   "Hint (up to 80 characters)": "",
@@ -261,11 +269,16 @@
   "Interface": "Arayüz",
   "Invalid slash command. Check if you are missing a space after the command.": "Geçersiz slash (/) komutu. Komuttan sonra boşluk olmamasına dikkat edin.",
   "Invalid stream id": "Geçersiz kanal kimliği",
+  "Invitation link: <a href=\"__link__\">__link__</a>": "",
   "Invitations": "Davetler",
+  "Invite": "Davet et",
   "Invite more users": "Daha fazla kullanıcı davet et",
+  "Invited as": "",
   "Invited as administrator": "Yönetici olarak davet edildi",
   "Invited at": "Davetli",
   "Invited by": "Tarafından davetli",
+  "Invites": "",
+  "Inviting...": "Davet ediyor...",
   "It's been a while! Since you were last here, you received <b>__unread_count__</b> new messages.": "Uzun zaman oldu! Son ziyaretinizden bu yana, <b> __unread_count__ </b>yeni ileti aldınız.",
   "Joined": "",
   "Joining the organization": "Organizasyona katılmak",
@@ -295,7 +308,6 @@
   "Mentioned in": "Anılan yer",
   "Message actions": "İleti eylemleri",
   "Message editing": "İleti değiştirme",
-  "Message feed": "İleti akışı",
   "Message formatting": "İleti biçemleme",
   "Message sent when you were not subscribed": "Üye olmadan önce gönderilmiş ileti",
   "Messages retention period in days (blank means messages are retained forever)": "Gün olarak ileti saklama süresi ( boş bırakılırsa iletiler sonsuz saklanır )",
@@ -316,6 +328,7 @@
   "Muted topics": "Susturulmuş konular",
   "N": "",
   "Name": "İsim",
+  "Name or email": "",
   "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "&quot;__display_recipient__&quot; Kanala odakla",
   "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
@@ -370,9 +383,11 @@
   "Only organization administrators can edit these settings.": "Bu ayarları sadece organizasyon yöneticileri değiştirebilir.",
   "Only organization administrators can post.": "",
   "Only organization admins are allowed to post to this stream.": "Bu kanala sadece organizasyon adminleri yazabilirler.",
+  "Only stream subscribers can add users to a private stream.": "",
   "Optional": "İsteğe bağlı",
   "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "Organizasyon",
+  "Organization administrator": "",
   "Organization administrators can change this in the organization settings.": "Bu ayarı organizasyon yöneticileri organizasyon ayarları sayfasında değiştirebilir.",
   "Organization avatar": "Organizasyon avatarı",
   "Organization description": "",
@@ -383,6 +398,7 @@
   "Organization settings": "Organizasyon ayarları",
   "Other notification settings": "Diğer bildirim ayarları",
   "Other permissions": "Diğer izinler",
+  "Other settings": "",
   "Outgoing webhook message format": "Dışarı yönlü webhook ileti biçimi",
   "Owner": "Sahip",
   "Password": "Şifre",
@@ -401,11 +417,11 @@
   "Please specify at least one valid recipient": "Lütfen en az bir geçerli alıcı belirtiniz",
   "Prevent users from changing their email address": "Kullanıcıların kendi e-posta adreslerini değiştirmelerini engelle",
   "Prevent users from changing their name": "Kullanıcıların kendi isimlerini değiştirmelerini engelle",
+  "Preview": "Önizle",
   "Preview profile": "",
   "Private messages and @-mentions": "Özel iletiler ve @-anmalar",
   "Profile": "Profil",
   "Profile field settings": "Profil alanı ayarları",
-  "Question": "",
   "Quote and reply": "Alıntılayarak yanıtla",
   "Reactivate": "Yeniden faal yap",
   "Reactivate bot": "Botu yeniden faal yap",
@@ -454,7 +470,9 @@
   "Sent! Your message was sent to a stream you have muted.": "",
   "Sent! Your message was sent to a topic you have muted.": "",
   "Sent! Your recent message is outside the current search.": "",
-  "Set status to away": "",
+  "Set a status message": "",
+  "Set yourself to active": "",
+  "Set yourself to away": "",
   "Settings": "Ayarlar",
   "Setup": "",
   "Setup two factor authentication": "",
@@ -497,8 +515,6 @@
   "The recipients __recipients__ are not valid": "Alıcılar __recipients__ geçerli değil",
   "The stream description has been updated!": "Kanal açıklaması güncellendi!",
   "The stream has been renamed!": "Kanal yeniden adlandırıldı!",
-  "The stream to which new stream notifications go to.": "Yeni kanal bildirimlerinin gönderildiği kanal.",
-  "The stream which new user signup notifications go to.": "Yeni kaydolan kullanıcı bildirimlerinin gittiği kanal.",
   "Their password will be cleared from our systems, and any bots they maintain will be disabled.": "Kullandıkları parola sistemimizden silinecek ve yönettikleri tüm botlar devre dışı olacaktır.",
   "There are no messages to reply to.": "",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "",
@@ -511,6 +527,7 @@
   "Time settings": "Zaman ayarları",
   "Time zone": "Zaman dilimi",
   "Time's up!": "Süre doldu!",
+  "Tip: You can also send \"/poll Some question\"": "",
   "Today": "Bugün",
   "Toggle subscription": "Aboneliği açıp kapa",
   "Tomorrow": "Yarın",
@@ -539,13 +556,11 @@
   "Update successful: Subdomains allowed for __domain__": "Günceleme başarılı: __domain__ için alt alan adlarına izin veriliyor",
   "Update successful: Subdomains no longer allowed for __domain__": "Güncelleme başarılı: Artık __domain__ için alt alan adlarına izin verilmiyor",
   "Updated settings!": "Ayarlar güncellendi!",
-  "Updated successfully!": "Başarıyla güncellendi!",
   "Upload avatar": "Avatar yükle",
   "Upload icon": "İkon yükle",
   "Upload image or GIF": "",
   "Upload logo": "",
   "Upload new avatar": "Yeni avatar yükle",
-  "Upload new icon": "Yeni ikon yükle",
   "Upload new logo": "",
   "Uploaded files": "Yüklenmiş dosyalar",
   "Uploading icon.": "İkon yukleniyor.",
@@ -563,6 +578,7 @@
   "User(s) invited successfully.": "Kullanıcı(lar) başarıyla davet edildi.",
   "Username": "Kullanıcı Adı",
   "Username (a-z, 0-9, and dashes only)": "",
+  "Users": "Kullanıcılar",
   "Users can edit the topic of any message": "",
   "Video chat provider": "",
   "View edit history": "Güncelleme geçmişini görüntüle",
@@ -577,11 +593,14 @@
   "View your profile": "",
   "Visual desktop notifications": "Görsel masaüstü bildirimleri",
   "Warning: <strong>__stream_name__</strong> is a private stream.": "Uyarı: <strong>__stream_name__</strong> kanalı özel bir kanaldır.",
+  "We are about to have a poll.  Please wait for the question.": "",
+  "We recommend against deleting topics unless needed for security reasons or managing abuse. Deleted messages can be confusing for users who may later visit the topic via notifications.": "",
   "Who can add bots": "Kimler bot ekleyebilir",
   "Who can add custom emoji": "Kimler özel emoji ekleyebilir",
   "Who can create streams": "Kimler kanal oluşturabilir",
   "Who can see users email addresses": "",
   "Working\u2026": "Çalışıyor...",
+  "Write": "Yaz",
   "Yes": "Evet",
   "Yes, delete this stream": "Evet, bu kanalı sil",
   "Yes, send": "Evet, gönder",
@@ -610,6 +629,9 @@
   "Your account": "Hesabınız",
   "Your bots": "Botlarınız",
   "Your reminder note is empty!": "Hatırlatma notunuz boş!",
+  "Zoom API key (required)": "",
+  "Zoom API secret (required)": "",
+  "Zoom user ID (required)": "",
   "[Condense this message]": "[İletiyi daralt]",
   "[Configure]": "[Ayarla]",
   "[Disable]": "[Devre dışına al]",
