--- a/static/locale/uk/translations.json
+++ b/static/locale/uk/translations.json
@@ -17,7 +17,6 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "<p>Канал <b>__stream_name__</b> не існує.</p><p>Керуйте своїми підписками <a href='#streams/all'>на сторінці \"Потоки\"</a>.</p>",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "<strong>__name__</strong> не підписаний на цей канал. І не буде отримувати сповіщення, тільки якщо ви його згадаєте(@).",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "<strong>__name__</strong> не підписані на цей канал. Вони не отримуватимуть сповіщення, якщо ви їх не підписали.",
-  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "Каналу потрібне ім'я",
   "A stream with this name already exists": "Канал з таким іменем вже існує",
   "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
@@ -35,6 +34,7 @@
   "Add a new profile field": "Додати поле нового профілю",
   "Add a new user group": "Додати нову групу користувачів",
   "Add alert word": "Додати сигнальне слово",
+  "Add choice": "",
   "Add emoji": "Додати емодзі",
   "Add emoji reaction": "Додати емодзі-реакцію",
   "Add emoji reaction (:)": "Додати емодзі-реакцію (:)",
@@ -43,11 +43,11 @@
   "Add member...": "Додати учасника...",
   "Add members of your organization to mentionable user groups.": "Додати членів своєї організації до згаданих груп користувачів.",
   "Add new default stream": "Додати новий канал за умовчанням",
-  "Add option": "Додати опцію",
   "Add profile field": "Додати поле профілю",
   "Add question": "Додати питання",
   "Add stream": "Додати канал",
   "Add task": "Додати задачу",
+  "Add video call": "Додати відеодзвінок",
   "Added successfully!": "Додано успішно!",
   "Administrator": "Адміністратор",
   "Administrators can always delete any message.": "Адміністратори завжди можуть видаляти будь-яке повідомлення.",
@@ -61,8 +61,8 @@
   "Alert words allow you to be notified as if you were @-mentioned when certain words or phrases are used in Zulip.": "Сигнальні слова дозволяють отримувати сповіщення, так якщо б ви використали @-згадування, коли певні слова або фрази використовуються в Zulip.",
   "All admins, and members with accounts at least 3 days old.": "Усі адміністратори та учасники з обліковими записами не менше 3 денної давності.",
   "All admins, and members with accounts at least N days old.": "Усі адміністратори та учасники з обліковими записами не менше N денної давності.",
-  "All messages": "Всі повідомлення",
   "All streams": "Всі канали",
+  "Allow message content in missed message emails": "",
   "Allow message deleting": "Дозволити видаляти повідомлення",
   "Allow message editing": "Дозволити редагувати повідомлення",
   "Allow subdomains": "Дозволити піддомени",
@@ -80,6 +80,7 @@
   "Are invitations required for joining the organization?": "Чи потрібні запрошення для приєднання в організацію?",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "Ви впевнені, що хочете створити канал '__stream_name__' і підписати __count__ користувачі(в) на нього?",
   "Are you sure you want to delete <b>__group_name__</b>?": "Ви впевнені, що хочете видалити <b>__group_name__</b>?",
+  "Are you sure you want to delete all messages in <b>__topic_name__</b>?": "",
   "Are you sure you want to do this?": "Ви впевнені, що хочете це зробити?",
   "Are you sure you want to mention all <strong>__count__</strong> people in this stream?": "Ви впевнені, що хочете згадати всіх <strong>__count__</strong> людей в цьому каналі?",
   "Are you sure you want to resend the invitation to <strong><span class=\"email\"></span></strong>?": "Ви впевнені, що хочете повторно надіслати запрошення <strong><span class=\"email\"></span></strong>?",
@@ -95,10 +96,12 @@
   "Bot email": "Електронна пошта бота",
   "Bot list": "Список ботів",
   "Bot type": "Тип бота",
+  "Bots": "Боти",
   "By deactivating <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, they will be logged out immediately.": "Деактивувавши <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, вони будуть вилогінені негайно.",
   "By deactivating your account, you will be logged out immediately.": "Якщо ви вимкнете свій обліковий запис, ви відразу ж вийдете.",
   "Cancel": "Скасувати",
   "Change": "Змінити",
+  "Change bot info and owner": "",
   "Change email": "Змінити електронну пошту",
   "Change full name": "Змінити повне ім'я",
   "Change later messages to this topic": "Змінити пізніше повідомлення до цієї теми",
@@ -113,15 +116,14 @@
   "Check all": "Позначити все",
   "Choose avatar": "Вибрати аватар",
   "Choose custom color": "Виберіть власний колір",
+  "Clear": "",
   "Clear avatar": "Очистити аватар",
-  "Clear away status": "",
   "Clear emoji image": "Очистити зображення емодзі",
   "Click anywhere on a message to reply.": "Натисніть в будь-якому місці на повідомлення, щоб відповісти.",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "Клацніть за вікном вводу, щоб зберегти. Ми автоматично сповістимо всіх користувачів, які були додані або видалені.",
   "Close": "Закрити",
   "Collapse": "Згорнути",
   "Compose a message to stream <b>__stream.name__</b>": "Створити повідомлення для каналу <b>__stream.name__</b>",
-  "Configure default settings for new users joining this organization.": "Налаштувати параметри за замовчуванням для нових користувачів, які приєднуються до цієї організації.",
   "Configure regular expression patterns that will be automatically linkified when used in Zulip message bodies or topics.  For example to automatically linkify commit IDs and issue numbers (e.g. #123) to the corresponding items in a GitHub project, you could use the following:": "Налаштуйте шаблони регулярних виразів, які будуть автоматично зв'язані при використанні в темах або повідомленнях в Zulip. Наприклад, щоб автоматично зв'язати посвідчення ідентифікаторів та номери випусків (наприклад, #123) з відповідними елементами в проекті GitHub, можна використовувати наступне:",
   "Configure the authentication methods for your organization.": "Налаштування методів аутентифікації для вашої організації.",
   "Configure the default streams new users are subscribed to when joining your organization.": "Налаштування каналів за умовчанням на які нові користувачі будуть підписані під час вступу до вашої організації.",
@@ -154,10 +156,12 @@
   "Deactivated users": "Деактивовані користувачі",
   "Deactivation encountered an error. Please reload and try again.": "Деактивація виявила помилку. Перезавантажте та повторіть спробу.",
   "Default language": "Мова за замовчуванням",
+  "Default settings for new users joining this organization.": "",
   "Default streams": "Канали за замовчуванням",
   "Default user settings": "Налаштування користувача за замовчуванням",
   "Delete": "Видалити",
   "Delete alert word": "Видалити сигнальне слово",
+  "Delete all messages in <b>__topic_name__</b>": "",
   "Delete avatar": "Видалити аватар",
   "Delete bot": "Видалити бота",
   "Delete draft": "Видалити чернетку",
@@ -165,7 +169,9 @@
   "Delete icon": "Видалити піктограму",
   "Delete logo": "",
   "Delete message": "Видалити повідомлення",
+  "Delete messages": "",
   "Delete stream": "Видалити канал",
+  "Delete topic": "",
   "Delete user group": "Видалити групу користувачів",
   "Deleted successfully!": "Видалено успішно!",
   "Deleting this stream will immediately unsubscribe everyone, and the stream's content will not be recoverable.": "Видалення цього каналу негайно скасує всі підписки на нього, і вміст каналу не можна буде відновити.",
@@ -189,7 +195,7 @@
   "EDITED": "РЕДАГОВАНО",
   "Edit": "Редагувати",
   "Edit bot": "Редагувати бота",
-  "Edit question": "Редагувати питання",
+  "Edit status message": "",
   "Edit user": "Редагувати користувача",
   "Edit your profile": "Редагувати свій профіль",
   "Edited (__last_edit_timestr__)": "Відредаговано (__last_edit_timestr__)",
@@ -240,13 +246,15 @@
   "Forgotten it?": "Забули це?",
   "Formatting": "Форматування",
   "Full name": "Повне ім'я",
+  "Generate invite link": "",
   "Generate new API key": "Створення нового ключа API",
+  "Generating link...": "",
   "Generic": "Загальний",
   "Get API key": "Отримати ключ API",
   "Go back": "Повернутись",
   "Got it!": "Зрозуміло!",
   "Guest": "Гість",
-  "Guest users cannot edit custom emoji.": "Гості не можуть редагувати спеціальні емодзі.",
+  "Guests cannot edit custom emoji.": "",
   "High contrast mode": "Режим високої контрастності",
   "Hint": "Підказка",
   "Hint (up to 80 characters)": "Підказка (до 80 символів)",
@@ -260,11 +268,16 @@
   "Interface": "Інтерфейс",
   "Invalid slash command. Check if you are missing a space after the command.": "Недійсна команда косої риски. Перевірте, чи не пропущений пробіл після команди.",
   "Invalid stream id": "Недійсний ідентифікатор каналу",
+  "Invitation link: <a href=\"__link__\">__link__</a>": "",
   "Invitations": "Запрошення",
+  "Invite": "Запросити",
   "Invite more users": "Запросити більше користувачів",
+  "Invited as": "",
   "Invited as administrator": "Запрошено як адміністратор",
   "Invited at": "Запрошено на",
   "Invited by": "Запрошено",
+  "Invites": "",
+  "Inviting...": "Запрошення...",
   "It's been a while! Since you were last here, you received <b>__unread_count__</b> new messages.": "Пройшло багато часу! З вашого останнього візиту, ви отримали <b>__unread_count__</b> нових повідомлень.",
   "Joined": "Приєднався",
   "Joining the organization": "Вступ до організації",
@@ -294,7 +307,6 @@
   "Mentioned in": "Згадано в",
   "Message actions": "Дії з повідомленнями",
   "Message editing": "Редагування повідомлення",
-  "Message feed": "Стрічка повідомлень",
   "Message formatting": "Форматування повідомлення",
   "Message sent when you were not subscribed": "Повідомлення надіслано, коли ви ще не підписалися",
   "Messages retention period in days (blank means messages are retained forever)": "Період зберігання повідомлень у днях (пусте поле означає, що повідомлення зберігаються назавжди)",
@@ -315,6 +327,7 @@
   "Muted topics": "Заглушені теми",
   "N": "N",
   "Name": "Ім'я",
+  "Name or email": "",
   "Narrow to __- message_recipient__": "Показати тільки __- message_recipient__",
   "Narrow to stream &quot;__display_recipient__&quot;": "Показати тільки для каналу &quot;__display_recipient__&quot;",
   "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "Показати тільки потік &quot;__display_recipient__&quot;, тема &quot;__topic__&quot;",
@@ -369,9 +382,11 @@
   "Only organization administrators can edit these settings.": "Тільки адміністратори організації можуть змінювати ці параметри.",
   "Only organization administrators can post.": "Тільки адміністратори організації можуть залишати повідомлення.",
   "Only organization admins are allowed to post to this stream.": "Тільки адміністраторам організації дозволяється розміщувати публікації в цьому каналі.",
+  "Only stream subscribers can add users to a private stream.": "",
   "Optional": "Необов'язково",
   "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "Організація",
+  "Organization administrator": "Адміністратор організації",
   "Organization administrators can change this in the organization settings.": "Адміністратори організації можуть змінювати це в налаштуваннях організації.",
   "Organization avatar": "Аватар організації",
   "Organization description": "Опис організації",
@@ -382,6 +397,7 @@
   "Organization settings": "Налаштування організації",
   "Other notification settings": "Інші налаштування сповіщень",
   "Other permissions": "Інші дозволи",
+  "Other settings": "",
   "Outgoing webhook message format": "",
   "Owner": "Власник",
   "Password": "Пароль",
@@ -400,11 +416,11 @@
   "Please specify at least one valid recipient": "Будь ласка, вкажіть принаймні одного дійсного одержувача",
   "Prevent users from changing their email address": "Не дозволяти користувачам змінювати свою адресу електронної пошти",
   "Prevent users from changing their name": "Не дозволяти користувачам змінювати своє ім'я",
+  "Preview": "Попередній перегляд",
   "Preview profile": "Перегляд профілю",
   "Private messages and @-mentions": "Приватні повідомлення та @-згадування",
   "Profile": "Профіль",
   "Profile field settings": "Налаштування поля профілю",
-  "Question": "Питання",
   "Quote and reply": "Цитувати і відповісти",
   "Reactivate": "Повторно активувати",
   "Reactivate bot": "Повторно активувати бота",
@@ -453,7 +469,9 @@
   "Sent! Your message was sent to a stream you have muted.": "Надіслано! Ваше повідомлення було надіслано до каналу, в якому ви вимкнули звук.",
   "Sent! Your message was sent to a topic you have muted.": "Надіслано! Ваше повідомлення було надіслано до теми, в якій ви вимкнули звук.",
   "Sent! Your recent message is outside the current search.": "Надіслано Ваше останнє повідомлення не входить до поточного пошуку.",
-  "Set status to away": "",
+  "Set a status message": "",
+  "Set yourself to active": "",
+  "Set yourself to away": "",
   "Settings": "Налаштування",
   "Setup": "Налаштування",
   "Setup two factor authentication": "Встановити двофакторну аутентифікацію",
@@ -496,8 +514,6 @@
   "The recipients __recipients__ are not valid": "Недійсні одержувачі __recipients__",
   "The stream description has been updated!": "Опис каналу оновлено!",
   "The stream has been renamed!": "Канал був перейменований!",
-  "The stream to which new stream notifications go to.": "Канал, до якого надходять сповіщення про нові канали.",
-  "The stream which new user signup notifications go to.": "Канал, до якого надходять сповіщення про нові реєстрації.",
   "Their password will be cleared from our systems, and any bots they maintain will be disabled.": "Їх паролі будуть очищений в нашій системі, і будь-які їх боти будуть вимкнені.",
   "There are no messages to reply to.": "Немає повідомлень для відповіді.",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "Ці параметри докладно описані в <a target=\"_blank\" href=\"/help/stream-permissions\">довідковому центрі</a>.",
@@ -510,6 +526,7 @@
   "Time settings": "Налаштування часу",
   "Time zone": "Часовий пояс",
   "Time's up!": "Час вийшов!",
+  "Tip: You can also send \"/poll Some question\"": "",
   "Today": "Сьогодні",
   "Toggle subscription": "Переключити підписку",
   "Tomorrow": "Завтра",
@@ -538,13 +555,11 @@
   "Update successful: Subdomains allowed for __domain__": "Оновлення успішне: Піддомени дозволені для __domain__",
   "Update successful: Subdomains no longer allowed for __domain__": "Оновлення успішне: Піддомени більше не дозволені для __domain__",
   "Updated settings!": "Оновлені налаштування!",
-  "Updated successfully!": "Оновлено успішно!",
   "Upload avatar": "Завантажити аватар",
   "Upload icon": "Завантажити значок",
   "Upload image or GIF": "Завантажити зображення або GIF",
   "Upload logo": "",
   "Upload new avatar": "Завантажити новий аватар",
-  "Upload new icon": "Завантажити новий значок",
   "Upload new logo": "",
   "Uploaded files": "Завантажені файли",
   "Uploading icon.": "Завантаження значка.",
@@ -562,6 +577,7 @@
   "User(s) invited successfully.": "Користувач(і) успішно запрошені.",
   "Username": "Ім'я користувача",
   "Username (a-z, 0-9, and dashes only)": "Ім'я користувача (лише символи a-z, 0-9 та дефіси)",
+  "Users": "Користувачі",
   "Users can edit the topic of any message": "Користувачі можуть редагувати тему будь-якого повідомлення",
   "Video chat provider": "Провайдер відеочату",
   "View edit history": "Переглянути історію редагування",
@@ -576,11 +592,14 @@
   "View your profile": "Переглянути свій профіль",
   "Visual desktop notifications": "Візуальні сповіщення на робочому столі",
   "Warning: <strong>__stream_name__</strong> is a private stream.": "Попередження: <strong>__stream_name__</strong> — це приватний канал.",
+  "We are about to have a poll.  Please wait for the question.": "",
+  "We recommend against deleting topics unless needed for security reasons or managing abuse. Deleted messages can be confusing for users who may later visit the topic via notifications.": "",
   "Who can add bots": "Хто може додавати ботів",
   "Who can add custom emoji": "Хто може додавати власні емодзі",
   "Who can create streams": "Хто може створювати канали",
   "Who can see users email addresses": "Хто може бачити електронні адреси користувачів",
   "Working\u2026": "Працюю...",
+  "Write": "Напиши",
   "Yes": "Так",
   "Yes, delete this stream": "Так, видалити цей канал",
   "Yes, send": "Так, відправити",
@@ -609,6 +628,9 @@
   "Your account": "Ваш обліковий запис",
   "Your bots": "Ваші боти",
   "Your reminder note is empty!": "Ваша нотатка нагадування порожня!",
+  "Zoom API key (required)": "",
+  "Zoom API secret (required)": "",
+  "Zoom user ID (required)": "",
   "[Condense this message]": "[Згорнути це повідомлення]",
   "[Configure]": "[Налаштувати]",
   "[Disable]": "[Вимкнути]",
