--- a/static/locale/zh_Hans/translations.json
+++ b/static/locale/zh_Hans/translations.json
@@ -17,7 +17,6 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "<p>频道<b>__stream_name__</b>不存在</p><p>管理您的订阅<a href='#streams/all'>在频道页面</a></p>",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "<strong>__name__</strong>没有订阅此频道。当你提及他们时不会收到通知",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "<strong>__name__</strong>没有订阅此频道。如需接收通知必须订阅",
-  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "频道需要一个名字",
   "A stream with this name already exists": "具有此名称的频道已经存在了",
   "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
@@ -35,6 +34,7 @@
   "Add a new profile field": "新增一个资料字段",
   "Add a new user group": "添加一个新用户组",
   "Add alert word": "添加提示信息",
+  "Add choice": "",
   "Add emoji": "添加表情",
   "Add emoji reaction": "添加表情映射",
   "Add emoji reaction (:)": "添加表情映射 (:)",
@@ -43,11 +43,11 @@
   "Add member...": "添加成员..",
   "Add members of your organization to mentionable user groups.": "添加社群成员到用户组",
   "Add new default stream": "添加默认频道",
-  "Add option": "添加选项",
   "Add profile field": "新增资料字段",
   "Add question": "添加问题",
   "Add stream": "添加频道",
   "Add task": "添加任务",
+  "Add video call": "视频通话",
   "Added successfully!": "添加成功！",
   "Administrator": "管理员",
   "Administrators can always delete any message.": "管理员可以删除任何消息",
@@ -61,8 +61,8 @@
   "Alert words allow you to be notified as if you were @-mentioned when certain words or phrases are used in Zulip.": "当消息中出现提示词后，您会收到通知，就像@提醒一样。",
   "All admins, and members with accounts at least 3 days old.": "所有管理员和成员至少注册3天以上。",
   "All admins, and members with accounts at least N days old.": "所有管理员和成员至少注册N天以上。",
-  "All messages": "所有消息",
   "All streams": "所有频道",
+  "Allow message content in missed message emails": "",
   "Allow message deleting": "允许删除消息",
   "Allow message editing": "允许编辑消息",
   "Allow subdomains": "允许子域名",
@@ -80,6 +80,7 @@
   "Are invitations required for joining the organization?": "加入社群是否需要邀请？",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "你确定要创建频道  '__stream_name__' 和 签订 __count__ 用户到这里？",
   "Are you sure you want to delete <b>__group_name__</b>?": "确认删除<b>__group_name__</b>？",
+  "Are you sure you want to delete all messages in <b>__topic_name__</b>?": "",
   "Are you sure you want to do this?": "确定这样做？",
   "Are you sure you want to mention all <strong>__count__</strong> people in this stream?": "确定提醒该频道中的<strong>__count__</strong>个用户？",
   "Are you sure you want to resend the invitation to <strong><span class=\"email\"></span></strong>?": "确认重新发送邀请到<strong><span class=\"email\"></span></strong>？",
@@ -95,10 +96,12 @@
   "Bot email": "机器人邮箱",
   "Bot list": "机器人列表",
   "Bot type": "机器人类型",
+  "Bots": "机器人",
   "By deactivating <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, they will be logged out immediately.": "去激活用户后 <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, 这些用户会立即退出登录。",
   "By deactivating your account, you will be logged out immediately.": "停用你的账户，你即将被退出登录。",
   "Cancel": "取消",
   "Change": "更改",
+  "Change bot info and owner": "",
   "Change email": "更改电子邮件",
   "Change full name": "修改全名",
   "Change later messages to this topic": "修改后续消息到该话题",
@@ -113,15 +116,14 @@
   "Check all": "选择所有",
   "Choose avatar": "选择头像",
   "Choose custom color": "选择自定义颜色",
+  "Clear": "",
   "Clear avatar": "清除头像",
-  "Clear away status": "",
   "Clear emoji image": "清除表情图像",
   "Click anywhere on a message to reply.": "点击任意位置回复",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "点击输入框以外的地方来保存设置。服务器将自动通知你添加和删除的用户",
   "Close": "关闭",
   "Collapse": "折叠",
   "Compose a message to stream <b>__stream.name__</b>": "发消息到频道&quot;<b>__stream.name__</b>&quot;",
-  "Configure default settings for new users joining this organization.": "配置新用户加入社群的默认设置",
   "Configure regular expression patterns that will be automatically linkified when used in Zulip message bodies or topics.  For example to automatically linkify commit IDs and issue numbers (e.g. #123) to the corresponding items in a GitHub project, you could use the following:": "配置在Zulip消息体或主题中使用时将自动链接至正则表达式模式。 例如，要将提交ID和issue号码(例如＃123)自动链接到GitHub项目中的相应项目，可以使用以下内容：",
   "Configure the authentication methods for your organization.": "为你的社群配置身份验证方式。",
   "Configure the default streams new users are subscribed to when joining your organization.": "设置新用户在加入社群时默认订阅的频道",
@@ -154,10 +156,12 @@
   "Deactivated users": "不活动成员",
   "Deactivation encountered an error. Please reload and try again.": "禁用时发生错误。请刷新后再试",
   "Default language": "默认语言",
+  "Default settings for new users joining this organization.": "",
   "Default streams": "默认频道",
   "Default user settings": "默认用户设置",
   "Delete": "删除",
   "Delete alert word": "删除提示信息",
+  "Delete all messages in <b>__topic_name__</b>": "",
   "Delete avatar": "删除头像",
   "Delete bot": "删除机器人",
   "Delete draft": "删除草稿",
@@ -165,7 +169,9 @@
   "Delete icon": "删除图标",
   "Delete logo": "",
   "Delete message": "删除消息",
+  "Delete messages": "",
   "Delete stream": "删除频道",
+  "Delete topic": "",
   "Delete user group": "删除用户组",
   "Deleted successfully!": "删除成功！",
   "Deleting this stream will immediately unsubscribe everyone, and the stream's content will not be recoverable.": "删除频道会退订该频道的所有用户，并且该频道的所有消息也将无法恢复。",
@@ -189,7 +195,7 @@
   "EDITED": "有修改",
   "Edit": "编辑",
   "Edit bot": "编辑机器人",
-  "Edit question": "编辑问题",
+  "Edit status message": "",
   "Edit user": "编辑用户",
   "Edit your profile": "编辑您的资料",
   "Edited (__last_edit_timestr__)": "启用 (__last_edit_timestr__)",
@@ -240,13 +246,15 @@
   "Forgotten it?": "忘记了？",
   "Formatting": "格式化",
   "Full name": "名称",
+  "Generate invite link": "",
   "Generate new API key": "生成新的 API Key",
+  "Generating link...": "",
   "Generic": "通用",
   "Get API key": "获取API Key",
   "Go back": "返回上一层",
   "Got it!": "了解了！",
   "Guest": "访客",
-  "Guest users cannot edit custom emoji.": "访客用户不能编辑自定义表情",
+  "Guests cannot edit custom emoji.": "",
   "High contrast mode": "高对比度模式",
   "Hint": "提示",
   "Hint (up to 80 characters)": "提示(到达80个字符)",
@@ -260,11 +268,16 @@
   "Interface": "接口",
   "Invalid slash command. Check if you are missing a space after the command.": "无效命令。检查命令结尾是否缺少空格",
   "Invalid stream id": "无效的频道ID",
+  "Invitation link: <a href=\"__link__\">__link__</a>": "",
   "Invitations": "邀请",
+  "Invite": "邀请",
   "Invite more users": "邀请更多用户",
+  "Invited as": "",
   "Invited as administrator": "邀请管理员",
   "Invited at": "邀请",
   "Invited by": "邀请通过",
+  "Invites": "",
+  "Inviting...": "邀请中...",
   "It's been a while! Since you were last here, you received <b>__unread_count__</b> new messages.": "好久不见！您有<b>__unread_count__</b>条未读消息",
   "Joined": "已加入",
   "Joining the organization": "加入这个社群",
@@ -294,7 +307,6 @@
   "Mentioned in": "提到",
   "Message actions": "消息动作",
   "Message editing": "消息编辑",
-  "Message feed": "信息订阅",
   "Message formatting": "消息语法格式",
   "Message sent when you were not subscribed": "在您订阅前发送的消息",
   "Messages retention period in days (blank means messages are retained forever)": "消息保留期在几天(空白意味着消息永远保留)",
@@ -315,6 +327,7 @@
   "Muted topics": "已静音主题",
   "N": "N",
   "Name": "名称",
+  "Name or email": "",
   "Narrow to __- message_recipient__": "通过 __- 信息_接收人__筛选",
   "Narrow to stream &quot;__display_recipient__&quot;": "筛选频道&quot;__display_recipient__&quot;",
   "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "通过频道 &quot;__显示_接收人__&quot;, 主题 &quot;__主题__&quot筛选;",
@@ -369,9 +382,11 @@
   "Only organization administrators can edit these settings.": "只有社群管理员才能编辑这些设置。",
   "Only organization administrators can post.": "只有社群管理员才能发布。",
   "Only organization admins are allowed to post to this stream.": "只有社群管理员可以发布到这个频道。",
+  "Only stream subscribers can add users to a private stream.": "",
   "Optional": "可选设置",
   "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "社群",
+  "Organization administrator": "",
   "Organization administrators can change this in the organization settings.": "社群管理员可以在社群设置中更改此设置。",
   "Organization avatar": "社群头像",
   "Organization description": "社群描述",
@@ -382,6 +397,7 @@
   "Organization settings": "社群设置",
   "Other notification settings": "其他通知设置",
   "Other permissions": "其他权限",
+  "Other settings": "",
   "Outgoing webhook message format": "送出的webhook消息格式",
   "Owner": "所有者",
   "Password": "密码",
@@ -400,11 +416,11 @@
   "Please specify at least one valid recipient": "请至少指定一个可用的收信人",
   "Prevent users from changing their email address": "阻止用户更改邮件地址",
   "Prevent users from changing their name": "防止用户更改名称",
+  "Preview": "预览消息",
   "Preview profile": "预览资料",
   "Private messages and @-mentions": "私信和@提醒",
   "Profile": "资料",
   "Profile field settings": "资料字段设置",
-  "Question": "问题",
   "Quote and reply": "引用并回复",
   "Reactivate": "启用",
   "Reactivate bot": "重启机器人",
@@ -453,7 +469,9 @@
   "Sent! Your message was sent to a stream you have muted.": "已发送！您的信息发送至已被静音的频道",
   "Sent! Your message was sent to a topic you have muted.": "已发送！您的信息发送至已被静音的主题",
   "Sent! Your recent message is outside the current search.": "已发送！您最近的消息在当前搜索之外",
-  "Set status to away": "",
+  "Set a status message": "",
+  "Set yourself to active": "",
+  "Set yourself to away": "",
   "Settings": "设置",
   "Setup": "设置",
   "Setup two factor authentication": "设置双重认证",
@@ -496,8 +514,6 @@
   "The recipients __recipients__ are not valid": "收件人__recipients__是无效的",
   "The stream description has been updated!": "频道描述信息已更新",
   "The stream has been renamed!": "频道重命名成功！",
-  "The stream to which new stream notifications go to.": "新流通知发送到的频道。",
-  "The stream which new user signup notifications go to.": "新用户注册通知频道",
   "Their password will be cleared from our systems, and any bots they maintain will be disabled.": "这些用户的密码会被从系统中清除，他们的机器人用户也会被关闭。",
   "There are no messages to reply to.": "没有消息可回复",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "这些设置在<a target=\"_blank\" href=\"/help/stream-permissions\">帮助中心</a>中有详细说明。",
@@ -510,6 +526,7 @@
   "Time settings": "时间设置",
   "Time zone": "时区",
   "Time's up!": "时间到了！",
+  "Tip: You can also send \"/poll Some question\"": "",
   "Today": "今日",
   "Toggle subscription": "触发订阅",
   "Tomorrow": "明天",
@@ -538,13 +555,11 @@
   "Update successful: Subdomains allowed for __domain__": "更新成功：允许新的域名于__domain__",
   "Update successful: Subdomains no longer allowed for __domain__": "更新成功：不在允许这个域名 __domain__",
   "Updated settings!": "更新设置",
-  "Updated successfully!": "更新成功！",
   "Upload avatar": "上传头像",
   "Upload icon": "上传图标",
   "Upload image or GIF": "上传图片",
   "Upload logo": "",
   "Upload new avatar": "上传一个新头像",
-  "Upload new icon": "上传新图标",
   "Upload new logo": "",
   "Uploaded files": "已上传文件",
   "Uploading icon.": "图标上传中",
@@ -562,6 +577,7 @@
   "User(s) invited successfully.": "用户邀请成功",
   "Username": "用户名",
   "Username (a-z, 0-9, and dashes only)": "用户名(字母、数字和下划线)",
+  "Users": "用户",
   "Users can edit the topic of any message": "用户可以编辑消息的主题",
   "Video chat provider": "视频聊天提供者",
   "View edit history": "显示编辑历史 ",
@@ -576,11 +592,14 @@
   "View your profile": "查看我的资料",
   "Visual desktop notifications": "可视桌面通知",
   "Warning: <strong>__stream_name__</strong> is a private stream.": "警告:<strong>__stream_name__</strong>是私有频道",
+  "We are about to have a poll.  Please wait for the question.": "",
+  "We recommend against deleting topics unless needed for security reasons or managing abuse. Deleted messages can be confusing for users who may later visit the topic via notifications.": "",
   "Who can add bots": "谁能添加机器人",
   "Who can add custom emoji": "谁能添加自定义表情",
   "Who can create streams": "谁能创建频道",
   "Who can see users email addresses": "谁可以查看用户的电子邮件地址",
   "Working\u2026": "进行中",
+  "Write": "编辑消息",
   "Yes": "是",
   "Yes, delete this stream": "是的，删除该频道",
   "Yes, send": "是的，发送",
@@ -609,6 +628,9 @@
   "Your account": "你的账户",
   "Your bots": "你的机器人",
   "Your reminder note is empty!": "您没有提醒事项",
+  "Zoom API key (required)": "",
+  "Zoom API secret (required)": "",
+  "Zoom user ID (required)": "",
   "[Condense this message]": "[收起消息]",
   "[Configure]": "[配置]",
   "[Disable]": "[禁用]",
