--- a/static/locale/zh_Hant/translations.json
+++ b/static/locale/zh_Hant/translations.json
@@ -17,7 +17,6 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "",
-  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "",
   "A stream with this name already exists": "",
   "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
@@ -26,7 +25,7 @@
   "Actions": "",
   "Active bots": "",
   "Active now": "",
-  "Active users": "\u5728\u7dda\u4f7f\u7528\u8005",
+  "Active users": "在線使用者",
   "Add": "",
   "Add a new alert word": "",
   "Add a new bot": "",
@@ -35,7 +34,8 @@
   "Add a new profile field": "",
   "Add a new user group": "",
   "Add alert word": "",
-  "Add emoji": "\u6dfb\u52a0\u8868\u60c5",
+  "Add choice": "",
+  "Add emoji": "添加表情",
   "Add emoji reaction": "",
   "Add emoji reaction (:)": "",
   "Add extra emoji for members of the __realm_name__ organization.": "",
@@ -43,11 +43,11 @@
   "Add member...": "",
   "Add members of your organization to mentionable user groups.": "",
   "Add new default stream": "",
-  "Add option": "",
   "Add profile field": "",
   "Add question": "",
   "Add stream": "",
   "Add task": "",
+  "Add video call": "",
   "Added successfully!": "",
   "Administrator": "",
   "Administrators can always delete any message.": "",
@@ -61,8 +61,8 @@
   "Alert words allow you to be notified as if you were @-mentioned when certain words or phrases are used in Zulip.": "",
   "All admins, and members with accounts at least 3 days old.": "",
   "All admins, and members with accounts at least N days old.": "",
-  "All messages": "",
-  "All streams": "\u5168\u90e8\u983b\u9053",
+  "All streams": "全部頻道",
+  "Allow message content in missed message emails": "",
   "Allow message deleting": "",
   "Allow message editing": "",
   "Allow subdomains": "",
@@ -80,11 +80,12 @@
   "Are invitations required for joining the organization?": "",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "",
   "Are you sure you want to delete <b>__group_name__</b>?": "",
+  "Are you sure you want to delete all messages in <b>__topic_name__</b>?": "",
   "Are you sure you want to do this?": "",
   "Are you sure you want to mention all <strong>__count__</strong> people in this stream?": "",
   "Are you sure you want to resend the invitation to <strong><span class=\"email\"></span></strong>?": "",
   "Are you sure you want to revoke the invitation to <strong><span class=\"email\"></span></strong>?": "",
-  "Attach files": "\u6dfb\u52a0\u9644\u4ef6",
+  "Attach files": "添加附件",
   "Attachment deleted": "",
   "Audible desktop notifications": "",
   "Authentication methods": "",
@@ -95,10 +96,12 @@
   "Bot email": "",
   "Bot list": "",
   "Bot type": "",
+  "Bots": "機器人",
   "By deactivating <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, they will be logged out immediately.": "",
   "By deactivating your account, you will be logged out immediately.": "",
-  "Cancel": "\u53d6\u6d88",
+  "Cancel": "取消",
   "Change": "",
+  "Change bot info and owner": "",
   "Change email": "",
   "Change full name": "",
   "Change later messages to this topic": "",
@@ -113,15 +116,14 @@
   "Check all": "",
   "Choose avatar": "",
   "Choose custom color": "",
+  "Clear": "",
   "Clear avatar": "",
-  "Clear away status": "",
   "Clear emoji image": "",
   "Click anywhere on a message to reply.": "",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "",
-  "Close": "\u95dc\u9589",
+  "Close": "關閉",
   "Collapse": "",
   "Compose a message to stream <b>__stream.name__</b>": "",
-  "Configure default settings for new users joining this organization.": "",
   "Configure regular expression patterns that will be automatically linkified when used in Zulip message bodies or topics.  For example to automatically linkify commit IDs and issue numbers (e.g. #123) to the corresponding items in a GitHub project, you could use the following:": "",
   "Configure the authentication methods for your organization.": "",
   "Configure the default streams new users are subscribed to when joining your organization.": "",
@@ -134,7 +136,7 @@
   "Copy zuliprc": "",
   "Create": "",
   "Create bot": "",
-  "Create new stream": "\u958b\u8a2d\u65b0\u7684\u983b\u9053",
+  "Create new stream": "開設新的頻道",
   "Create stream": "",
   "Creating bot": "",
   "Creating stream...": "",
@@ -154,27 +156,31 @@
   "Deactivated users": "",
   "Deactivation encountered an error. Please reload and try again.": "",
   "Default language": "",
-  "Default streams": "\u9810\u8a2d\u983b\u9053",
+  "Default settings for new users joining this organization.": "",
+  "Default streams": "預設頻道",
   "Default user settings": "",
   "Delete": "",
   "Delete alert word": "",
+  "Delete all messages in <b>__topic_name__</b>": "",
   "Delete avatar": "",
   "Delete bot": "",
   "Delete draft": "",
   "Delete file": "",
   "Delete icon": "",
   "Delete logo": "",
-  "Delete message": "\u522a\u9664\u8a0a\u606f",
+  "Delete message": "刪除訊息",
+  "Delete messages": "",
   "Delete stream": "",
+  "Delete topic": "",
   "Delete user group": "",
   "Deleted successfully!": "",
   "Deleting this stream will immediately unsubscribe everyone, and the stream's content will not be recoverable.": "",
   "Dense mode": "",
   "Description": "",
-  "Disabled": "\u5df2\u95dc\u9589",
+  "Disabled": "已關閉",
   "Discard": "",
   "Discard changes": "",
-  "Display settings": "\u986f\u793a\u8a2d\u5b9a",
+  "Display settings": "顯示設定",
   "Do you want to skip to your latest messages?": "",
   "Domain": "",
   "Domain for your <a href=\"https://gsuite.google.com\" target=\"_blank\">G Suite team</a> (required)": "",
@@ -184,16 +190,16 @@
   "Download config of all active outgoing webhook bots in Zulip Botserver format.": "",
   "Download file": "",
   "Download zuliprc": "",
-  "Drafts": "\u8349\u7a3f",
+  "Drafts": "草稿",
   "Drafts older than <strong>__draft_lifetime__</strong> days are automatically removed": "",
   "EDITED": "",
   "Edit": "",
   "Edit bot": "",
-  "Edit question": "",
+  "Edit status message": "",
   "Edit user": "",
   "Edit your profile": "",
   "Edited (__last_edit_timestr__)": "",
-  "Email": "\u4fe1\u7bb1",
+  "Email": "信箱",
   "Email address": "",
   "Email copied": "",
   "Email notifications": "",
@@ -202,7 +208,7 @@
   "Emoji settings": "",
   "Emojiset changed successfully!": "",
   "Enable message edit history": "",
-  "Enabled": "\u5df2\u958b\u555f",
+  "Enabled": "已開啟",
   "Endpoint URL": "",
   "Error": "",
   "Error adding alert word!": "",
@@ -234,19 +240,21 @@
   "Filter bots": "",
   "Filter deactivated users": "",
   "Filter invites": "",
-  "Filter streams": "\u7be9\u9078\u983b\u9053",
+  "Filter streams": "篩選頻道",
   "Filter users": "",
   "First time? Read our <a href=\"/help/getting-your-organization-started-with-zulip#create-streams\" target=\"_blank\">guidelines</a> for creating and naming streams.": "",
   "Forgotten it?": "",
-  "Formatting": "\u683c\u5f0f\u5316\u4e2d",
-  "Full name": "\u5168\u540d",
+  "Formatting": "格式化中",
+  "Full name": "全名",
+  "Generate invite link": "",
   "Generate new API key": "",
+  "Generating link...": "",
   "Generic": "",
   "Get API key": "",
   "Go back": "",
   "Got it!": "",
   "Guest": "",
-  "Guest users cannot edit custom emoji.": "",
+  "Guests cannot edit custom emoji.": "",
   "High contrast mode": "",
   "Hint": "",
   "Hint (up to 80 characters)": "",
@@ -259,17 +267,22 @@
   "Incoming webhooks can only send messages.": "",
   "Interface": "",
   "Invalid slash command. Check if you are missing a space after the command.": "",
-  "Invalid stream id": "\u7121\u6548\u7684\u983b\u9053\u7de8\u865f",
+  "Invalid stream id": "無效的頻道編號",
+  "Invitation link: <a href=\"__link__\">__link__</a>": "",
   "Invitations": "",
+  "Invite": "邀請用戶",
   "Invite more users": "",
+  "Invited as": "",
   "Invited as administrator": "",
   "Invited at": "",
   "Invited by": "",
+  "Invites": "",
+  "Inviting...": "正在傳送邀請",
   "It's been a while! Since you were last here, you received <b>__unread_count__</b> new messages.": "",
   "Joined": "",
   "Joining the organization": "",
   "Just now": "",
-  "Keyboard shortcuts": "\u5feb\u6377\u9375",
+  "Keyboard shortcuts": "快捷鍵",
   "Label": "",
   "Language settings": "",
   "Large number of subscribers": "",
@@ -294,8 +307,7 @@
   "Mentioned in": "",
   "Message actions": "",
   "Message editing": "",
-  "Message feed": "",
-  "Message formatting": "\u8a0a\u606f\u683c\u5f0f",
+  "Message formatting": "訊息格式",
   "Message sent when you were not subscribed": "",
   "Messages retention period in days (blank means messages are retained forever)": "",
   "Method": "",
@@ -315,6 +327,7 @@
   "Muted topics": "",
   "N": "",
   "Name": "",
+  "Name or email": "",
   "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "",
   "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
@@ -333,11 +346,11 @@
   "New members can view complete message history.": "",
   "New password": "",
   "New password is too weak": "",
-  "New private message": "\u65b0\u79c1\u8a0a",
-  "New stream message": "\u983b\u9053\u4e2d\u7684\u65b0\u8a0a\u606f",
+  "New private message": "新私訊",
+  "New stream message": "頻道中的新訊息",
   "New stream notifications:": "",
   "New task": "",
-  "New topic": "\u65b0\u4e3b\u984c",
+  "New topic": "新主題",
   "New user notifications:": "",
   "Next week": "",
   "Night": "",
@@ -369,9 +382,11 @@
   "Only organization administrators can edit these settings.": "",
   "Only organization administrators can post.": "",
   "Only organization admins are allowed to post to this stream.": "",
+  "Only stream subscribers can add users to a private stream.": "",
   "Optional": "",
   "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "",
+  "Organization administrator": "",
   "Organization administrators can change this in the organization settings.": "",
   "Organization avatar": "",
   "Organization description": "",
@@ -382,9 +397,10 @@
   "Organization settings": "",
   "Other notification settings": "",
   "Other permissions": "",
+  "Other settings": "",
   "Outgoing webhook message format": "",
   "Owner": "",
-  "Password": "\u5bc6\u78bc",
+  "Password": "密碼",
   "Password is too weak": "",
   "Password should be at least __length__ characters long": "",
   "Pattern": "",
@@ -400,11 +416,11 @@
   "Please specify at least one valid recipient": "",
   "Prevent users from changing their email address": "",
   "Prevent users from changing their name": "",
+  "Preview": "預覽訊息",
   "Preview profile": "",
   "Private messages and @-mentions": "",
   "Profile": "",
   "Profile field settings": "",
-  "Question": "",
   "Quote and reply": "",
   "Reactivate": "",
   "Reactivate bot": "",
@@ -435,7 +451,7 @@
   "Saved": "",
   "Saved. Please <a class='reload_link'>reload</a> for the change to take effect.": "",
   "Saving": "",
-  "Search": "\u641c\u5c0b",
+  "Search": "搜尋",
   "Search operators": "",
   "Search results": "",
   "Search subscribers": "",
@@ -453,8 +469,10 @@
   "Sent! Your message was sent to a stream you have muted.": "",
   "Sent! Your message was sent to a topic you have muted.": "",
   "Sent! Your recent message is outside the current search.": "",
-  "Set status to away": "",
-  "Settings": "\u8a2d\u5b9a",
+  "Set a status message": "",
+  "Set yourself to active": "",
+  "Set yourself to away": "",
+  "Settings": "設定",
   "Setup": "",
   "Setup two factor authentication": "",
   "Show counts for starred messages": "",
@@ -468,7 +486,7 @@
   "Slack's outgoing webhooks": "",
   "Sorry, the file was too large.": "",
   "Star": "",
-  "Stream": "\u983b\u9053",
+  "Stream": "頻道",
   "Stream color": "",
   "Stream created recently": "",
   "Stream creation": "",
@@ -482,7 +500,7 @@
   "Stream successfully created!": "",
   "Streams": "",
   "Submit": "",
-  "Subscribe": "\u8a02\u95b1",
+  "Subscribe": "訂閱",
   "Subscribed": "",
   "Subscribed successfully!": "",
   "Subscriber count": "",
@@ -496,8 +514,6 @@
   "The recipients __recipients__ are not valid": "",
   "The stream description has been updated!": "",
   "The stream has been renamed!": "",
-  "The stream to which new stream notifications go to.": "",
-  "The stream which new user signup notifications go to.": "",
   "Their password will be cleared from our systems, and any bots they maintain will be disabled.": "",
   "There are no messages to reply to.": "",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "",
@@ -510,10 +526,11 @@
   "Time settings": "",
   "Time zone": "",
   "Time's up!": "",
+  "Tip: You can also send \"/poll Some question\"": "",
   "Today": "",
   "Toggle subscription": "",
   "Tomorrow": "",
-  "Topic": "\u4e3b\u984c",
+  "Topic": "主題",
   "Topic editing only": "",
   "Topic muted": "",
   "Try again": "",
@@ -538,13 +555,11 @@
   "Update successful: Subdomains allowed for __domain__": "",
   "Update successful: Subdomains no longer allowed for __domain__": "",
   "Updated settings!": "",
-  "Updated successfully!": "",
   "Upload avatar": "",
   "Upload icon": "",
   "Upload image or GIF": "",
   "Upload logo": "",
   "Upload new avatar": "",
-  "Upload new icon": "",
   "Upload new logo": "",
   "Uploaded files": "",
   "Uploading icon.": "",
@@ -560,8 +575,9 @@
   "User role": "",
   "User settings": "",
   "User(s) invited successfully.": "",
-  "Username": "\u7528\u6236\u540d\u7a31",
+  "Username": "用戶名稱",
   "Username (a-z, 0-9, and dashes only)": "",
+  "Users": "使用者",
   "Users can edit the topic of any message": "",
   "Video chat provider": "",
   "View edit history": "",
@@ -576,11 +592,14 @@
   "View your profile": "",
   "Visual desktop notifications": "",
   "Warning: <strong>__stream_name__</strong> is a private stream.": "",
+  "We are about to have a poll.  Please wait for the question.": "",
+  "We recommend against deleting topics unless needed for security reasons or managing abuse. Deleted messages can be confusing for users who may later visit the topic via notifications.": "",
   "Who can add bots": "",
   "Who can add custom emoji": "",
   "Who can create streams": "",
   "Who can see users email addresses": "",
   "Working\u2026": "",
+  "Write": "編輯訊息",
   "Yes": "",
   "Yes, delete this stream": "",
   "Yes, send": "",
@@ -609,6 +628,9 @@
   "Your account": "",
   "Your bots": "",
   "Your reminder note is empty!": "",
+  "Zoom API key (required)": "",
+  "Zoom API secret (required)": "",
+  "Zoom user ID (required)": "",
   "[Condense this message]": "",
   "[Configure]": "",
   "[Disable]": "",
