--- a/static/locale/bg/translations.json
+++ b/static/locale/bg/translations.json
@@ -17,7 +17,6 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "<p>Потокът <b>__stream_name__</b> не съществува.</p><p>Редактирайте вашите абонаменти <a href='#streams/all'>на страницата Потоци</a>.</p>",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "<strong>__name__</strong> не е абониран за този поток. Няма да бъдат информирани докато не ги абонирате.",
-  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "Потокът трябва да има име",
   "A stream with this name already exists": "Поток с това име вече съществува",
   "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
@@ -35,6 +34,7 @@
   "Add a new profile field": "Добави поле нов профил",
   "Add a new user group": "Добави нова потребителска група",
   "Add alert word": "Добави нова дума предупреждение",
+  "Add choice": "",
   "Add emoji": "Добавяне на емотикон",
   "Add emoji reaction": "Добави емо реакция",
   "Add emoji reaction (:)": "Добави емо реакция (:)",
@@ -43,11 +43,11 @@
   "Add member...": "Добави потребител",
   "Add members of your organization to mentionable user groups.": "Добави потребители от организацията към споменаваните потребителски групи.",
   "Add new default stream": "Добави нов поток по подразбиране",
-  "Add option": "",
   "Add profile field": "Добави поле профил",
   "Add question": "",
   "Add stream": "Добави поток",
   "Add task": "",
+  "Add video call": "Добави видео разговор",
   "Added successfully!": "Успешно добавяне!",
   "Administrator": "",
   "Administrators can always delete any message.": "Администраторите могат винаги да заличат всяко съобщение.",
@@ -61,8 +61,8 @@
   "Alert words allow you to be notified as if you were @-mentioned when certain words or phrases are used in Zulip.": "Сигналните думи ви позволяват да бъдете уведомявани ако се използват като @споменаване някои думи или фрази в Zulip.",
   "All admins, and members with accounts at least 3 days old.": "",
   "All admins, and members with accounts at least N days old.": "",
-  "All messages": "Всички съобщения",
   "All streams": "Всички потоци",
+  "Allow message content in missed message emails": "",
   "Allow message deleting": "Позволи изтриване на съобщение",
   "Allow message editing": "Позволи редакция на съобщение",
   "Allow subdomains": "Позволи поддомейни",
@@ -80,6 +80,7 @@
   "Are invitations required for joining the organization?": "",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "",
   "Are you sure you want to delete <b>__group_name__</b>?": "",
+  "Are you sure you want to delete all messages in <b>__topic_name__</b>?": "",
   "Are you sure you want to do this?": "",
   "Are you sure you want to mention all <strong>__count__</strong> people in this stream?": "",
   "Are you sure you want to resend the invitation to <strong><span class=\"email\"></span></strong>?": "",
@@ -95,10 +96,12 @@
   "Bot email": "",
   "Bot list": "",
   "Bot type": "",
+  "Bots": "Ботове",
   "By deactivating <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, they will be logged out immediately.": "",
   "By deactivating your account, you will be logged out immediately.": "",
   "Cancel": "Откажи",
   "Change": "",
+  "Change bot info and owner": "",
   "Change email": "",
   "Change full name": "",
   "Change later messages to this topic": "",
@@ -113,15 +116,14 @@
   "Check all": "",
   "Choose avatar": "",
   "Choose custom color": "",
+  "Clear": "",
   "Clear avatar": "",
-  "Clear away status": "",
   "Clear emoji image": "",
   "Click anywhere on a message to reply.": "",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "",
   "Close": "Затвори",
   "Collapse": "",
   "Compose a message to stream <b>__stream.name__</b>": "",
-  "Configure default settings for new users joining this organization.": "",
   "Configure regular expression patterns that will be automatically linkified when used in Zulip message bodies or topics.  For example to automatically linkify commit IDs and issue numbers (e.g. #123) to the corresponding items in a GitHub project, you could use the following:": "",
   "Configure the authentication methods for your organization.": "",
   "Configure the default streams new users are subscribed to when joining your organization.": "",
@@ -154,10 +156,12 @@
   "Deactivated users": "",
   "Deactivation encountered an error. Please reload and try again.": "",
   "Default language": "",
+  "Default settings for new users joining this organization.": "",
   "Default streams": "",
   "Default user settings": "",
   "Delete": "",
   "Delete alert word": "",
+  "Delete all messages in <b>__topic_name__</b>": "",
   "Delete avatar": "",
   "Delete bot": "",
   "Delete draft": "",
@@ -165,7 +169,9 @@
   "Delete icon": "",
   "Delete logo": "",
   "Delete message": "Изтрий съобщение",
+  "Delete messages": "",
   "Delete stream": "",
+  "Delete topic": "",
   "Delete user group": "",
   "Deleted successfully!": "",
   "Deleting this stream will immediately unsubscribe everyone, and the stream's content will not be recoverable.": "",
@@ -189,7 +195,7 @@
   "EDITED": "",
   "Edit": "Редактирай",
   "Edit bot": "",
-  "Edit question": "",
+  "Edit status message": "",
   "Edit user": "",
   "Edit your profile": "",
   "Edited (__last_edit_timestr__)": "",
@@ -240,13 +246,15 @@
   "Forgotten it?": "",
   "Formatting": "Форматиране",
   "Full name": "Пълно име",
+  "Generate invite link": "",
   "Generate new API key": "",
+  "Generating link...": "",
   "Generic": "",
   "Get API key": "",
   "Go back": "",
   "Got it!": "",
   "Guest": "",
-  "Guest users cannot edit custom emoji.": "",
+  "Guests cannot edit custom emoji.": "",
   "High contrast mode": "",
   "Hint": "",
   "Hint (up to 80 characters)": "",
@@ -260,11 +268,16 @@
   "Interface": "",
   "Invalid slash command. Check if you are missing a space after the command.": "",
   "Invalid stream id": "",
+  "Invitation link: <a href=\"__link__\">__link__</a>": "",
   "Invitations": "",
+  "Invite": "Покана",
   "Invite more users": "Покани още потребители",
+  "Invited as": "",
   "Invited as administrator": "",
   "Invited at": "",
   "Invited by": "",
+  "Invites": "",
+  "Inviting...": "Разпращане покани...",
   "It's been a while! Since you were last here, you received <b>__unread_count__</b> new messages.": "",
   "Joined": "",
   "Joining the organization": "",
@@ -294,7 +307,6 @@
   "Mentioned in": "",
   "Message actions": "Действия със съобщения",
   "Message editing": "",
-  "Message feed": "",
   "Message formatting": "Форматиране на съобщение",
   "Message sent when you were not subscribed": "",
   "Messages retention period in days (blank means messages are retained forever)": "",
@@ -315,6 +327,7 @@
   "Muted topics": "Заглушени теми",
   "N": "",
   "Name": "Име",
+  "Name or email": "",
   "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "",
   "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
@@ -369,9 +382,11 @@
   "Only organization administrators can edit these settings.": "",
   "Only organization administrators can post.": "",
   "Only organization admins are allowed to post to this stream.": "Само администраторите на организацията имат право да публикуват в този поток.",
+  "Only stream subscribers can add users to a private stream.": "",
   "Optional": "",
   "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "",
+  "Organization administrator": "",
   "Organization administrators can change this in the organization settings.": "",
   "Organization avatar": "",
   "Organization description": "",
@@ -382,6 +397,7 @@
   "Organization settings": "",
   "Other notification settings": "",
   "Other permissions": "",
+  "Other settings": "",
   "Outgoing webhook message format": "",
   "Owner": "",
   "Password": "Парола",
@@ -400,11 +416,11 @@
   "Please specify at least one valid recipient": "",
   "Prevent users from changing their email address": "",
   "Prevent users from changing their name": "",
+  "Preview": "Преглед",
   "Preview profile": "",
   "Private messages and @-mentions": "",
   "Profile": "",
   "Profile field settings": "",
-  "Question": "",
   "Quote and reply": "",
   "Reactivate": "",
   "Reactivate bot": "",
@@ -453,7 +469,9 @@
   "Sent! Your message was sent to a stream you have muted.": "",
   "Sent! Your message was sent to a topic you have muted.": "",
   "Sent! Your recent message is outside the current search.": "",
-  "Set status to away": "",
+  "Set a status message": "",
+  "Set yourself to active": "",
+  "Set yourself to away": "",
   "Settings": "Настройки",
   "Setup": "",
   "Setup two factor authentication": "",
@@ -496,8 +514,6 @@
   "The recipients __recipients__ are not valid": "",
   "The stream description has been updated!": "",
   "The stream has been renamed!": "",
-  "The stream to which new stream notifications go to.": "",
-  "The stream which new user signup notifications go to.": "",
   "Their password will be cleared from our systems, and any bots they maintain will be disabled.": "",
   "There are no messages to reply to.": "",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "",
@@ -510,6 +526,7 @@
   "Time settings": "",
   "Time zone": "",
   "Time's up!": "",
+  "Tip: You can also send \"/poll Some question\"": "",
   "Today": "Днес",
   "Toggle subscription": "",
   "Tomorrow": "",
@@ -538,13 +555,11 @@
   "Update successful: Subdomains allowed for __domain__": "",
   "Update successful: Subdomains no longer allowed for __domain__": "",
   "Updated settings!": "",
-  "Updated successfully!": "",
   "Upload avatar": "",
   "Upload icon": "",
   "Upload image or GIF": "",
   "Upload logo": "",
   "Upload new avatar": "",
-  "Upload new icon": "",
   "Upload new logo": "",
   "Uploaded files": "",
   "Uploading icon.": "",
@@ -562,6 +577,7 @@
   "User(s) invited successfully.": "",
   "Username": "Потребителско име",
   "Username (a-z, 0-9, and dashes only)": "",
+  "Users": "Потребители",
   "Users can edit the topic of any message": "",
   "Video chat provider": "",
   "View edit history": "",
@@ -576,11 +592,14 @@
   "View your profile": "",
   "Visual desktop notifications": "",
   "Warning: <strong>__stream_name__</strong> is a private stream.": "",
+  "We are about to have a poll.  Please wait for the question.": "",
+  "We recommend against deleting topics unless needed for security reasons or managing abuse. Deleted messages can be confusing for users who may later visit the topic via notifications.": "",
   "Who can add bots": "",
   "Who can add custom emoji": "",
   "Who can create streams": "",
   "Who can see users email addresses": "",
   "Working\u2026": "",
+  "Write": "Напиши",
   "Yes": "",
   "Yes, delete this stream": "",
   "Yes, send": "",
@@ -609,6 +628,9 @@
   "Your account": "",
   "Your bots": "",
   "Your reminder note is empty!": "",
+  "Zoom API key (required)": "",
+  "Zoom API secret (required)": "",
+  "Zoom user ID (required)": "",
   "[Condense this message]": "",
   "[Configure]": "",
   "[Disable]": "",
