--- a/static/locale/fi/translations.json
+++ b/static/locale/fi/translations.json
@@ -17,7 +17,6 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "<p>Kanava <b>__stream_name__</b> ei ole olemassa.</p><p>Hallinnoi tilauksiasi <a href='#streams/all'>sinun Kanavat sivulla</a>.</p>",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "<strong>__name__</strong>ei ole tilannut tätä kanavaa. Hän ei saa ilmoitusta ellet tilaa kanavaa heille.",
-  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "Kanavalla täytyy olla nimi",
   "A stream with this name already exists": "Tämän niminen kanava on jo olemassa",
   "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
@@ -35,6 +34,7 @@
   "Add a new profile field": "Lisää uusi profiilin kenttä",
   "Add a new user group": "Lisää uusi käyttäjäryhmä",
   "Add alert word": "Lisää hälytyssana",
+  "Add choice": "",
   "Add emoji": "Lisää emoji",
   "Add emoji reaction": "Lisää emoji reaktio",
   "Add emoji reaction (:)": "Lisää emoji reaktio (:)",
@@ -43,11 +43,11 @@
   "Add member...": "Lisää jäsen...",
   "Add members of your organization to mentionable user groups.": "Lisää organisaatiosi jäseniä mainittaviin käyttäjäryhmiin.",
   "Add new default stream": "Lisää uusi oletuskanava",
-  "Add option": "",
   "Add profile field": "Lisää profiilin kenttä",
   "Add question": "",
   "Add stream": "Lisää kanava",
   "Add task": "",
+  "Add video call": "Lisää videopuhelu",
   "Added successfully!": "Lisätty onnistuneesti!",
   "Administrator": "",
   "Administrators can always delete any message.": "Järjestelmänvalvojat voivat aina poistaa minkä tahansa viestin.",
@@ -61,8 +61,8 @@
   "Alert words allow you to be notified as if you were @-mentioned when certain words or phrases are used in Zulip.": "Hälytyssanat mahdollistavat ilmoitukset samalla tavalla kuin olisit @-mainittu kun tiettyjä sanoja tai sanontoja käytetään Zulipissa. ",
   "All admins, and members with accounts at least 3 days old.": "",
   "All admins, and members with accounts at least N days old.": "",
-  "All messages": "Kaikki viestit",
   "All streams": "Kaikki kanavat",
+  "Allow message content in missed message emails": "",
   "Allow message deleting": "",
   "Allow message editing": "",
   "Allow subdomains": "Salli aliverkkotunnukset",
@@ -80,6 +80,7 @@
   "Are invitations required for joining the organization?": "",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "Oletko varma, että haluat luoda kanavan '__stream_name__' ja tilata __count__ käyttäjää siihen?",
   "Are you sure you want to delete <b>__group_name__</b>?": "",
+  "Are you sure you want to delete all messages in <b>__topic_name__</b>?": "",
   "Are you sure you want to do this?": "Oletko varma, että haluat tehdä tämän?",
   "Are you sure you want to mention all <strong>__count__</strong> people in this stream?": "Oletko varma, että haluat mainita kaikki <strong>__count__</strong> ihmistä tässä kanavassa?",
   "Are you sure you want to resend the invitation to <strong><span class=\"email\"></span></strong>?": "Oletko varma, että haluat lähettää kutsun uudelleen <strong><span class=\"email\"></span></strong>?",
@@ -95,10 +96,12 @@
   "Bot email": "Botin sähköposti",
   "Bot list": "Bottilista",
   "Bot type": "Botin tyyppi",
+  "Bots": "Botit",
   "By deactivating <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, they will be logged out immediately.": "Deaktivoimalla <strong><span class=\"user_name\"></span></strong>&lt;<span class=\"email\"></span>&gt;, he kirjautuvat ulos välittömästi.",
   "By deactivating your account, you will be logged out immediately.": "Deaktivoimalla tilisi, kirjaudut ulos välittömästi.",
   "Cancel": "Peruuta",
   "Change": "Muuta",
+  "Change bot info and owner": "",
   "Change email": "Muuta sähköposti",
   "Change full name": "Muuta koko nimi",
   "Change later messages to this topic": "Vaihda aiheen tuleville viesteille",
@@ -113,15 +116,14 @@
   "Check all": "Valitse kaikki",
   "Choose avatar": "Valitse avatar",
   "Choose custom color": "Valitse kustomoitu väri",
+  "Clear": "",
   "Clear avatar": "Tyhjennä avatar",
-  "Clear away status": "",
   "Clear emoji image": "Tyhjennä emojikuva",
   "Click anywhere on a message to reply.": "Klikkaa viestiä vastataksesi.",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "Klikkaa syöttölaatikon ulkopuolella tallentaaksesi. He jotka ovat lisätty tai poistettu saavat automaattisesti ilmoituksen.",
   "Close": "Sulje",
   "Collapse": "Kutista",
   "Compose a message to stream <b>__stream.name__</b>": "Kirjoita viesti <b>__stream.name__</b> kanavaan",
-  "Configure default settings for new users joining this organization.": "Konfiguroi oletusasetukset organisaation uusille käyttäjille.",
   "Configure regular expression patterns that will be automatically linkified when used in Zulip message bodies or topics.  For example to automatically linkify commit IDs and issue numbers (e.g. #123) to the corresponding items in a GitHub project, you could use the following:": "Konfiguroi säännölliset lausekemallit jotka automaattisesti linkittyy kun niitä käytetään Zulipissa viestin sisällössä tai aiheessa. Esimerkiksi seuraavaa voi käyttää automaattisesti linkittämään commit ID:t ja issue numerot (esim. #123) vastaaviin osiohin GitHub projektissa:",
   "Configure the authentication methods for your organization.": "Konfiguroi organisaation todennusmenetelmät.",
   "Configure the default streams new users are subscribed to when joining your organization.": "Konfiguroi oletuskanavat jotka uudet käyttäjät tilaavat liittyessään organisaatioon.",
@@ -154,10 +156,12 @@
   "Deactivated users": "Deaktivoidut käyttäjät",
   "Deactivation encountered an error. Please reload and try again.": "Deaktivointi kohtasi virheen. Ole hyvä ja lataa sivu uudelleen ja yritä uudestaan.",
   "Default language": "Oletuskieli",
+  "Default settings for new users joining this organization.": "",
   "Default streams": "Oletuskanava",
   "Default user settings": "Oletuskäyttäjäasetukset",
   "Delete": "Poista",
   "Delete alert word": "Poista hälytyssana",
+  "Delete all messages in <b>__topic_name__</b>": "",
   "Delete avatar": "Poista avatar",
   "Delete bot": "Poista botti",
   "Delete draft": "Poista luonnos",
@@ -165,7 +169,9 @@
   "Delete icon": "Poista kuvake",
   "Delete logo": "",
   "Delete message": "Poista viesti",
+  "Delete messages": "",
   "Delete stream": "Poista kanava",
+  "Delete topic": "",
   "Delete user group": "",
   "Deleted successfully!": "Poistettu onnistuneesti!",
   "Deleting this stream will immediately unsubscribe everyone, and the stream's content will not be recoverable.": "Poistamalla tämän kanavan kaikilta poistetaan kanavan tilaus välittömästi, ja kanavan sisältöä ei voida palauttaa.",
@@ -189,7 +195,7 @@
   "EDITED": "MUOKATTU",
   "Edit": "Muokkaa",
   "Edit bot": "Muokkaa bottia",
-  "Edit question": "",
+  "Edit status message": "",
   "Edit user": "Muokkaa käyttäjää",
   "Edit your profile": "Muokkaa profiiliasi",
   "Edited (__last_edit_timestr__)": "Muokattu (__last_edit_timestr__)",
@@ -240,13 +246,15 @@
   "Forgotten it?": "Unohtuiko se?",
   "Formatting": "Muotoilu",
   "Full name": "Koko nimi",
+  "Generate invite link": "",
   "Generate new API key": "Generoi uusi API avain",
+  "Generating link...": "",
   "Generic": "Yleinen",
   "Get API key": "Hae API avain",
   "Go back": "Palaa takaisin",
   "Got it!": "Selvä!",
   "Guest": "",
-  "Guest users cannot edit custom emoji.": "",
+  "Guests cannot edit custom emoji.": "",
   "High contrast mode": "Voimakas kontrasti tila",
   "Hint": "Vihje",
   "Hint (up to 80 characters)": "",
@@ -260,11 +268,16 @@
   "Interface": "Rajapinta",
   "Invalid slash command. Check if you are missing a space after the command.": "Virheellinen kauttaviivakomento. Tarkista puuttuuko välilyönti komennon perästä.",
   "Invalid stream id": "Virheellinen kanavan id",
+  "Invitation link: <a href=\"__link__\">__link__</a>": "",
   "Invitations": "Kutsut",
+  "Invite": "Kutsu",
   "Invite more users": "Kutsu lisää käyttäjiä",
+  "Invited as": "",
   "Invited as administrator": "Kutsuttu järjestelmänvalvojaksi",
   "Invited at": "Kutsuttu",
   "Invited by": "Kutsujana",
+  "Invites": "",
+  "Inviting...": "Kutsutaan...",
   "It's been a while! Since you were last here, you received <b>__unread_count__</b> new messages.": "Siitä onkin jo aikaa! Viime kerran jälkeen olet saanut <b>__unread_count__</b> uutta viestiä.",
   "Joined": "",
   "Joining the organization": "Liittymässä organisaatioon",
@@ -294,7 +307,6 @@
   "Mentioned in": "Mainittu",
   "Message actions": "Viestitoiminnot",
   "Message editing": "Viestin muokkaaminen",
-  "Message feed": "Viestisyöte",
   "Message formatting": "Viestin muotoilu",
   "Message sent when you were not subscribed": "Viesti lähetettiin kun et ollut tilanneena",
   "Messages retention period in days (blank means messages are retained forever)": "Viestien säilytysaika ilmaistaan päivissä (tyhjä tarkoittaa viestien ikuista säilytystä)",
@@ -315,6 +327,7 @@
   "Muted topics": "Mykistetyt aiheet",
   "N": "",
   "Name": "Nimi",
+  "Name or email": "",
   "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "Supista kanavaan &quot;__display_recipient__&quot;",
   "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
@@ -369,9 +382,11 @@
   "Only organization administrators can edit these settings.": "Ainoastaan organisaation järjestelmänvalvojat voivat muokata näitä asetuksia.",
   "Only organization administrators can post.": "",
   "Only organization admins are allowed to post to this stream.": "",
+  "Only stream subscribers can add users to a private stream.": "",
   "Optional": "Valinnainen",
   "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "Organisaatio",
+  "Organization administrator": "",
   "Organization administrators can change this in the organization settings.": "Organisaation järjestelmänvalvojat voivat muuttaa tämän organisaation asetuksista.",
   "Organization avatar": "Organisaation avatar",
   "Organization description": "",
@@ -382,6 +397,7 @@
   "Organization settings": "Organisaation asetukset",
   "Other notification settings": "Muut ilmoitusasetukset",
   "Other permissions": "Muut käyttöoikeudet",
+  "Other settings": "",
   "Outgoing webhook message format": "Lähtevä webhook viestiformaatti",
   "Owner": "Omistaja",
   "Password": "Salasana",
@@ -400,11 +416,11 @@
   "Please specify at least one valid recipient": "Ole hyvä ja määritä vähintään yksi kelvollinen vastaanottaja",
   "Prevent users from changing their email address": "Estä käyttäjiä vaihtamasta heidän sähköposti osoitetta",
   "Prevent users from changing their name": "Estä käyttäjiä vaihtamasta heidän nimeä",
+  "Preview": "Esikatselu",
   "Preview profile": "",
   "Private messages and @-mentions": "Yksityisviestit ja @-maininnat",
   "Profile": "Profiili",
   "Profile field settings": "Profiilikentän asetukset",
-  "Question": "",
   "Quote and reply": "Lainaa ja vastaa",
   "Reactivate": "Aktivoi uudelleen",
   "Reactivate bot": "Aktivoi botti uudelleen",
@@ -453,7 +469,9 @@
   "Sent! Your message was sent to a stream you have muted.": "",
   "Sent! Your message was sent to a topic you have muted.": "",
   "Sent! Your recent message is outside the current search.": "",
-  "Set status to away": "",
+  "Set a status message": "",
+  "Set yourself to active": "",
+  "Set yourself to away": "",
   "Settings": "Asetukset",
   "Setup": "",
   "Setup two factor authentication": "",
@@ -496,8 +514,6 @@
   "The recipients __recipients__ are not valid": "Vastaanottajat __recipients__ eivät ole kelvollisia",
   "The stream description has been updated!": "Kanavan kuvaus on päivitetty!",
   "The stream has been renamed!": "Kanava on nimetty uudelleen!",
-  "The stream to which new stream notifications go to.": "Kanava johon uudet kanavan ilmoitukset menevät.",
-  "The stream which new user signup notifications go to.": "Kanava johon uusien käyttäjien rekisteröinti ilmoitukset menevät.",
   "Their password will be cleared from our systems, and any bots they maintain will be disabled.": "Heidän salasanat pyyhitään meidän järjestelmästä, ja kaikki heidän ylläpitämät botit poistetaan käytöstä.",
   "There are no messages to reply to.": "",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "",
@@ -510,6 +526,7 @@
   "Time settings": "Aika-asetukset",
   "Time zone": "Aikavyöhyke",
   "Time's up!": "Aika päättyi!",
+  "Tip: You can also send \"/poll Some question\"": "",
   "Today": "Tänään",
   "Toggle subscription": "Vaihda tilaksen tilaa",
   "Tomorrow": "Huomenna",
@@ -538,13 +555,11 @@
   "Update successful: Subdomains allowed for __domain__": "Päivitys onnistui: Aliverkkotunnukset ovat sallittuja __domain__ verkkotunnukselle",
   "Update successful: Subdomains no longer allowed for __domain__": "Päivitys onnistui: Aliverkkotunnukset eivät ole enään sallittuja __domain__ verkkotunnukselle",
   "Updated settings!": "Asetukset päivitetty!",
-  "Updated successfully!": "Päivitetty onnistuneesti!",
   "Upload avatar": "Lähetä avatar",
   "Upload icon": "Lähetä kuvake",
   "Upload image or GIF": "",
   "Upload logo": "",
   "Upload new avatar": "Lähetä uusi avatar",
-  "Upload new icon": "Lähetä uusi kuvake",
   "Upload new logo": "",
   "Uploaded files": "Lähetetyt tiedostot",
   "Uploading icon.": "Kuvaketta lähetetään.",
@@ -562,6 +577,7 @@
   "User(s) invited successfully.": "Käyttäjä(t) kutsuttu onnistuneesti.",
   "Username": "Käyttäjätunnus",
   "Username (a-z, 0-9, and dashes only)": "",
+  "Users": "Käyttäjät",
   "Users can edit the topic of any message": "Käyttäjät voivat muokata kaikkien viestien aihetta",
   "Video chat provider": "Videochatin tarjoaja",
   "View edit history": "Katso muokkaushistoriaa",
@@ -576,11 +592,14 @@
   "View your profile": "Katso omaa profiiliasi",
   "Visual desktop notifications": "Visuaaliset työpöytä ilmoitukset",
   "Warning: <strong>__stream_name__</strong> is a private stream.": "Varoitus: <strong>__stream_name__</strong> on yksityiskanava.",
+  "We are about to have a poll.  Please wait for the question.": "",
+  "We recommend against deleting topics unless needed for security reasons or managing abuse. Deleted messages can be confusing for users who may later visit the topic via notifications.": "",
   "Who can add bots": "Kuka voi lisätä botteja",
   "Who can add custom emoji": "Kuka voi lisätä mukautetun emojin",
   "Who can create streams": "Kuka voi luoda kanavia",
   "Who can see users email addresses": "",
   "Working\u2026": "Työstää...",
+  "Write": "Kirjoita",
   "Yes": "Kyllä",
   "Yes, delete this stream": "Kyllä, poista tämä kanava",
   "Yes, send": "Kyllä, lähetä",
@@ -609,6 +628,9 @@
   "Your account": "Sinun tilisi",
   "Your bots": "Sinun botit",
   "Your reminder note is empty!": "",
+  "Zoom API key (required)": "",
+  "Zoom API secret (required)": "",
+  "Zoom user ID (required)": "",
   "[Condense this message]": "",
   "[Configure]": "",
   "[Disable]": "",
