--- a/static/locale/fr/translations.json
+++ b/static/locale/fr/translations.json
@@ -17,7 +17,6 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "<p>Le canal <b>__stream_name__</b> n'existe pas.</p><p>Gérer vos abonnements <a href='#streams/all'>dans la page de vos canaux</a>.</p>",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "<strong>__name__</strong> n'est pas abonné à ce canal. Ils ne seront pas avertis si vous les mentionnez.",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "<strong>__name__</strong> n'est pas abonné à ce canal. Il ne recevra aucune notification tant que vous ne l'y aurez pas abonné.",
-  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "Un canal doit avoir un nom",
   "A stream with this name already exists": "Ce nom de canal existe déjà",
   "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
@@ -35,6 +34,7 @@
   "Add a new profile field": "Ajouter un nouveau champs pour le profil",
   "Add a new user group": "Ajouter un nouveau groupe d'utilisateur",
   "Add alert word": "Ajouter un mot d'alerte",
+  "Add choice": "",
   "Add emoji": "Ajouter un emoji",
   "Add emoji reaction": "Ajouter une réaction emoji",
   "Add emoji reaction (:)": "Ajouter une réaction emoji (:)",
@@ -43,11 +43,11 @@
   "Add member...": "Ajouter un membre…",
   "Add members of your organization to mentionable user groups.": "Ajouter des membres de votre organisation aux groupes d'utilisateur qui peuvent être mentioner.",
   "Add new default stream": "Ajouter un nouveau canal par défaut",
-  "Add option": "Ajouter une option",
   "Add profile field": "Ajouter champs de profil",
   "Add question": "Ajouter une question",
   "Add stream": "Ajouter un canal",
   "Add task": "Ajouter une tâche",
+  "Add video call": "Ajouter l'appel vidéo",
   "Added successfully!": "Ajouté avec succès !",
   "Administrator": "Administrateur",
   "Administrators can always delete any message.": "Les administrateurs peuvent toujours supprimer n'importe quel message.",
@@ -61,8 +61,8 @@
   "Alert words allow you to be notified as if you were @-mentioned when certain words or phrases are used in Zulip.": "Les mots alerte vous permettent d'être averti comme si vous étiez @-mentionné lorsque certains mots ou expressions sont utilisés dans Zulip.",
   "All admins, and members with accounts at least 3 days old.": "Tous les administrateurs et membres possédant des comptes ayant au moins 3 jours d'ancienneté.",
   "All admins, and members with accounts at least N days old.": "Tous les administrateurs et membres possédant des comptes ayant au moins N jours d'ancienneté.",
-  "All messages": "Tous les messages",
   "All streams": "Tous les canaux",
+  "Allow message content in missed message emails": "",
   "Allow message deleting": "Autoriser la suppression des messages",
   "Allow message editing": "Autoriser la modification des messages",
   "Allow subdomains": "Autoriser les sous-domaines",
@@ -80,6 +80,7 @@
   "Are invitations required for joining the organization?": "Une invitation est-elle nécessaire pour rejoindre l'organisation?",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "Êtes-vous sûr de vouloir créer un nouveau canal '__stream_name' et d'y inscrire __count__ utilisateurs ?",
   "Are you sure you want to delete <b>__group_name__</b>?": "Êtes-vous sûr de vouloir supprimer <b>__group_name__</b> ?",
+  "Are you sure you want to delete all messages in <b>__topic_name__</b>?": "",
   "Are you sure you want to do this?": "Êtes-vous sûr de vouloir faire ceci ?",
   "Are you sure you want to mention all <strong>__count__</strong> people in this stream?": "Êtes-vous sûr de vouloir mentionner ces <strong>__count__</strong> personnes dans ce canal?",
   "Are you sure you want to resend the invitation to <strong><span class=\"email\"></span></strong>?": "Êtes-vous sûr de vouloir renvoyer l'invitation à <strong><span class=\"email\"></span></strong> ?",
@@ -95,10 +96,12 @@
   "Bot email": "Robot courriel",
   "Bot list": "Liste des robots",
   "Bot type": "Type du robot",
+  "Bots": "Robots",
   "By deactivating <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, they will be logged out immediately.": "En désactivant<strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, ils seront immédiatement déconnectés.",
   "By deactivating your account, you will be logged out immediately.": "En désactivant votre compte, vous serez immédiatement déconnecté.",
   "Cancel": "Annuler",
   "Change": "Changer",
+  "Change bot info and owner": "",
   "Change email": "Changer de courriel",
   "Change full name": "Changer le nom complet",
   "Change later messages to this topic": "Modifier les messages les plus récents de ce sujet",
@@ -113,15 +116,14 @@
   "Check all": "Tout sélectionner",
   "Choose avatar": "Choisir un avatar",
   "Choose custom color": "Choisir une couleur personnalisé",
+  "Clear": "",
   "Clear avatar": "Retirer l'avatar",
-  "Clear away status": "",
   "Clear emoji image": "Retirer l'image emoji",
   "Click anywhere on a message to reply.": "Cliquer n'importe où sur un message pour y répondre.",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "Cliquer en dehors de la fenêtre pour sauvegarder. Une notification sera émise automatiquement à chaque fois qu'une personne sera ajoutée ou retirée.",
   "Close": "Fermer",
   "Collapse": "Réduire",
   "Compose a message to stream <b>__stream.name__</b>": "Rédiger un message dans le canal <b>__stream.name__</b>",
-  "Configure default settings for new users joining this organization.": "Configurez les canaux par défaut auxquels les nouveaux utilisateurs sont abonnés lors de l'inscription à votre organisation.",
   "Configure regular expression patterns that will be automatically linkified when used in Zulip message bodies or topics.  For example to automatically linkify commit IDs and issue numbers (e.g. #123) to the corresponding items in a GitHub project, you could use the following:": "Configurer les modèles d'expressions régulières qui seront automatiquement liées lorsqu'elles seront utilisées dans les messages ou les corps de messages de Zulip. Par exemple, pour lier automatiquement des IDS de commit et des numéros d'incident (ex: #123) à l'item correspondant dans un projet GitHub, vous pouvez utiliser le modèle suivant:",
   "Configure the authentication methods for your organization.": "Configurer les méthodes d'authentification pour votre organisation.",
   "Configure the default streams new users are subscribed to when joining your organization.": "Configurez les canaux par défaut auxquels les nouveaux utilisateurs sont inscrits lors de l'inscription à votre organisation.",
@@ -145,7 +147,7 @@
   "Customize avatar": "Personnaliser l'avatar",
   "Date uploaded": "Date envoyée",
   "Day": "",
-  "Day mode": "",
+  "Day mode": "Mode jour",
   "Deactivate": "Désactiver",
   "Deactivate account": "Désactiver le compte",
   "Deactivate now": "Désactiver maintenant",
@@ -154,10 +156,12 @@
   "Deactivated users": "Utilisateurs désactivés",
   "Deactivation encountered an error. Please reload and try again.": "La désactivation a rencontré une erreur. Veuillez recharger et réessayer",
   "Default language": "Langue par défaut",
+  "Default settings for new users joining this organization.": "",
   "Default streams": "Canaux par défaut",
   "Default user settings": "Paramètres nominaux de l'utilisateur",
   "Delete": "Supprimer",
   "Delete alert word": "Supprimer le mot alerte",
+  "Delete all messages in <b>__topic_name__</b>": "",
   "Delete avatar": "Supprimer l'avatar",
   "Delete bot": "Supprimer le robot",
   "Delete draft": "Supprimer le brouillon",
@@ -165,7 +169,9 @@
   "Delete icon": "Supprimer l'icône",
   "Delete logo": "",
   "Delete message": "Supprimer le message",
+  "Delete messages": "",
   "Delete stream": "Supprimer le canal",
+  "Delete topic": "",
   "Delete user group": "Supprimer le groupe utilisateur",
   "Deleted successfully!": "Supprimé avec succès !",
   "Deleting this stream will immediately unsubscribe everyone, and the stream's content will not be recoverable.": "La suppression de ce canal désinscrit immédiatement tout le monde, et le contenu du canal ne sera pas récupérable.",
@@ -189,7 +195,7 @@
   "EDITED": "MODIFIÉ",
   "Edit": "Modifier",
   "Edit bot": "Modifier robot",
-  "Edit question": "Modifier la question",
+  "Edit status message": "",
   "Edit user": "Modifier utilisateur",
   "Edit your profile": "Modifier votre profil",
   "Edited (__last_edit_timestr__)": "Modifié (__last_edit_timestr__)",
@@ -220,7 +226,7 @@
   "Error saving edit": "Erreur durant l'enregistrement de l'édition",
   "Error: Cannot deactivate the only organization administrator.": "",
   "Estimated messages per week": "Estimation du nombre de messages par semaine",
-  "External link": "",
+  "External link": "Lien externe",
   "Failed": "Échoué",
   "Failed to change notifications stream!": "Échec lors de la mise à jour des notifications du canal!",
   "Failed to change signup notifications stream!": "Échec lors de la mise à jour des notifications du canal!",
@@ -240,13 +246,15 @@
   "Forgotten it?": "Oublier?",
   "Formatting": "Formater",
   "Full name": "Nom complet",
+  "Generate invite link": "",
   "Generate new API key": "Générer une nouvelle clé API",
+  "Generating link...": "",
   "Generic": "Générique",
   "Get API key": "Obtenir une clé API",
   "Go back": "Retourner",
   "Got it!": "Compris !",
   "Guest": "Invité",
-  "Guest users cannot edit custom emoji.": "",
+  "Guests cannot edit custom emoji.": "",
   "High contrast mode": "Mode contraste élevé",
   "Hint": "Indice",
   "Hint (up to 80 characters)": "Indication (jusqu'à 80 caractères)",
@@ -260,11 +268,16 @@
   "Interface": "Interface",
   "Invalid slash command. Check if you are missing a space after the command.": "Commande slash non valide. Vérifier si vous n'avez pas oublié un espace après la commande.",
   "Invalid stream id": "ID de canal invalide",
+  "Invitation link: <a href=\"__link__\">__link__</a>": "",
   "Invitations": "Invitations",
+  "Invite": "Inviter",
   "Invite more users": "Inviter d'autres utilisateurs",
+  "Invited as": "",
   "Invited as administrator": "Invité en tant qu'administrateur",
   "Invited at": "Invité à",
   "Invited by": "Invité par",
+  "Invites": "",
+  "Inviting...": "En cours d'invitation…",
   "It's been a while! Since you were last here, you received <b>__unread_count__</b> new messages.": "Cela fait longtemps! Depuis votre dernier passage ici, vous avez reçu <b>__unread_count__</b> nouveaux messages.",
   "Joined": "Rejoint",
   "Joining the organization": "Rejoindre l'organisation",
@@ -294,7 +307,6 @@
   "Mentioned in": "Mentionné dans",
   "Message actions": "Options du message",
   "Message editing": "Modification de message",
-  "Message feed": "Diffusion des messages",
   "Message formatting": "Formatage du message",
   "Message sent when you were not subscribed": "Message envoyé lorsque vous n'étiez pas abonné",
   "Messages retention period in days (blank means messages are retained forever)": "Période de conservation des messages en jours (vide signifie que les messages sont conservés à jamais)",
@@ -308,13 +320,14 @@
   "More than 2 weeks ago": "Il y a plus de 2 semaines",
   "Mute stream": "Rendre muet le canal",
   "Mute the stream <b>__stream.name__</b>": "Rendre le canal <b>__stream.name__</b> muet  ",
-  "Mute the topic <b>__topic__</b>": "",
+  "Mute the topic <b>__topic__</b>": "Rendre le sujet <b>__topic__</b> muet",
   "Mute the topic <b>__topic_name__</b>": "Rendre le sujet <b>__topic_name__</b> muet",
   "Mute topic": "Rendre le sujet muet",
   "Muted streams don't show up in \\\"All messages\\\" or generate notifications unless you are mentioned.": "Les canaux muets n'apparaissent pas dans \\\"Tous les messages\\\" et ne générent pas de notifications à moins d'être mentioné.",
   "Muted topics": "Sujets muets",
   "N": "N",
   "Name": "Nom",
+  "Name or email": "",
   "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "Restreindre au canal &quot;__display_recipient__&quot;",
   "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
@@ -369,9 +382,11 @@
   "Only organization administrators can edit these settings.": "Seuls les administrateurs de l'organisation peuvent modifier ces paramètres.",
   "Only organization administrators can post.": "Seuls les administrateurs de l'organisation peuvent poster de messages.",
   "Only organization admins are allowed to post to this stream.": "Seuls les administrateurs de l'organisation peuvent poster sur ce canal.",
+  "Only stream subscribers can add users to a private stream.": "",
   "Optional": "Optionnel",
   "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "Organisation",
+  "Organization administrator": "Administrateur de l'organisation",
   "Organization administrators can change this in the organization settings.": "Les administrateurs de l'organisation peuvent changer cela dans les paramètre de l'organisation.",
   "Organization avatar": "Avatar de l'organisation",
   "Organization description": "Description de l'organisation",
@@ -382,6 +397,7 @@
   "Organization settings": "Paramètres de l'organisation",
   "Other notification settings": "Autres paramètres de notification",
   "Other permissions": "Autres permissions",
+  "Other settings": "",
   "Outgoing webhook message format": "Format du message du webhook sortant",
   "Owner": "Propriétaire",
   "Password": "Mot de passe",
@@ -400,11 +416,11 @@
   "Please specify at least one valid recipient": "Veuillez préciser au moins un destinataire valide",
   "Prevent users from changing their email address": "Prévenir les utilisateurs de modifier leur courriel",
   "Prevent users from changing their name": "Prévenir les utilisateurs de modifier leur nom",
+  "Preview": "Aperçu",
   "Preview profile": "Aperçu du profil",
   "Private messages and @-mentions": "Messages privés et @-mentions",
   "Profile": "Profil",
   "Profile field settings": "Paramètres du champs de profil",
-  "Question": "Question",
   "Quote and reply": "Citer et répondre",
   "Reactivate": "Réactiver",
   "Reactivate bot": "Réactiver le robot",
@@ -453,7 +469,9 @@
   "Sent! Your message was sent to a stream you have muted.": "",
   "Sent! Your message was sent to a topic you have muted.": "",
   "Sent! Your recent message is outside the current search.": "",
-  "Set status to away": "",
+  "Set a status message": "",
+  "Set yourself to active": "",
+  "Set yourself to away": "",
   "Settings": "Paramètres",
   "Setup": "Configurer",
   "Setup two factor authentication": "Configurer l'authentification à deux facteurs",
@@ -496,8 +514,6 @@
   "The recipients __recipients__ are not valid": "Les destinataires __recipients__ ne sont pas valides",
   "The stream description has been updated!": "La description du canal a été mise à jour!",
   "The stream has been renamed!": "Le canal a été renommé!",
-  "The stream to which new stream notifications go to.": "Le canal vers lequel les nouvelles notifications sont envoyées.",
-  "The stream which new user signup notifications go to.": "Le canal dans lequel les inscriptions des nouveaux utilisateurs sont inscrites",
   "Their password will be cleared from our systems, and any bots they maintain will be disabled.": "Leur mot de passe sera effacé de nos systèmes et tous les robots qu'ils maintiennent seront désactivés.",
   "There are no messages to reply to.": "Il n'y aucun message auquel répondre.",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "Ce paramétrage est expliquer en détail dans le <a target=\"_blank\" href=\"/help/stream-permissions\">centre d'aide</a>.",
@@ -510,6 +526,7 @@
   "Time settings": "Paramètres de l'heure",
   "Time zone": "Fuseau horaire",
   "Time's up!": "Le temps est écoulé!",
+  "Tip: You can also send \"/poll Some question\"": "",
   "Today": "Aujourd'hui",
   "Toggle subscription": "Changer l'abonnement",
   "Tomorrow": "Demain",
@@ -538,13 +555,11 @@
   "Update successful: Subdomains allowed for __domain__": "Mise à jour réussie : Sous-domaines autorisés pour __domain__",
   "Update successful: Subdomains no longer allowed for __domain__": "Mise à jour réussie : Les sous-domaines ne sont plus autorisés pour __domain__",
   "Updated settings!": "Paramètres mis à jour!",
-  "Updated successfully!": "Mise à jour réussie !",
   "Upload avatar": "Envoyer un avatar",
   "Upload icon": "Envoyer une icône",
   "Upload image or GIF": "Charger une image ou un GIF",
   "Upload logo": "",
   "Upload new avatar": "Envoyer un nouvel avatar",
-  "Upload new icon": "Envoyer une nouvelle icône",
   "Upload new logo": "",
   "Uploaded files": "Fichiers envoyés",
   "Uploading icon.": "Icône en cours d'envoi.",
@@ -562,6 +577,7 @@
   "User(s) invited successfully.": "Utilisateur(s) invité(s) avec succès.",
   "Username": "Nom d'utilisateur",
   "Username (a-z, 0-9, and dashes only)": "Nom d'utilisateur (a-z,0-9, et tirets seulement)",
+  "Users": "Utilisateurs",
   "Users can edit the topic of any message": "Les utilisateurs peuvent éditer le sujet de n'importe quel message",
   "Video chat provider": "Fournisseur de service vidéo",
   "View edit history": "Voir l'historique des modifications",
@@ -576,11 +592,14 @@
   "View your profile": "Voir votre profil",
   "Visual desktop notifications": "Notifications visuelles de bureau",
   "Warning: <strong>__stream_name__</strong> is a private stream.": "Attention: <strong>__stream_name__</strong> est un canal privé.",
+  "We are about to have a poll.  Please wait for the question.": "",
+  "We recommend against deleting topics unless needed for security reasons or managing abuse. Deleted messages can be confusing for users who may later visit the topic via notifications.": "",
   "Who can add bots": "Qui peut ajouter des bots",
   "Who can add custom emoji": "Qui peut ajouter des emojis personnalisés",
   "Who can create streams": "Qui peut créer des canaux",
   "Who can see users email addresses": "",
   "Working\u2026": "Travail en cours…",
+  "Write": "Ecrire",
   "Yes": "Oui",
   "Yes, delete this stream": "Oui, supprimer ce canal",
   "Yes, send": "Oui, envoyer",
@@ -609,6 +628,9 @@
   "Your account": "Votre compte",
   "Your bots": "Vos robots",
   "Your reminder note is empty!": "Votre carnet de notes de rappel est vide!",
+  "Zoom API key (required)": "",
+  "Zoom API secret (required)": "",
+  "Zoom user ID (required)": "",
   "[Condense this message]": "[Condenser ce message]",
   "[Configure]": "[Configurer]",
   "[Disable]": "[Désactiver]",
