--- a/static/locale/ml/translations.json
+++ b/static/locale/ml/translations.json
@@ -17,7 +17,6 @@
   "<p>The stream <b>__stream_name__</b> does not exist.</p><p>Manage your subscriptions <a href='#streams/all'>on your Streams page</a>.</p>": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified if you mention them.": "",
   "<strong>__name__</strong> is not subscribed to this stream. They will not be notified unless you subscribe them.": "",
-  "A square logo used to brand your Zulip organization.": "",
   "A stream needs to have a name": "",
   "A stream with this name already exists": "",
   "A wide image, replacing the Zulip logo in the upper left corner of the Zulip apps.": "",
@@ -35,6 +34,7 @@
   "Add a new profile field": "",
   "Add a new user group": "",
   "Add alert word": "",
+  "Add choice": "",
   "Add emoji": "ഇമോജി ചേർക്കുക",
   "Add emoji reaction": "",
   "Add emoji reaction (:)": "",
@@ -43,11 +43,11 @@
   "Add member...": "",
   "Add members of your organization to mentionable user groups.": "",
   "Add new default stream": "",
-  "Add option": "",
   "Add profile field": "",
   "Add question": "",
   "Add stream": "",
   "Add task": "",
+  "Add video call": "",
   "Added successfully!": "",
   "Administrator": "",
   "Administrators can always delete any message.": "",
@@ -61,8 +61,8 @@
   "Alert words allow you to be notified as if you were @-mentioned when certain words or phrases are used in Zulip.": "",
   "All admins, and members with accounts at least 3 days old.": "",
   "All admins, and members with accounts at least N days old.": "",
-  "All messages": "എല്ലാ മെസ്സേജുകളും ",
   "All streams": "എല്ലാ ശാഖകൾ",
+  "Allow message content in missed message emails": "",
   "Allow message deleting": "",
   "Allow message editing": "",
   "Allow subdomains": "",
@@ -80,6 +80,7 @@
   "Are invitations required for joining the organization?": "",
   "Are you sure you want to create stream '__stream_name__' and subscribe __count__ users to it?": "",
   "Are you sure you want to delete <b>__group_name__</b>?": "",
+  "Are you sure you want to delete all messages in <b>__topic_name__</b>?": "",
   "Are you sure you want to do this?": "നിങ്ങൾക്കിതു ചെയ്യണമെന്നു ഉറപ്പാണോ?",
   "Are you sure you want to mention all <strong>__count__</strong> people in this stream?": "",
   "Are you sure you want to resend the invitation to <strong><span class=\"email\"></span></strong>?": "",
@@ -95,10 +96,12 @@
   "Bot email": "",
   "Bot list": "",
   "Bot type": "",
+  "Bots": "ബോട്ടുകൾ",
   "By deactivating <strong><span class=\"user_name\"></span></strong> &lt;<span class=\"email\"></span>&gt;, they will be logged out immediately.": "",
   "By deactivating your account, you will be logged out immediately.": "",
   "Cancel": "റദ്ദാക്കുക",
   "Change": "",
+  "Change bot info and owner": "",
   "Change email": "",
   "Change full name": "",
   "Change later messages to this topic": "ഇതു കഴിഞ്ഞുള്ള സന്ദേഷങ്ങളേല്ലാം ഈ വിഷയത്തിലേക്ക് മാറ്റുക",
@@ -113,15 +116,14 @@
   "Check all": "എല്ലാം ഉൾപ്പെടുത്തുക",
   "Choose avatar": "അവതാർ തിരഞ്ഞെടുക്കുക",
   "Choose custom color": "വേണ്ട നീറം തിരഞ്ഞെടുക്കുക",
+  "Clear": "",
   "Clear avatar": "അവതാർ കളയുക",
-  "Clear away status": "",
   "Clear emoji image": "",
   "Click anywhere on a message to reply.": "",
   "Click outside the input box to save. We\\'ll automatically notify anyone that was added or removed.": "",
   "Close": "",
   "Collapse": "വലുതാക്കുക",
   "Compose a message to stream <b>__stream.name__</b>": "<b>__stream.name__</b> ശാഖയിലേക്കുള്ള സന്ദേശം രചിക്കുക",
-  "Configure default settings for new users joining this organization.": "",
   "Configure regular expression patterns that will be automatically linkified when used in Zulip message bodies or topics.  For example to automatically linkify commit IDs and issue numbers (e.g. #123) to the corresponding items in a GitHub project, you could use the following:": "",
   "Configure the authentication methods for your organization.": "",
   "Configure the default streams new users are subscribed to when joining your organization.": "",
@@ -154,10 +156,12 @@
   "Deactivated users": "",
   "Deactivation encountered an error. Please reload and try again.": "",
   "Default language": "",
+  "Default settings for new users joining this organization.": "",
   "Default streams": "",
   "Default user settings": "",
   "Delete": "ഒഴിവാക്കുക",
   "Delete alert word": "",
+  "Delete all messages in <b>__topic_name__</b>": "",
   "Delete avatar": "",
   "Delete bot": "ബോട്ടിനെ നീക്കം ചെയ്യുക",
   "Delete draft": "",
@@ -165,7 +169,9 @@
   "Delete icon": "",
   "Delete logo": "",
   "Delete message": "",
+  "Delete messages": "",
   "Delete stream": "ശാഖ നീക്കം ചെയ്യുക",
+  "Delete topic": "",
   "Delete user group": "",
   "Deleted successfully!": "",
   "Deleting this stream will immediately unsubscribe everyone, and the stream's content will not be recoverable.": "ഈ ശാഖ ഇല്ലാതാക്കിയാൽ ഉടനെ തന്നെ ഇതിലെ ഉപയോക്താക്കളെല്ലാം വരിക്കാരല്ലാതാവുകയും ഇതിലെ ഉള്ളടക്കം വീണ്ടെടുക്കാൻ കഴിയാതാവുകയും ചെയ്യും.",
@@ -189,7 +195,7 @@
   "EDITED": "മാറ്റം വരുത്തി",
   "Edit": "മാറ്റം വരുത്തുക",
   "Edit bot": "ബോട്ടിനു മാറ്റം വരുത്തുക",
-  "Edit question": "",
+  "Edit status message": "",
   "Edit user": "",
   "Edit your profile": "",
   "Edited (__last_edit_timestr__)": "",
@@ -240,13 +246,15 @@
   "Forgotten it?": "അതു മറന്നുപോയോ?",
   "Formatting": "",
   "Full name": "മുഴുവൻ പേര്",
+  "Generate invite link": "",
   "Generate new API key": "പുതിയ API കീ ഉണ്ടാക്കുക",
+  "Generating link...": "",
   "Generic": "",
   "Get API key": "API കീ എടുക്കൂ",
   "Go back": "",
   "Got it!": "",
   "Guest": "",
-  "Guest users cannot edit custom emoji.": "",
+  "Guests cannot edit custom emoji.": "",
   "High contrast mode": "",
   "Hint": "",
   "Hint (up to 80 characters)": "",
@@ -260,11 +268,16 @@
   "Interface": "",
   "Invalid slash command. Check if you are missing a space after the command.": "",
   "Invalid stream id": "",
+  "Invitation link: <a href=\"__link__\">__link__</a>": "",
   "Invitations": "",
+  "Invite": "ക്ഷണിക്കൂ",
   "Invite more users": "",
+  "Invited as": "",
   "Invited as administrator": "",
   "Invited at": "",
   "Invited by": "",
+  "Invites": "",
+  "Inviting...": "",
   "It's been a while! Since you were last here, you received <b>__unread_count__</b> new messages.": "കണ്ടിട്ട് കൂറേയായല്ലോ! നിങ്ങൾ ഇവിടെ അവസാനമായി വന്നതിനു ശേഷം നിങ്ങൾക്ക് <b>__unread_count__</b> പുതിയ സന്ദേശങ്ങൾ ലഭിച്ചിട്ടുണ്ട്.",
   "Joined": "",
   "Joining the organization": "",
@@ -294,7 +307,6 @@
   "Mentioned in": "",
   "Message actions": "",
   "Message editing": "സന്ദേശം തിരുത്തുൽ",
-  "Message feed": "",
   "Message formatting": "",
   "Message sent when you were not subscribed": "വരിക്കാരനല്ലാതിരുന്ന സമയത്തു അയച്ച സന്ദേശങ്ങൾ.",
   "Messages retention period in days (blank means messages are retained forever)": "",
@@ -315,6 +327,7 @@
   "Muted topics": "",
   "N": "",
   "Name": "പേര്",
+  "Name or email": "",
   "Narrow to __- message_recipient__": "",
   "Narrow to stream &quot;__display_recipient__&quot;": "&quot;__display_recipient__&quot; എന്ന ശാഖയിലേക്ക് ചുരുക്കുക",
   "Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;": "",
@@ -369,9 +382,11 @@
   "Only organization administrators can edit these settings.": "",
   "Only organization administrators can post.": "",
   "Only organization admins are allowed to post to this stream.": "",
+  "Only stream subscribers can add users to a private stream.": "",
   "Optional": "നിര്‍ബന്ധമില്ലാത്ത",
   "Or, to automatically linkify GitHub's <code>org/repo#1234</code> syntax:": "",
   "Organization": "",
+  "Organization administrator": "",
   "Organization administrators can change this in the organization settings.": "",
   "Organization avatar": "",
   "Organization description": "",
@@ -382,6 +397,7 @@
   "Organization settings": "സംഘടന സജ്ജീകരണങ്ങൾ",
   "Other notification settings": "",
   "Other permissions": "",
+  "Other settings": "",
   "Outgoing webhook message format": "",
   "Owner": "ഉടമസ്ഥന്‍",
   "Password": "രഹസ്യവാക്ക്",
@@ -400,11 +416,11 @@
   "Please specify at least one valid recipient": "",
   "Prevent users from changing their email address": "",
   "Prevent users from changing their name": "",
+  "Preview": "",
   "Preview profile": "",
   "Private messages and @-mentions": "സ്വകാര്യ സന്ദേശങ്ങളും @ കൊണ്ടുള്ള സൂചിപ്പിക്കലുകളും",
   "Profile": "",
   "Profile field settings": "",
-  "Question": "",
   "Quote and reply": "",
   "Reactivate": "വീണ്ടും പ്രവര്‍ത്തനനിരതമാക്കുക",
   "Reactivate bot": "",
@@ -453,7 +469,9 @@
   "Sent! Your message was sent to a stream you have muted.": "",
   "Sent! Your message was sent to a topic you have muted.": "",
   "Sent! Your recent message is outside the current search.": "",
-  "Set status to away": "",
+  "Set a status message": "",
+  "Set yourself to active": "",
+  "Set yourself to away": "",
   "Settings": "സജ്ജീകരണങ്ങൾ",
   "Setup": "",
   "Setup two factor authentication": "",
@@ -496,8 +514,6 @@
   "The recipients __recipients__ are not valid": "",
   "The stream description has been updated!": "",
   "The stream has been renamed!": "",
-  "The stream to which new stream notifications go to.": "",
-  "The stream which new user signup notifications go to.": "",
   "Their password will be cleared from our systems, and any bots they maintain will be disabled.": "",
   "There are no messages to reply to.": "",
   "These settings are explained in detail in the <a target=\"_blank\" href=\"/help/stream-permissions\">help center</a>.": "",
@@ -510,6 +526,7 @@
   "Time settings": "",
   "Time zone": "",
   "Time's up!": "",
+  "Tip: You can also send \"/poll Some question\"": "",
   "Today": "",
   "Toggle subscription": "",
   "Tomorrow": "",
@@ -538,13 +555,11 @@
   "Update successful: Subdomains allowed for __domain__": "",
   "Update successful: Subdomains no longer allowed for __domain__": "",
   "Updated settings!": "",
-  "Updated successfully!": "",
   "Upload avatar": "അവതാർ അപ്ലോഡ് ചെയ്യുക",
   "Upload icon": "",
   "Upload image or GIF": "",
   "Upload logo": "",
   "Upload new avatar": "",
-  "Upload new icon": "",
   "Upload new logo": "",
   "Uploaded files": "",
   "Uploading icon.": "",
@@ -562,6 +577,7 @@
   "User(s) invited successfully.": "",
   "Username": "യൂസർനെയിം",
   "Username (a-z, 0-9, and dashes only)": "",
+  "Users": "ഉപയോക്താക്കൾ",
   "Users can edit the topic of any message": "",
   "Video chat provider": "",
   "View edit history": "",
@@ -576,11 +592,14 @@
   "View your profile": "",
   "Visual desktop notifications": "",
   "Warning: <strong>__stream_name__</strong> is a private stream.": "",
+  "We are about to have a poll.  Please wait for the question.": "",
+  "We recommend against deleting topics unless needed for security reasons or managing abuse. Deleted messages can be confusing for users who may later visit the topic via notifications.": "",
   "Who can add bots": "",
   "Who can add custom emoji": "",
   "Who can create streams": "",
   "Who can see users email addresses": "",
   "Working\u2026": "",
+  "Write": "",
   "Yes": "ശരി",
   "Yes, delete this stream": "അതെ, ഈ ശാഖ നീക്കം ചെയ്യുക",
   "Yes, send": "",
@@ -609,6 +628,9 @@
   "Your account": "",
   "Your bots": "",
   "Your reminder note is empty!": "",
+  "Zoom API key (required)": "",
+  "Zoom API secret (required)": "",
+  "Zoom user ID (required)": "",
   "[Condense this message]": "[ഈ സന്ദേശം ചെറുതാക്കുക]",
   "[Configure]": "",
   "[Disable]": "",
